--- a/OEBPS/Text/1263.html
+++ b/OEBPS/Text/1263.html
@@ -80,7 +80,7 @@
 今荊、雍義徒，不召而集，子來之眾，其會如林。豈臣無德所能綏致，蓋七廟之靈，理貫幽顯。輒授文思振武將軍、南郡太守，宗之子竟陵太守魯軌進號輔國將軍。臣今與宗之親御大眾，出據江津，案甲抗威，隨宜應赴。今絳旗所指，唯裕兄弟父子而已。須剋蕩寇逆，尋續馳聞。由臣輕弱，致裕凌橫，上慚俯愧，無以厝顏。
 </p>
 <p class="em2" id="p25"><a class="gg-link" href="#p25" onclick="return changeColor(this);"></a>
-休之府錄事參軍韓延之，故吏也，有幹用才能。公未至江陵，密使與之書曰：「文思事源，遠近所知，去秋遣康之送還司馬君者<span class="jiaozhusup">「君」各本並作「軍」，據晉書譙剛王遜傳玄孫休之附傳、元龜七二五改。</span>，推至公之極也。而了不遜愧，又無表疏。文思經正不反，此是天地之不容。吾受命西討，止其父子而已。彼土僑舊，爲所驅逼，一無所問。往年郗僧施、謝邵、任集之等，交構積歲，專爲劉毅謀主，所以至此。卿等諸人，一時逼迫，本無纖釁。吾處懷期物，自有由來。今在近路，正是諸人歸身之日。若大軍登道，交鋒接刃，蘭艾吾誠不分。故具示意，并示同懷諸人。」延之報曰：
+休之府錄事參軍韓延之，故吏也，有幹用才能。公未至江陵，密使與之書曰：「文思事源，遠近所知，去秋遣康之送還司馬君者，<span class="jiaozhusup">「君」各本並作「軍」，據晉書譙剛王遜傳玄孫休之附傳、元龜七二五改。</span>推至公之極也。而了不遜愧，又無表疏。文思經正不反，此是天地之不容。吾受命西討，止其父子而已。彼土僑舊，爲所驅逼，一無所問。往年郗僧施、謝邵、任集之等，交構積歲，專爲劉毅謀主，所以至此。卿等諸人，一時逼迫，本無纖釁。吾處懷期物，自有由來。今在近路，正是諸人歸身之日。若大軍登道，交鋒接刃，蘭艾吾誠不分。故具示意，并示同懷諸人。」延之報曰：
 </p>
 <p class="margin2" id="p26"><a class="gg-link" href="#p26" onclick="return changeColor(this);"></a>
 承親率戎馬，遠履西畿，闔境士庶，莫不恇駭。何者？莫知師出之名故也。今辱來疏，始知以譙王前事，良增歎息。司馬平西體國忠貞，款愛待物，當於古人中求耳。以君公有匡復之勳，家國蒙賴，推德委誠，每事詢仰。譙王往以微事見劾，猶自表遜位；況以大過而當默然邪。但康之前言有所不盡，故重使胡道諮白所懷。道未及反，已奏表廢之，所不盡者命耳。推寄相與之懷，正當如此？有何不可，便興兵戈。自義旗秉權以來，四方方伯，誰敢不先相諮疇，而逕表天子邪。譙王爲宰相所責，又表廢之，經正何歸，表使何因，可謂「欲加之罪，其無辭乎」！
