--- a/OEBPS/Text/1266.html
+++ b/OEBPS/Text/1266.html
@@ -608,7 +608,7 @@
 二十七年春正月辛未，制交、寧二州假板郡縣，俸祿聽依臺除。辛卯，百濟國遣使獻方物。
 </p>
 <p class="em2" id="p201"><a class="gg-link" href="#p201" onclick="return changeColor(this);"></a>
-二月辛丑，右將軍、豫州刺史南平王鑠進號平西將軍。辛亥<span class="jiaozhusup">各本並作「辛巳」。通鑑考異云：「按長曆，二月壬辰朔，十日辛丑，二十日辛亥。辛巳當作辛亥。」今據改。</span>，索虜寇汝南諸郡，陳南頓二郡太守鄭琨、汝陽潁川二郡太守郭道隱委守走。索虜攻懸瓠城，行汝南郡事陳憲拒之。以軍興減百官俸三分之一。
+二月辛丑，右將軍、豫州刺史南平王鑠進號平西將軍。辛亥，<span class="jiaozhusup">各本並作「辛巳」。通鑑考異云：「按長曆，二月壬辰朔，十日辛丑，二十日辛亥。辛巳當作辛亥。」今據改。</span>索虜寇汝南諸郡，陳南頓二郡太守鄭琨、汝陽潁川二郡太守郭道隱委守走。索虜攻懸瓠城，行汝南郡事陳憲拒之。以軍興減百官俸三分之一。
 </p>
 <p class="em2" id="p202"><a class="gg-link" href="#p202" onclick="return changeColor(this);"></a>
 三月乙丑，淮南太守諸葛闡求減俸祿同內百官，於是州及郡縣丞尉並悉同減。戊寅，罷國子學。乙酉，以新除吏部尚書蕭思話爲護軍將軍。
