--- a/OEBPS/Text/1269.html
+++ b/OEBPS/Text/1269.html
@@ -29,7 +29,7 @@
 朕假寐凝憂，泣血待旦，慮大宋之基，於焉而泯，武、文之業，將墜于淵。賴七廟之靈，藉八百之慶，巨猾斯殄，鴻沴時褰。皇綱絕而復紐，天緯缺而更張。猥以寡薄，屬承乾統，上緝三光之重，俯顧庶民之艱。業業矜矜，若履冰谷，思與億兆，同此維新。可大赦天下，改景和元年爲泰始元年。賜民爵二級。鰥寡孤獨不能自存者，人穀五斛。逋租宿債勿復收。犯鄉論清議，贓汙淫盜，並悉洗除。長徒之身，特賜原遣。亡官失爵，禁錮舊勞，一依舊典。其昏制謬封，並皆刊削。
 </p>
 <p class="em2" id="p8"><a class="gg-link" href="#p8" onclick="return changeColor(this);"></a>
-己巳，以安西將軍、南豫州刺史劉遵考爲特進、右光祿大夫，輔國將軍、歷陽南譙二郡太守建平王景素爲南豫州刺史。庚午，以荊州刺史臨海王子頊爲鎮軍將軍，南徐州刺史永嘉王子仁爲中軍將軍<span class="jiaozhusup">各本並脫「南」字，據永嘉王子仁傳補。</span>，左衛將軍劉道隆爲中護軍。辛未，改封臨賀王子產爲南平王，晉熙王子輿爲廬陵王。壬申，以尚書左僕射王景文爲尚書僕射。新除中護軍劉道隆卒。癸酉，<span class="jiaozhusup">各本並作「壬午」，據建康實錄改。按是月庚申朔，十三日壬申，十六日乙亥。宋書本紀此詔在十三日壬申後，十六日乙亥前，則作壬午誤，作癸酉是。</span>詔曰：「朕戡亂寧民，屬膺景祚。鴻制初造，革道惟新。而國故頻罹，仁澤偏壅。每鑒寐疚心，罔識攸濟。巡方問俗，弘政所先，可分遣大使，廣求民瘼，考守宰之良，採衡閭之善。若獄犴淹枉，傷民害教者，具以事聞。鰥寡孤獨，癃殘六疾，不能自存者，郡縣優量賑給。貞婦孝子，高行力田，詳悉條奏。<span class="jiaozhusup">「詳」各本並作「許」，據元龜二一三改。</span>務詢輿誦，廣納嘉謀，每盡皇華之旨，俾若朕親覽焉。」乙亥，追尊所生沈婕妤曰宣皇太后。後軍將軍垣閎爲司州刺史，前右將軍長史殷琰爲豫州刺史。丙子，詔曰：「皇室多故，糜費滋廣，且久歲不登，公私歉弊。方刻意從儉，弘濟時艱，政道未孚，慨愧兼積。太官供膳，可詳所減撤，尚方御府雕文篆刻無益之物，一皆蠲省，務存簡約，以稱朕心。」戊寅，崇太后爲崇憲皇太后。立皇后王氏。鎮軍將軍、江州刺史晉安王子勛舉兵反，鎮軍長史鄧琬爲其謀主，雍州刺史袁顗率眾赴之。辛巳，驃騎大將軍、前荊州刺史山陽王休祐改爲江州刺史，荊州刺史臨海王子頊即留本任。加領軍將軍王玄謨鎮軍將軍。壬午，車駕謁太廟。甲申，後將軍、郢州刺史安陸王子綏進號征南將軍，右將軍、會稽太守尋陽王子房進號安東將軍，前將軍、荊州刺史臨海王子頊進號平西將軍。子綏、子房、子頊並不受命，舉兵同逆。戊子，新除中軍將軍永嘉王子仁爲護軍將軍。
+己巳，以安西將軍、南豫州刺史劉遵考爲特進、右光祿大夫，輔國將軍、歷陽南譙二郡太守建平王景素爲南豫州刺史。庚午，以荊州刺史臨海王子頊爲鎮軍將軍，南徐州刺史永嘉王子仁爲中軍將軍，<span class="jiaozhusup">各本並脫「南」字，據永嘉王子仁傳補。</span>左衛將軍劉道隆爲中護軍。辛未，改封臨賀王子產爲南平王，晉熙王子輿爲廬陵王。壬申，以尚書左僕射王景文爲尚書僕射。新除中護軍劉道隆卒。癸酉，<span class="jiaozhusup">各本並作「壬午」，據建康實錄改。按是月庚申朔，十三日壬申，十六日乙亥。宋書本紀此詔在十三日壬申後，十六日乙亥前，則作壬午誤，作癸酉是。</span>詔曰：「朕戡亂寧民，屬膺景祚。鴻制初造，革道惟新。而國故頻罹，仁澤偏壅。每鑒寐疚心，罔識攸濟。巡方問俗，弘政所先，可分遣大使，廣求民瘼，考守宰之良，採衡閭之善。若獄犴淹枉，傷民害教者，具以事聞。鰥寡孤獨，癃殘六疾，不能自存者，郡縣優量賑給。貞婦孝子，高行力田，詳悉條奏。<span class="jiaozhusup">「詳」各本並作「許」，據元龜二一三改。</span>務詢輿誦，廣納嘉謀，每盡皇華之旨，俾若朕親覽焉。」乙亥，追尊所生沈婕妤曰宣皇太后。後軍將軍垣閎爲司州刺史，前右將軍長史殷琰爲豫州刺史。丙子，詔曰：「皇室多故，糜費滋廣，且久歲不登，公私歉弊。方刻意從儉，弘濟時艱，政道未孚，慨愧兼積。太官供膳，可詳所減撤，尚方御府雕文篆刻無益之物，一皆蠲省，務存簡約，以稱朕心。」戊寅，崇太后爲崇憲皇太后。立皇后王氏。鎮軍將軍、江州刺史晉安王子勛舉兵反，鎮軍長史鄧琬爲其謀主，雍州刺史袁顗率眾赴之。辛巳，驃騎大將軍、前荊州刺史山陽王休祐改爲江州刺史，荊州刺史臨海王子頊即留本任。加領軍將軍王玄謨鎮軍將軍。壬午，車駕謁太廟。甲申，後將軍、郢州刺史安陸王子綏進號征南將軍，右將軍、會稽太守尋陽王子房進號安東將軍，前將軍、荊州刺史臨海王子頊進號平西將軍。子綏、子房、子頊並不受命，舉兵同逆。戊子，新除中軍將軍永嘉王子仁爲護軍將軍。
 </p>
 <p class="em2" id="p9"><a class="gg-link" href="#p9" onclick="return changeColor(this);"></a>
 二年春正月己丑朔，以軍事不朝會。庚寅，以金紫光祿大夫王僧朗爲左光祿大夫、開府儀同三司。壬辰，驃騎大將軍、江州刺史山陽王休祐改爲南豫州刺史，鎮歷陽。鎮軍將軍、領軍將軍王玄謨爲車騎將軍、江州刺史，平北將軍、徐州刺史薛安都進號安北將軍。安都亦不受命。癸巳，以左衛將軍巴陵王休若爲鎮東將軍，新除安東將軍尋陽王子房爲撫軍將軍，司徒左長史袁愍孫爲領軍將軍。甲午，中外戒嚴。司徒建安王休仁都督征討諸軍事，統眾軍南討。以青州刺史劉祗爲南兗州刺史。丙申，以征虜司馬申令孫爲徐州刺史，義陽內史龐孟虯爲司州刺史。令孫、孟虯及豫州刺史殷琰、青州刺史沈文秀、冀州刺史崔道固、湘州行事何慧文、廣州刺史袁曇遠、益州刺史蕭惠開、梁州刺史柳元怙並同叛逆。兗州刺史殷孝祖入衛京都，仍遣孝祖前鋒南伐。甲辰，加孝祖撫軍將軍。丙午，車駕親御六師，出頓中興堂。辛亥，驃騎大將軍、南豫州刺史山陽王休祐改爲豫州刺史，統眾軍西討。吳郡太守顧琛、吳興太守王曇生、義興太守劉延熙、晉陵太守袁摽、山陽太守程天祚並舉兵反。鎮東將軍巴陵王休若統眾軍東討。壬子，崇憲皇太后崩。是日，軍主任農夫、劉懷珍平定義興。永世縣民史逸宗據縣爲逆，殿中將軍陸攸之討平之。丙辰，以新除左光祿大夫、開府儀同三司王僧朗爲特進，左光祿大夫如故。
@@ -113,7 +113,7 @@
 二月辛丑，以前龍驤將軍常珍奇爲平北將軍、司州刺史，珍奇子超越爲北冀州刺史。<span class="jiaozhusup">孫虨宋書考論云：「劉勉傳，超越爲北豫州刺史，非北冀州。」</span>乙巳，右光祿大夫、車騎將軍、護軍將軍王玄謨薨。<span class="jiaozhusup">三朝本、北監本、毛本、殿本作「右光祿大夫」，局本及王玄謨傳作「左光祿大夫」。</span>
 </p>
 <p class="em2" id="p36"><a class="gg-link" href="#p36" onclick="return changeColor(this);"></a>
-三月己未，<span class="jiaozhusup">下有戊辰。按是月丙子朔，無己未、戊辰。二十日乙未，二十三日戊戌。己未或乙未之訛，戊辰或戊戌之訛。</span>以游擊將軍劉懷珍爲東徐州刺史。戊辰，以軍司馬劉靈遺爲梁、南秦二州刺史，<span class="jiaozhusup">孫虨宋書考論云：「軍上脫一字。」</span>南譙太守孫奉伯爲交州刺史，<span class="jiaozhusup">「南譙」各本並作「譙南」，據州郡志訂正。</span>交州人李長仁據州叛。妖賊攻廣州，殺刺史羊希<span class="jiaozhusup">「羊希」各本並訛「羊南」，據南史、建康實錄、通鑑及本書羊玄保傳兄子希附傳改正。</span>，龍驤將軍陳伯紹討平之。
+三月己未，<span class="jiaozhusup">下有戊辰。按是月丙子朔，無己未、戊辰。二十日乙未，二十三日戊戌。己未或乙未之訛，戊辰或戊戌之訛。</span>以游擊將軍劉懷珍爲東徐州刺史。戊辰，以軍司馬劉靈遺爲梁、南秦二州刺史，<span class="jiaozhusup">孫虨宋書考論云：「軍上脫一字。」</span>南譙太守孫奉伯爲交州刺史，<span class="jiaozhusup">「南譙」各本並作「譙南」，據州郡志訂正。</span>交州人李長仁據州叛。妖賊攻廣州，殺刺史羊希，<span class="jiaozhusup">「羊希」各本並訛「羊南」，據南史、建康實錄、通鑑及本書羊玄保傳兄子希附傳改正。</span>龍驤將軍陳伯紹討平之。
 </p>
 <p class="em2" id="p37"><a class="gg-link" href="#p37" onclick="return changeColor(this);"></a>
 夏四月己卯，復減郡縣田祿之半。<span class="jiaozhusup">「田祿」各本及通鑑並作「田租」。按普減國內田租之半，決非專制帝王之所肯爲，當是減削郡縣官吏田祿之半。建康實錄作「田祿」，是。今據改。</span>丙申，東海王褘改封廬江王，<span class="jiaozhusup">各本並脫去「丙申」二字，據南史、建康實錄補。</span>山陽王休祐改封晉平王，改晉安郡爲晉平郡。辛丑，芮芮國及河南王並遣使獻方物。甲辰，以豫章太守張辯爲廣州刺史。
@@ -206,7 +206,7 @@
 七年春正月甲戌，置散騎奏舉郎。
 </p>
 <p class="em2" id="p67"><a class="gg-link" href="#p67" onclick="return changeColor(this);"></a>
-二月癸巳，征西將軍、荊州刺史巴陵王休若進號征西大將軍<span class="jiaozhusup">「征西將軍」各本並訛「征南大將軍」。據南史、建康實錄訂正。孫虨宋書考論云：「荊州不以南爲號，據休若傳，是征西將軍，『大』字衍。」</span>，開府儀同三司。<span class="jiaozhusup">「開府儀同三司」上，南史、建康實錄有「及征南大將軍江州刺史桂陽王休範並」十六字。</span>戊戌，置百梁、隴蘇、永寧、安昌、富昌、南流郡，又分廣、交州三郡，合九郡，立越州。己亥，以前將軍劉康爲平東將軍。妖寇宋逸攻合肥，殺汝陰太守王穆之，郡縣討平之。甲寅，驃騎大將軍、開府儀同三司、南徐州刺史晉平王休祐薨。戊午，以征西大將軍、荊州刺史巴陵王休若爲征北大將軍、南徐州刺史，湘州刺史建平王景素爲荊州刺史。
+二月癸巳，征西將軍、荊州刺史巴陵王休若進號征西大將軍，<span class="jiaozhusup">「征西將軍」各本並訛「征南大將軍」。據南史、建康實錄訂正。孫虨宋書考論云：「荊州不以南爲號，據休若傳，是征西將軍，『大』字衍。」</span>開府儀同三司。<span class="jiaozhusup">「開府儀同三司」上，南史、建康實錄有「及征南大將軍江州刺史桂陽王休範並」十六字。</span>戊戌，置百梁、隴蘇、永寧、安昌、富昌、南流郡，又分廣、交州三郡，合九郡，立越州。己亥，以前將軍劉康爲平東將軍。妖寇宋逸攻合肥，殺汝陰太守王穆之，郡縣討平之。甲寅，驃騎大將軍、開府儀同三司、南徐州刺史晉平王休祐薨。戊午，以征西大將軍、荊州刺史巴陵王休若爲征北大將軍、南徐州刺史，湘州刺史建平王景素爲荊州刺史。
 </p>
 <p class="em2" id="p68"><a class="gg-link" href="#p68" onclick="return changeColor(this);"></a>
 三月辛酉，索虜遣使獻方物。壬戌，芮芮國遣使奉獻。
@@ -215,7 +215,7 @@
 夏四月辛丑，減天下死罪一等，凡敕繫悉遣之。甲辰，於南兗州置新平郡。癸丑，金紫光祿大夫張永領護軍。
 </p>
 <p class="em2" id="p70"><a class="gg-link" href="#p70" onclick="return changeColor(this);"></a>
-五月戊午，司徒建安王休仁有罪，自殺。辛酉，以寧朔長史孫超之爲廣州刺史，尚書左僕射、揚州刺史王景文以刺史領中書監。庚午，以尚書右僕射袁粲爲尚書令，新除吏部尚書褚淵爲尚書右僕射<span class="jiaozhusup">「右僕射」各本及通鑑並作「左僕射」。今據南齊書褚淵傳、南史、建康實錄改。</span>。辛未，監吳郡王僧虔行湘州刺史。丙戌，追免晉平王休祐爲庶人。
+五月戊午，司徒建安王休仁有罪，自殺。辛酉，以寧朔長史孫超之爲廣州刺史，尚書左僕射、揚州刺史王景文以刺史領中書監。庚午，以尚書右僕射袁粲爲尚書令，新除吏部尚書褚淵爲尚書右僕射。<span class="jiaozhusup">「右僕射」各本及通鑑並作「左僕射」。今據南齊書褚淵傳、南史、建康實錄改。</span>辛未，監吳郡王僧虔行湘州刺史。丙戌，追免晉平王休祐爲庶人。
 </p>
 <p class="em2" id="p71"><a class="gg-link" href="#p71" onclick="return changeColor(this);"></a>
 六月丁酉，以征南大將軍、江州刺史桂陽王休範爲驃騎大將軍、南徐州刺史，征北大將軍巴陵王休若爲車騎大將軍、江州刺史。甲辰，芮芮國遣使獻方物。
