--- a/OEBPS/Text/1274.html
+++ b/OEBPS/Text/1274.html
@@ -1526,7 +1526,7 @@
 木：初與日合，伏，十六日，日餘四萬一千七百八十，行二度，餘七萬七千八百四十七半，晨見東方。<span class="jiazhu">去日十三度半強。</span>順，日行二十三分之四，一百一十五日行二十度。留，不行，二十六日而逆。日行七分之一，八十四日退十二度。又留二十六日。順，一百一十五日行二十度，夕伏西方，日度餘如初，與日合。一終三百九十八日，日餘八萬三千五百六十，行星三十三度，餘五萬九千九百三十五。
 </p>
 <p class="em2" id="p83"><a class="gg-link" href="#p83" onclick="return changeColor(this);"></a>
-火：初與日合，伏，七十一日，日餘二萬四千八百一十二半<span class="jiaozhusup">「一十」下各本並奪「二」字。按火僅初伏與後伏日數有日餘，且兩數相等，則當爲一終日餘四萬九千六百二十五之半，即二萬四千八百一十二半。今據以改正。</span>，行五十四度，度餘四萬九千四百三十，晨見東方。<span class="jiazhu">去日十六度半強。</span><span class="jiaozhusup">「六」各本並作「七」。按以火行度五十四度，度餘四萬九千四百三十，減日行度七十一度，度餘二萬四千八百一十二半，得十六度半強。今據以改正。</span>順，疾，日行七分之五，一百八日半行七十七度半。小遲，日行七分之四，一百二十六日行七十二度而大遲。日行七分之二，四十二日行十二度。留，不行，十二日而逆。<span class="jiaozhusup">「逆」各本並作「遲」。按下謂「日行十分之三，六十日退十八度」，顯由留而逆，不當謂遲，今改正。</span>日行十分之三，六十日退十八度。又留十二日。順，遲，四十二日行十二度。小疾，一百二十六日，行七十二度。一百八日半行七十七度半，夕伏西方，日度餘如初，與日合。一終七百七十九日，日餘四萬九千六百二十五，行星四百一十四，度餘三萬三千五百。除一周，行星定四十九度，度餘一萬七千三百七十五。<span class="jiaozhusup">各本「定」上無「行星」二字，「一萬」上無「度餘」二字，據下金星例補。</span>
+火：初與日合，伏，七十一日，日餘二萬四千八百一十二半，<span class="jiaozhusup">「一十」下各本並奪「二」字。按火僅初伏與後伏日數有日餘，且兩數相等，則當爲一終日餘四萬九千六百二十五之半，即二萬四千八百一十二半。今據以改正。</span>行五十四度，度餘四萬九千四百三十，晨見東方。<span class="jiazhu">去日十六度半強。</span><span class="jiaozhusup">「六」各本並作「七」。按以火行度五十四度，度餘四萬九千四百三十，減日行度七十一度，度餘二萬四千八百一十二半，得十六度半強。今據以改正。</span>順，疾，日行七分之五，一百八日半行七十七度半。小遲，日行七分之四，一百二十六日行七十二度而大遲。日行七分之二，四十二日行十二度。留，不行，十二日而逆。<span class="jiaozhusup">「逆」各本並作「遲」。按下謂「日行十分之三，六十日退十八度」，顯由留而逆，不當謂遲，今改正。</span>日行十分之三，六十日退十八度。又留十二日。順，遲，四十二日行十二度。小疾，一百二十六日，行七十二度。一百八日半行七十七度半，夕伏西方，日度餘如初，與日合。一終七百七十九日，日餘四萬九千六百二十五，行星四百一十四，度餘三萬三千五百。除一周，行星定四十九度，度餘一萬七千三百七十五。<span class="jiaozhusup">各本「定」上無「行星」二字，「一萬」上無「度餘」二字，據下金星例補。</span>
 </p>
 <p class="em2" id="p84"><a class="gg-link" href="#p84" onclick="return changeColor(this);"></a>
 土：初與日合，伏，十八日，日餘四千四百八十二半，行二度，度餘四萬六千八百四十七半，晨見東方。<span class="jiazhu">去日十五度半強，</span>順，日行十二分之一，八十四日，行七度。留，不行，三十六日而逆。日行十七分之一，一百二日退六度。又留三十六日。順，八十四日行七度，夕伏西方，日度餘如初，與日合。一終三百七十八日，日餘八千九百六十五，行星十二度，度餘九萬三千六百九十五。
@@ -1734,7 +1734,7 @@
 求次月，加二日，日餘一千三百三十一，微分一千五百九十八，如法成日，日滿十三去之，除日餘如分日。陰陽曆竟互入端，<span class="jiaozhusup">「互」各本並作「平」，據晉志乾象曆推朔入陰陽曆術文改。</span>入曆在前限餘前，後限餘後者，月行中道。
 </p>
 <p class="em2" id="p96"><a class="gg-link" href="#p96" onclick="return changeColor(this);"></a>
-求朔弦望定數：各置入遲疾曆盈縮定積分，以章歲乘之，差法除之，所得滿通法爲大分。不盡，以微分法乘之，如法爲微分。盈減縮加陰陽日餘，盈不足，以月周進退日而定，以定日餘乘損益兼數<span class="jiaozhusup">按依曆理當作「以定日餘乘損益率，如月周得一，以損益兼數」。「乘」字下疑脫「損益率如月周得一以」九字。</span>，爲加時定數。
+求朔弦望定數：各置入遲疾曆盈縮定積分，以章歲乘之，差法除之，所得滿通法爲大分。不盡，以微分法乘之，如法爲微分。盈減縮加陰陽日餘，盈不足，以月周進退日而定，以定日餘乘損益兼數，<span class="jiaozhusup">按依曆理當作「以定日餘乘損益率，如月周得一，以損益兼數」。「乘」字下疑脫「損益率如月周得一以」九字。</span>爲加時定數。
 </p>
 <p class="em2" id="p97"><a class="gg-link" href="#p97" onclick="return changeColor(this);"></a>
 推夜半入曆：以差率乘朔小餘，<span class="jiaozhusup">「差率」下各本脫「乘」字，依曆理補。</span>如微分法得一，以減入曆餘，不足，加月周而減之，卻一日，卻得分日，加其分，<span class="jiaozhusup">「加」各本並作「如」，依曆理改。</span>半微分爲小分，<span class="jiaozhusup">「小分」之「分」字各本並奪去。殿本作「小餘」。晉志作「小分」。今據晉志補。</span>即朔日夜半入曆曆餘小分也。
@@ -3111,7 +3111,7 @@
 求星合度：以入歲日及餘從天正朔日積度及餘，滿紀法從度，滿三百六十餘度分則去之，命以虛一，算外，星合所在度也。
 </p>
 <p class="em2" id="p166"><a class="gg-link" href="#p166" onclick="return changeColor(this);"></a>
-求星見日術：以伏日及餘<span class="jiaozhusup">「術以」各本並作「以術」，今據前後文例改正。</span>，加星合日及餘，餘滿紀法從日，命如前，見日也。
+求星見日術：以伏日及餘，<span class="jiaozhusup">「術以」各本並作「以術」，今據前後文例改正。</span>加星合日及餘，餘滿紀法從日，命如前，見日也。
 </p>
 <p class="em2" id="p167"><a class="gg-link" href="#p167" onclick="return changeColor(this);"></a>
 求星見度術：以伏度及餘，<span class="jiaozhusup">「術以」各本並作「以術」，今從殿本。</span>加星合度及餘，餘滿紀法從度，入虛去度分，命如前，星見度也。
