--- a/OEBPS/Text/1276.html
+++ b/OEBPS/Text/1276.html
@@ -8,7 +8,7 @@
 古者天子巡狩之禮，布在方策。至秦、漢巡幸，或以厭望氣之祥，或以希神仙之應，煩擾之役，多非舊典。唯後漢諸帝，頗有古禮焉。魏文帝值參分初創，方隅事多，皇輿亟動，略無寧歲。蓋應時之務，又非舊章也。明帝凡三東巡，所過存問高年，恤人疾苦，或賜穀帛，有古巡幸之風焉。齊王正始元年，巡洛陽，賜高年、力田各有差。
 </p>
 <p class="em2" id="p1"><a class="gg-link" href="#p1" onclick="return changeColor(this);"></a>
-晉武帝泰始四年，詔刺史二千石長吏曰：「古之王者，以歲時巡狩方嶽，其次則二伯述職，不然則行人巡省，撢人誦志。故雖幽遐側微，心無壅隔。人情上通，上指遠喻。至于鰥寡，罔不得所。用垂風遺烈，休聲猶存。朕在位累載，如臨深泉，夙興夕惕，明發不寐，坐而待旦。思四方水旱災眚，爲之怛然。勤躬約己，欲令事事當宜。常恐眾吏用情，誠心未著，萬機兼猥，慮有不周，政刑失謬，而弗獲備覽。百姓有過，在予一人。惟歲之不易，未遑卜征巡省之事。人之未乂，其何以恤之。今使使持節侍中、副給事黃門侍郎，銜命四出，周行天下，親見刺史二千石長吏，申喻朕心懇誠至意，訪求得失損益諸宜，觀省政治，問人間患苦。周典有之曰：『其萬民利害爲一書<span class="jiaozhusup">「民」各本並作「人」，據周禮秋官小行人職文改。</span>，其禮俗政事教治刑禁之逆順爲一書，其悖逆暴亂作慝犯令爲一書，其札喪凶荒厄貧爲一書，其康樂和親安平爲一書。每國辨異之，以反命于王，以周知天下之故。』斯舊章前訓，今率由之。還具條奏，俾朕昭然鑒于幽遠，若親行焉。大夫君子，其各悉乃心，各敬乃事，嘉謀令圖，苦言至戒，與使者盡之，無所隱諱。方將虛心以俟。其勉哉勗之，稱朕意焉。」
+晉武帝泰始四年，詔刺史二千石長吏曰：「古之王者，以歲時巡狩方嶽，其次則二伯述職，不然則行人巡省，撢人誦志。故雖幽遐側微，心無壅隔。人情上通，上指遠喻。至于鰥寡，罔不得所。用垂風遺烈，休聲猶存。朕在位累載，如臨深泉，夙興夕惕，明發不寐，坐而待旦。思四方水旱災眚，爲之怛然。勤躬約己，欲令事事當宜。常恐眾吏用情，誠心未著，萬機兼猥，慮有不周，政刑失謬，而弗獲備覽。百姓有過，在予一人。惟歲之不易，未遑卜征巡省之事。人之未乂，其何以恤之。今使使持節侍中、副給事黃門侍郎，銜命四出，周行天下，親見刺史二千石長吏，申喻朕心懇誠至意，訪求得失損益諸宜，觀省政治，問人間患苦。周典有之曰：『其萬民利害爲一書，<span class="jiaozhusup">「民」各本並作「人」，據周禮秋官小行人職文改。</span>其禮俗政事教治刑禁之逆順爲一書，其悖逆暴亂作慝犯令爲一書，其札喪凶荒厄貧爲一書，其康樂和親安平爲一書。每國辨異之，以反命于王，以周知天下之故。』斯舊章前訓，今率由之。還具條奏，俾朕昭然鑒于幽遠，若親行焉。大夫君子，其各悉乃心，各敬乃事，嘉謀令圖，苦言至戒，與使者盡之，無所隱諱。方將虛心以俟。其勉哉勗之，稱朕意焉。」
 </p>
 <p class="em2" id="p2"><a class="gg-link" href="#p2" onclick="return changeColor(this);"></a>
 摯虞新禮議曰：「魏氏無巡狩故事，新禮則巡狩方岳，柴望告至，設壝宮，如禮諸侯之覲者。擯及執贄皆如朝儀，而不建其旗。臣虞案覲禮，諸侯覲天子，各建其旗章，所以殊爵命，示等威。詩稱『君子至止，言觀其旂』。宜定新禮建旗如舊禮。」然終晉世，巡狩廢矣。
@@ -119,13 +119,13 @@
 太史每歲上其年曆。<span class="jiaozhusup">「其」各本並作「某」，據晉書禮志、通典禮典改。</span>先立春立夏大暑立秋立冬，常讀五時令。皇帝所服，各隨五時之色。帝升御坐，尚書令以下就席位，尚書三公郎以令著錄案上，奉以入，就席伏讀訖，賜酒一卮。官有其注。傅咸曰：「立秋一日，白路光於紫庭，白旂陳於玉階。」然則其日旂、路皆白也。
 </p>
 <p class="em2" id="p38"><a class="gg-link" href="#p38" onclick="return changeColor(this);"></a>
-晉成帝咸和五年六月丁未，<span class="jiaozhusup">按是月丙寅朔，無丁未。</span>有司奏讀秋令。兼侍中散騎侍郎荀弈、兼黃門侍郎散騎侍郎曹宇駁曰：「尚書三公曹奏讀秋令儀注。新荒以來，舊典未備。臣等參議，光祿大夫臣華恒議，武皇帝以秋夏盛暑，常闕不讀令，在春冬不廢也。夫先王所以從時讀令者<span class="jiaozhusup">「從」，晉書禮志、通典禮典作「順」，蓋沈約爲梁武帝父蕭順之諱而改。</span>，蓋後天而奉天時。正服，尊嚴之所重，今服章多闕如。比熱隆赫，臣等謂可如恒議，依故事闕而不讀。」詔可。六年三月，有司奏：「今月十六日立夏。案五年六月三十日門下駁，依武皇夏闕讀令。今正服漸備，四時讀令，是祗述天和隆赫之道。謂今故宜讀夏令。」奏可。
+晉成帝咸和五年六月丁未，<span class="jiaozhusup">按是月丙寅朔，無丁未。</span>有司奏讀秋令。兼侍中散騎侍郎荀弈、兼黃門侍郎散騎侍郎曹宇駁曰：「尚書三公曹奏讀秋令儀注。新荒以來，舊典未備。臣等參議，光祿大夫臣華恒議，武皇帝以秋夏盛暑，常闕不讀令，在春冬不廢也。夫先王所以從時讀令者，<span class="jiaozhusup">「從」，晉書禮志、通典禮典作「順」，蓋沈約爲梁武帝父蕭順之諱而改。</span>蓋後天而奉天時。正服，尊嚴之所重，今服章多闕如。比熱隆赫，臣等謂可如恒議，依故事闕而不讀。」詔可。六年三月，有司奏：「今月十六日立夏。案五年六月三十日門下駁，依武皇夏闕讀令。今正服漸備，四時讀令，是祗述天和隆赫之道。謂今故宜讀夏令。」奏可。
 </p>
 <p class="em2" id="p39"><a class="gg-link" href="#p39" onclick="return changeColor(this);"></a>
 宋文帝元嘉六年六月辛酉朔，駙馬都尉奉朝請徐道娛上表曰：「謹案晉博士曹弘之議，立秋御讀令，上應著緗幘，遂改用素，相承至今。臣淺學管見，竊有惟疑。伏尋禮記月令，王者四時之服正云駕倉龍，<span class="jiaozhusup">「云」字三朝本空白。北監本、毛本、殿本、局本作「見」字，元龜五七六作「云」字。今據元龜改。</span>載赤旂，衣白衣，服黑玉。季夏則黃，文極於此，無白冠則某履某舄也。且幘又非古服，出自後代。上附於冠，下不屬衣。冠固不革，而幘豈容異色。愚謂應恒與冠同色，不宜隨節變綵。土令在近，謹以上聞。如或可採，乞付外詳議。」太學博士荀萬秋議：「伏尋幘非古者冠冕之服，禮無其文。案蔡邕獨斷云：『幘是古卑賤供事不冠人所服。』又董仲舒止雨書曰：『其執事皆赤幘。』知並不冠之服也。漢元始用，眾臣率從。故司馬彪輿服志曰：『尚書幘名曰納言。迎氣五郊，各如其色，從章服也。』自茲相承，迄于有晉。大宋受命，禮制因循。斯既歷代成準，謂宜仍舊。」有司奏：「謹案道娛啟事，以土令在近，謂幘不宜變。萬秋雖云幘宜仍舊，而不明無讀土令之文。今書舊事于左。魏臺雜訪曰：『前後但見讀春夏秋冬四時令，至於服黃之時，獨闕不讀。今不解其故。』魏明帝景初元年十二月二十一日，散騎常侍領太史令高堂隆上言曰：『黃於五行，中央土也。王四季各十八日。土生於火，故於火用事之末服黃，三季則否。其令則隨四時，不以五行爲分也。是以服黃無令。』」其後太祖常謂土令，三公郎每讀時令，皇帝臨軒，百僚備位，多震悚失常儀。宋唯世祖世劉勰、太宗世謝緯爲三公郎，善於其事，人主及公卿並屬目稱歎。勰見宗室傳。緯，謝綜弟也。
 </p>
 <p class="em2" id="p40"><a class="gg-link" href="#p40" onclick="return changeColor(this);"></a>
-舊說後漢有郭虞者，有三女。以三月上辰產二女，上巳產一女。二日之中，而三女並亡。俗以爲大忌。至此月此日，不敢止家，皆於東流水上爲祈禳，自潔濯，謂之禊祠。分流行觴，遂成曲水。史臣案周禮女巫掌歲時祓除釁浴，如今三月上巳如水上之類也。釁浴謂以香薰草藥沐浴也。韓詩曰：「鄭國之俗，三月上巳，之溱、洧兩水之上，招魂續魄。秉蘭草，拂不祥。」<span class="jiaozhusup">續漢書禮儀志劉昭注引、通典禮典作「祓除不祥」。</span>此則其來甚久，非起郭虞之遺風、今世之度水也。月令，暮春，天子始乘舟。蔡邕章句曰：「陽氣和暖，鮪魚時至，將取以薦寢廟，故因是乘舟禊於名川也。論語，暮春浴乎沂。自上及下，古有此禮。今三月上巳，祓於水濱，蓋出此也。」邕之言然。張衡南都賦祓於陽濱又是也。或用秋，漢書八月祓於霸上。劉楨魯都賦：<span class="jiaozhusup">「楨」各本並作「禎」。按劉楨，字公榦，則「禎」當作「楨」，今改正。</span>「素秋二七，天漢指隅，人胥祓除，國子水嬉。」又是用七月十四日也。自魏以後但用三日，不以巳也。
+舊說後漢有郭虞者，有三女。以三月上辰產二女，上巳產一女。二日之中，而三女並亡。俗以爲大忌。至此月此日，不敢止家，皆於東流水上爲祈禳，自潔濯，謂之禊祠。分流行觴，遂成曲水。史臣案周禮女巫掌歲時祓除釁浴，如今三月上巳如水上之類也。釁浴謂以香薰草藥沐浴也。韓詩曰：「鄭國之俗，三月上巳，之溱、洧兩水之上，招魂續魄。秉蘭草，拂不祥。」<span class="jiaozhusup">續漢書禮儀志劉昭注引、通典禮典作「祓除不祥」。</span>此則其來甚久，非起郭虞之遺風、今世之度水也。月令，暮春，天子始乘舟。蔡邕章句曰：「陽氣和暖，鮪魚時至，將取以薦寢廟，故因是乘舟禊於名川也。論語，暮春浴乎沂。自上及下，古有此禮。今三月上巳，祓於水濱，蓋出此也。」邕之言然。張衡南都賦祓於陽濱又是也。或用秋，漢書八月祓於霸上。劉楨魯都賦：「<span class="jiaozhusup">「楨」各本並作「禎」。按劉楨，字公榦，則「禎」當作「楨」，今改正。</span>素秋二七，天漢指隅，人胥祓除，國子水嬉。」又是用七月十四日也。自魏以後但用三日，不以巳也。
 </p>
 <p class="em2" id="p41"><a class="gg-link" href="#p41" onclick="return changeColor(this);"></a>
 魏明帝天淵池南，設流杯石溝，燕群臣。晉海西鍾山後流杯曲水，延百僚，皆其事也。官人循之至今。
@@ -167,7 +167,7 @@
 自漢文用權禮，無復□禁，歷代遵用之。至晉孝武崩，太傅錄尚書會稽王道子議：「山陵之後通婚嫁，不得作樂，以一期爲限。」宋高祖崩，葬畢，吏民至于宮掖，悉通樂，唯殿內禁。
 </p>
 <p class="em2" id="p54"><a class="gg-link" href="#p54" onclick="return changeColor(this);"></a>
-宋武帝永初元年，黃門侍郎王準之議：<span class="jiaozhusup">各本並脫「王」字，據通典禮典補。</span>「鄭玄喪制二十七月而終，學者多云得禮。晉初用王肅議，祥禫共月，遂以爲制。江左以來，唯晉朝施用；搢紳之士，猶多遵玄議。宜使朝野一體。」詔可。
+宋武帝永初元年，黃門侍郎王準之議：「<span class="jiaozhusup">各本並脫「王」字，據通典禮典補。</span>鄭玄喪制二十七月而終，學者多云得禮。晉初用王肅議，祥禫共月，遂以爲制。江左以來，唯晉朝施用；搢紳之士，猶多遵玄議。宜使朝野一體。」詔可。
 </p>
 <p class="em2" id="p55"><a class="gg-link" href="#p55" onclick="return changeColor(this);"></a>
 晉惠帝永康元年，愍懷太子薨，帝依禮服長子三年，群臣服齊衰期。
@@ -185,10 +185,10 @@
 晉康帝建元元年正月晦，成恭杜皇后周忌。有司奏：「至尊期年應改服。」詔曰：「君親，名教之重也。權制出於近代耳。」於是素服如舊。非漢、魏之典。
 </p>
 <p class="em2" id="p60"><a class="gg-link" href="#p60" onclick="return changeColor(this);"></a>
-晉孝武太元九年，<span class="jiaozhusup">錢大昕廿二史考異云：「太元元年，當作太元九年。字涉相似而訛。」按晉書康獻褚皇后傳，卒於太元九年。</span>崇德太后褚氏崩。<span class="jiaozhusup">「崇德」各本並作「崇憲」，據局本及晉書禮志、晉書康獻褚皇后傳改。</span>后於帝爲從嫂，或疑其服。太學博士徐藻議：<span class="jiaozhusup">「徐藻」各本並作「徐恭」，據晉書禮志、晉書康獻褚皇后傳、通典禮典、元龜五七五改。</span>「資父事君而敬同。又禮傳，其夫屬乎父道者，妻皆母道也。則夫屬君道，妻亦后道矣。服后宜以資母之義。魯譏逆祀，以明尊尊。今上躬奉康、穆、哀皇及靖后之祀，致敬同於所天。豈可敬之以君道，而服廢於本親。謂應服齊衰期。」於是帝制期服。
+晉孝武太元九年，<span class="jiaozhusup">錢大昕廿二史考異云：「太元元年，當作太元九年。字涉相似而訛。」按晉書康獻褚皇后傳，卒於太元九年。</span>崇德太后褚氏崩。<span class="jiaozhusup">「崇德」各本並作「崇憲」，據局本及晉書禮志、晉書康獻褚皇后傳改。</span>后於帝爲從嫂，或疑其服。太學博士徐藻議：「<span class="jiaozhusup">「徐藻」各本並作「徐恭」，據晉書禮志、晉書康獻褚皇后傳、通典禮典、元龜五七五改。</span>資父事君而敬同。又禮傳，其夫屬乎父道者，妻皆母道也。則夫屬君道，妻亦后道矣。服后宜以資母之義。魯譏逆祀，以明尊尊。今上躬奉康、穆、哀皇及靖后之祀，致敬同於所天。豈可敬之以君道，而服廢於本親。謂應服齊衰期。」於是帝制期服。
 </p>
 <p class="em2" id="p61"><a class="gg-link" href="#p61" onclick="return changeColor(this);"></a>
-晉安帝隆安四年，太皇太后李氏崩。尚書祠部郎徐廣議：「太皇太后名位允正，體同皇極，理制備盡，情禮彌申。陽秋之義，母以子貴。既稱夫人，禮服從正。故成風顯夫人之號，文公服三年之喪<span class="jiaozhusup">「文公」各本及南史、晉書禮志作「昭公」。宋書徐廣傳作「僖公」。通典禮典作「文公」。錢大昕廿二史考異云：「昭公，徐廣傳作僖公。然成風之薨，不在僖公之世。且安帝於李后爲祖母，非僖公於成風之比。竊謂當是文公之訛也。」按據錢氏考異之說，則通典作「文公」者是，今據改。</span>，子於父之所生，體尊義重。且禮祖不厭孫，宜遂服無屈。而緣情立制，若嫌明文不存，則疑斯從重。謂應同於爲祖母後齊衰期。永安皇后無服，但一舉哀。百官亦一期。」詔可。
+晉安帝隆安四年，太皇太后李氏崩。尚書祠部郎徐廣議：「太皇太后名位允正，體同皇極，理制備盡，情禮彌申。陽秋之義，母以子貴。既稱夫人，禮服從正。故成風顯夫人之號，文公服三年之喪，<span class="jiaozhusup">「文公」各本及南史、晉書禮志作「昭公」。宋書徐廣傳作「僖公」。通典禮典作「文公」。錢大昕廿二史考異云：「昭公，徐廣傳作僖公。然成風之薨，不在僖公之世。且安帝於李后爲祖母，非僖公於成風之比。竊謂當是文公之訛也。」按據錢氏考異之說，則通典作「文公」者是，今據改。</span>子於父之所生，體尊義重。且禮祖不厭孫，宜遂服無屈。而緣情立制，若嫌明文不存，則疑斯從重。謂應同於爲祖母後齊衰期。永安皇后無服，但一舉哀。百官亦一期。」詔可。
 </p>
 <p class="em2" id="p62"><a class="gg-link" href="#p62" onclick="return changeColor(this);"></a>
 宋文帝元嘉十七年七月壬子，元皇后崩。兼司徒給事中劉溫持節監喪。神虎門設凶門柏歷至西上閤，皇太子於東宮崇正殿及永福省並設廬。諸皇子未有府第者，於西廨設廬。
@@ -200,7 +200,7 @@
 孝武孝建三年三月，有司奏：「故散騎常侍、右光祿大夫、開府儀同三司義陽王師王偃喪逝。至尊爲服緦三月，成服，仍即公除。至三月竟，未詳當除服與不？又皇后依朝制服心喪，行喪三十日公除。至祖葬日，臨喪當著何服？又舊事，皇后心喪，服終除之日，更還著未公除時服，然後就除。未詳今皇后除心制日，當依舊更服？爲但釋心制中所著布素而已？勒禮官處正。」太學博士王膺之議：「尊卑殊制，輕重有級，五服雖同，降厭則異。禮，天子止降旁親，外舅緦麻，本在服例，但衰絰不可以臨朝饗，故有公除之議。雖釋衰襲冕，尚有緦麻之制。愚謂至尊服三月既竟，猶宜除釋。」又議：「吉凶異容，情禮相稱。皇后一月之限雖過，二功之服已釋，哀情所極，<span class="jiaozhusup">「情」各本並作「喪」，據通典禮典改。</span>莫深於尸柩，親見之重，不可以無服。案周禮，爲兄弟既除喪已，及其葬也，反服其服。輕喪雖除，猶齊衰以臨葬。舉輕明重，則其理可知也。愚謂王右光祿祖葬之日，皇后宜反齊衰。」又議：「喪禮即遠，變除漸輕，情與日殺，服隨時改。權禮既行，服制已變，豈容終除之日，而更重服乎？案晉泰始三年，武帝以期除之月，欲反重服拜陵，頻詔勤勤，思申棘心。于時朝議譬執，亦遂不果。愚謂皇后終除之日，不宜還著重服，直當釋除布素而已。」太常丞朱膺之議：「凡云公除，非全除之稱。今朝臣私服，亦有公除，猶自窮其本制。膺之云，晉武拜陵不遂反服，此時是權制，既除衰麻，不可以重制耳。與公除不同。愚謂皇后除心制日，宜如舊反服未公除時服，以申創巨之情。」餘同膺之議。國子助教蘇瑋生議：「案三日成服即除，及皇后行喪三十日，禮無其文。若並謂之公除，則可粗相依准。凡諸公除之設，蓋以王制奪禮。葬及祥除，皆宜反服。未有服之於前，不除於後。雖有齊斬重制，猶爲功緦除喪。夫公除暫奪，豈可遂以即吉邪。愚謂至尊三月服竟，故應依禮除釋。皇后臨祖，及一周祥除，並宜反服齊衰。」尚書令、中軍將軍建平王宏議謂：「至尊緦制終，止舉哀而已。不須釋服。」餘同朱膺之議。前祠部郎中周景遠議：「權事變禮，五服俱革，緦麻輕制，不容獨異。」謂：「至尊既已公除，至三月竟，不復有除釋之義。」其餘同朱膺之議。重加研詳，以宏議爲允。詔可。
 </p>
 <p class="em2" id="p65"><a class="gg-link" href="#p65" onclick="return changeColor(this);"></a>
-大明二年正月，有司奏：「故右光祿大夫王偃喪，依格皇后服期，心喪三年，應再周來二月晦。檢元嘉十九年舊事，武康公主出適，二十五月心制終盡，從禮即吉。昔國哀再周，孝建二年二月，其月末，諸公主心制終，則應從吉。于時猶心禫素衣，二十七月乃除，二事不同。」領儀曹郎朱膺之議：<span class="jiaozhusup">各本並脫「儀」字，據元龜五七六補。</span>「詳尋禮文，心喪不應有禫，皇代考檢，<span class="jiaozhusup">「檢」各本並作「驗」，據通典禮典改。</span>已爲定制。元嘉季年，禍難深酷，聖心天至，喪紀過哀。是以出適公主，還同在室，即情變禮，非革舊章。今皇后二月晦，宜依元嘉十九年制，釋素即吉。以爲永準。」詔可。<span class="jiaozhusup">各本並脫「爲永準詔可」五字，據通典禮典補。</span>
+大明二年正月，有司奏：「故右光祿大夫王偃喪，依格皇后服期，心喪三年，應再周來二月晦。檢元嘉十九年舊事，武康公主出適，二十五月心制終盡，從禮即吉。昔國哀再周，孝建二年二月，其月末，諸公主心制終，則應從吉。于時猶心禫素衣，二十七月乃除，二事不同。」領儀曹郎朱膺之議：「<span class="jiaozhusup">各本並脫「儀」字，據元龜五七六補。</span>詳尋禮文，心喪不應有禫，皇代考檢，<span class="jiaozhusup">「檢」各本並作「驗」，據通典禮典改。</span>已爲定制。元嘉季年，禍難深酷，聖心天至，喪紀過哀。是以出適公主，還同在室，即情變禮，非革舊章。今皇后二月晦，宜依元嘉十九年制，釋素即吉。以爲永準。」詔可。<span class="jiaozhusup">各本並脫「爲永準詔可」五字，據通典禮典補。</span>
 </p>
 <p class="em2" id="p66"><a class="gg-link" href="#p66" onclick="return changeColor(this);"></a>
 文帝元嘉十五年，皇太子妃祖父右光祿大夫殷和喪，變除之禮，儀同皇后。
@@ -251,7 +251,7 @@
 後廢帝元徽二年七月，有司奏：「第七皇弟訓養母鄭修容喪。未詳服制，下禮官正議。」太學博士周山文議：「案庶母慈己者，小功五月。鄭玄云：『其使養之不命爲母子，<span class="jiaozhusup">各本並作「其使養之命不爲母子」，今據儀禮喪服鄭玄注原文改正。</span>亦服庶母慈己之服。』愚謂第七皇弟宜從小功之制。」參議並同。
 </p>
 <p class="em2" id="p82"><a class="gg-link" href="#p82" onclick="return changeColor(this);"></a>
-漢、魏廢帝喪親三年之制，而魏世或爲舊君服三年者。至晉泰始四年，尚書何楨奏：<span class="jiaozhusup">「楨」各本作「禎」。按三國志魏志管寧傳注引文士傳：「楨字元榦，廬江人。入晉爲尚書、光祿大夫。」當即其人，則「禎」當作「楨」，今改正。參見本書卷一四禮志一校勘記第八、第十四、第二二條。</span>「故辟舉綱紀吏，不計違適，皆反服舊君齊衰三月。」於是詔書下其奏，所適無貴賤，悉同依古典。
+漢、魏廢帝喪親三年之制，而魏世或爲舊君服三年者。至晉泰始四年，尚書何楨奏：「<span class="jiaozhusup">「楨」各本作「禎」。按三國志魏志管寧傳注引文士傳：「楨字元榦，廬江人。入晉爲尚書、光祿大夫。」當即其人，則「禎」當作「楨」，今改正。參見本書卷一四禮志一校勘記第八、第十四、第二二條。</span>故辟舉綱紀吏，不計違適，皆反服舊君齊衰三月。」於是詔書下其奏，所適無貴賤，悉同依古典。
 </p>
 <p class="em2" id="p83"><a class="gg-link" href="#p83" onclick="return changeColor(this);"></a>
 魏武以正月崩，魏文以其年七月設伎樂百戲，是魏不以喪廢樂也。晉武帝以來，國有大喪未除，正會亦廢樂。太安元年，太子喪未除，正會亦廢樂。穆帝永和中，爲中原山陵未修復，頻年會，輒廢樂。是時太后臨朝，后父褚裒薨，元會又廢樂。
@@ -320,7 +320,7 @@
 大明十二年十一月，<span class="jiaozhusup">張森楷校勘記云：「大明祇八年，無十二年。據上條稱大明二年，下條稱大明四年，此十二年或是大明三年之誤。」</span>有司奏：「興平國解稱國子袁愍孫母王氏，應除太夫人。檢無國子除太夫人例。下禮官議正。」太學博士司馬興之議：「案禮，下國卿大夫之妻，皆命天子。以斯而推，則子男之母，不容獨異。」博士程彥議以爲：「五等雖差，而承家事等。公侯之母，崇號得從，子男於親，尊秩宜顯。故春秋之義，『母以子貴』。固知從子尊與國均也。彥參議，以興之議爲允。除王氏爲興平縣開國子太夫人。」詔可。
 </p>
 <p class="em2" id="p105"><a class="gg-link" href="#p105" onclick="return changeColor(this);"></a>
-大明四年九月，有司奏：「陳留國王曹虔秀長兄虔嗣早卒，<span class="jiaozhusup">「曹虔秀」各本並作「曹虔季」，據本紀及通典禮典改。下文又出「曹虔季」，并改「曹虔秀」。</span>秀襲封之後，生子銑以繼虔嗣。今依例應拜世子，未詳應以銑爲世子？爲應立次子鍇？」太學博士王溫之、江長議，並爲應以銑爲正嗣。太常陸澄議立鍇。右丞徐爰議謂：「禮後大宗，以其不可乏祀。諸侯世及，春秋成義。虔嗣承家傳爵，身爲國王，雖薨沒無子，猶列昭穆。立後之日，便應即纂國統。于時既無承繼，虔秀以次襲紹<span class="jiaozhusup">「虔秀」三朝本作「虔嗣」，北監本、毛本、殿本、局本作「虔季」，今據通典禮典改。</span>。虔嗣既列廟饗，故自與世數而遷。豈容蒸嘗無闕，橫取他子爲嗣。爲人胤嗣，又應恭祀先父。案禮文，公子不得禰諸侯。虔嗣無緣降廟就寢。銑本長息，宜還爲虔秀世子。」詔如爰議。
+大明四年九月，有司奏：「陳留國王曹虔秀長兄虔嗣早卒，<span class="jiaozhusup">「曹虔秀」各本並作「曹虔季」，據本紀及通典禮典改。下文又出「曹虔季」，并改「曹虔秀」。</span>秀襲封之後，生子銑以繼虔嗣。今依例應拜世子，未詳應以銑爲世子？爲應立次子鍇？」太學博士王溫之、江長議，並爲應以銑爲正嗣。太常陸澄議立鍇。右丞徐爰議謂：「禮後大宗，以其不可乏祀。諸侯世及，春秋成義。虔嗣承家傳爵，身爲國王，雖薨沒無子，猶列昭穆。立後之日，便應即纂國統。于時既無承繼，虔秀以次襲紹。<span class="jiaozhusup">「虔秀」三朝本作「虔嗣」，北監本、毛本、殿本、局本作「虔季」，今據通典禮典改。</span>虔嗣既列廟饗，故自與世數而遷。豈容蒸嘗無闕，橫取他子爲嗣。爲人胤嗣，又應恭祀先父。案禮文，公子不得禰諸侯。虔嗣無緣降廟就寢。銑本長息，宜還爲虔秀世子。」詔如爰議。
 </p>
 <p class="em2" id="p106"><a class="gg-link" href="#p106" onclick="return changeColor(this);"></a>
 宋文帝元嘉十三年七月，有司奏：「御史中丞劉式之議，『每至出行，未知制與何官分道，應有舊科。法唯稱中丞專道，傳詔荷信，詔喚眾官，應詔者行，得制令無分別他官之文，既無畫然定則，<span class="jiaozhusup">「畫」各本並作「盡」，據通典禮典改。</span>準承有疑。謂皇太子正議東儲，不宜與眾同例，中丞應與分道。揚州刺史、丹陽尹、建康令，並是京輦土地之主，或檢校非違，或赴救水火，事應神速，不宜稽駐，亦合分道。又尋六門則爲行馬之內，且禁衛非違，並由二衛及領軍，未詳京尹、建康令門內之徒及公事，亦得與中丞分道與不？其准參舊儀，告報參詳所宜分道』。聽如臺所上，其六門內，既非州郡縣部界，則不合依門外。其尚書令、二僕射所應分道，亦悉與中丞同。」
