--- a/OEBPS/Text/1278.html
+++ b/OEBPS/Text/1278.html
@@ -29,7 +29,7 @@
 大明元年六月己卯朔，詔以前太子步兵校尉祗男歆紹南豐王朗。有司奏：「朗先嗣營陽，告廟臨軒。檢繼體爲舊，不告廟臨軒。」下禮官議正。太學博士王燮之議：「南豐昔別開土宇，以紹營陽，義同始封，故有臨軒告廟之禮。今歆奉詔出嗣，則成繼體，先爵猶存，事是傳襲，不應告廟臨軒。」祠部郎朱膺之議：「南豐王嗣爵封已絕，聖恩垂矜，特詔繼茅土，復申義同始封，爲之告廟臨軒。」殿中郎徐爰議：「營陽繼體皇基，身亡封絕，恩詔追封，錫以一城。既始啟建茅土，故宜臨軒告廟。今歆繼後南豐，彼此俱爲列國，長沙、南豐，自應各告其祖，豈關太廟。事非始封，不合臨軒。同博士王燮之議。」參詳，爰議爲允。詔可。
 </p>
 <p class="em2" id="p8"><a class="gg-link" href="#p8" onclick="return changeColor(this);"></a>
-大明三年六月乙丑，有司奏：「來七月十五日，嘗祠太廟、章皇太后廟，輿駕親奉。而乘輿辭廟親戎，太子合親祠與不？且今月二十四日，第八皇女夭。案禮『宮中有故，三月不舉祭』。皇太子入住上宮，於事有疑。」下禮官議正。太學博士司馬興之議：「竊惟『國之大事，在祀與戎』。皇太子有撫軍之道，而無專御之義，戎既如之，祀亦宜然。案祭統，『夫祭之道，孫爲王父尸』。又云，『祭有昭穆，所以別父子』。太子監國，雖不攝，至於宗廟，則昭穆實存，謂事不可亂。又云，『有故則使人』。准此二三，太子無奉祀之道。又皇女夭札，則實同宮一體之哀，理不得異。設令得祀，令猶無親奉之義。」博士郁議：<span class="jiaozhusup">按時有博士傅郁，嚴可均全宋文收此議在傅郁名下。</span>「案春秋，太子奉社稷之粢盛，長子主器，出可守宗廟，以爲祭主，易彖明文。監國之重，居然親祭。皇女夭札，時既同宮，三月廢祭，於禮宜停。」二議不同。尚書參議，宜以郁議爲允。詔可。
+大明三年六月乙丑，有司奏：「來七月十五日，嘗祠太廟、章皇太后廟，輿駕親奉。而乘輿辭廟親戎，太子合親祠與不？且今月二十四日，第八皇女夭。案禮『宮中有故，三月不舉祭』。皇太子入住上宮，於事有疑。」下禮官議正。太學博士司馬興之議：「竊惟『國之大事，在祀與戎』。皇太子有撫軍之道，而無專御之義，戎既如之，祀亦宜然。案祭統，『夫祭之道，孫爲王父尸』。又云，『祭有昭穆，所以別父子』。太子監國，雖不攝，至於宗廟，則昭穆實存，謂事不可亂。又云，『有故則使人』。准此二三，太子無奉祀之道。又皇女夭札，則實同宮一體之哀，理不得異。設令得祀，令猶無親奉之義。」博士郁議：「<span class="jiaozhusup">按時有博士傅郁，嚴可均全宋文收此議在傅郁名下。</span>案春秋，太子奉社稷之粢盛，長子主器，出可守宗廟，以爲祭主，易彖明文。監國之重，居然親祭。皇女夭札，時既同宮，三月廢祭，於禮宜停。」二議不同。尚書參議，宜以郁議爲允。詔可。
 </p>
 <p class="em2" id="p9"><a class="gg-link" href="#p9" onclick="return changeColor(this);"></a>
 大明三年十一月乙丑朔，有司奏：「四時廟祠，吉日已定，遇雨及舉哀，舊停親奉，以有司行事。先下使禮官博議，於禮爲得遷日與不？」博士江長議：「禮記祭統：『君之祭也，有故則使人，而君不失其儀。』鄭玄云：『君雖不親，祭禮無闕，君德不損。』愚以爲有故則必使人者，明無遷移之文。苟有司充事，謂不宜改日。」太常丞陸澄議：「案周禮宗伯之職，『若王不與祭祀則攝位』。鄭君曰：『王有故，行其祭事也。』臣以爲此謂在致齋，祭事盡備，神不可瀆，齋不可久，而王有他故，則使有司攝焉。晉泰始七年四月，世祖將親祠于太廟。庚戌，車駕夕牲。辛亥，雨。有司行事。此雖非人故，蓋亦天硋也。求之古禮，未乖周制。案禮記，『孔子答曾子，當祭而日蝕太廟火，如牲至未殺，則廢』。然則祭非無可廢之道也。但權所爲之輕重耳。日蝕廟火，變之甚者，故乃牲至尚猶可廢。推此而降，可以理尋。今散齋之內，未及致齋，而有輕哀甚雨，日時展事，可以延敬。不愆義情，無傷正典，改擇令日，夫何以疑。愚謂散齋而有舉哀若雨，可更遷日。唯入致齋及日月逼晚者，乃使有司行事耳。又前代司空顧和啟，南郊車駕已出遇雨，宜遷日更郊，事見施用。郊之與廟，其敬可均，至日猶遷，況散齋邪。」殿中郎殷淡議：「曾子問『日蝕太廟火，牲未殺則廢』。縱有故則使人。清廟敬重，郊禋禮大，故廟焚日蝕，許以可遷；輕哀微故，事不合改。是以鼷鼠食牛，改卜非禮。晉世祖有司行事，顧司空之改郊月，既不見其當時之宜，此不足爲准。愚謂日蝕廟火，天譴之變，迺可遷日。至於舉哀小故，不宜改辰。」眾議不同。參議，既有理據，且晉氏遷郊，宋初遷祠，並有成准。謂孟月散齋之中，遇雨及舉輕哀，宜擇吉更遷，無定限數。唯入致齋及侵仲月節者，使有司行事。詔可。
@@ -77,7 +77,7 @@
 大明四年丁巳，<span class="jiaozhusup">有日無月，各本並同。</span>有司奏：「安陸國土雖建，而奠酹之所，未及營立，四時薦饗，故祔江夏之廟。宣王所生夫人，當應祠不？」太學博士傅郁議：「應廢祭。」右丞徐爰議：「按禮，『慈母妾母不世祭』。<span class="jiaozhusup">「世」各本並作「代」，蓋唐人避諱所改，今據禮記喪服小記原文改正。</span>鄭玄注：『以其非正，故傳曰子祭孫止。』又云：『爲慈母後者，爲祖庶母可也。』注稱：『緣爲慈母後之義，父妾無子，亦可命己庶子爲之後也。』考尋斯義，父母妾之祭，不必唯子。江夏宣王太子，體自元宰，道戚之胤，遭時不幸，聖上矜悼，降出皇愛，嗣承徽緒，光啟大蕃，屬國爲祖。始王夫人載育明懿，則一國之正，上無所厭，哀敬得申。既未獲祔享江夏，又不從祭安陸，即事求情，愚以爲宜依祖母有爲後之義，謂合列祀于廟。」二議不同，參議以爰議爲允。詔可。
 </p>
 <p class="em2" id="p24"><a class="gg-link" href="#p24" onclick="return changeColor(this);"></a>
-大明六年十月丙寅，有司奏：「故晉陵孝王子雲未有嗣，安廟後三日，國臣從權制除釋，朔望周忌，應還臨與不？祭之日，誰爲主？」太常丞庾蔚之議：「既葬三日，國臣從權制除釋。而靈筵猶存<span class="jiaozhusup">「釋而」各本並作「而釋」。孫虨宋書考論云：「『而』字疑在『釋』字下，屬下句。」按孫說是，今乙正。</span>，朔望及期忌，諸臣宜還臨哭，變服衣𢂿，使上卿主祭。王既未有後，又無三年服者，期親服除，<span class="jiaozhusup">「除」字下各本並衍「之」字，據通典禮典刪。</span>而國尚存，便宜立廟，爲國之始祖。服除之日，神主暫祔食祖廟。諸王不得祖天子，宜祔從祖國廟，還居新廟之室。未有嗣之前，四時饗薦，常使上卿主之。」左丞徐爰參議，以蔚之議爲允。詔可。
+大明六年十月丙寅，有司奏：「故晉陵孝王子雲未有嗣，安廟後三日，國臣從權制除釋，朔望周忌，應還臨與不？祭之日，誰爲主？」太常丞庾蔚之議：「既葬三日，國臣從權制除釋。而靈筵猶存，<span class="jiaozhusup">「釋而」各本並作「而釋」。孫虨宋書考論云：「『而』字疑在『釋』字下，屬下句。」按孫說是，今乙正。</span>朔望及期忌，諸臣宜還臨哭，變服衣𢂿，使上卿主祭。王既未有後，又無三年服者，期親服除，<span class="jiaozhusup">「除」字下各本並衍「之」字，據通典禮典刪。</span>而國尚存，便宜立廟，爲國之始祖。服除之日，神主暫祔食祖廟。諸王不得祖天子，宜祔從祖國廟，還居新廟之室。未有嗣之前，四時饗薦，常使上卿主之。」左丞徐爰參議，以蔚之議爲允。詔可。
 </p>
 <p class="em2" id="p25"><a class="gg-link" href="#p25" onclick="return changeColor(this);"></a>
 大明七年正月庚子，有司奏：「故宣貴妃加殊禮，未詳應立廟與不？」太學博士虞龢議：「曲禮云：『天子有后，有夫人。』檀弓云：『舜葬蒼梧，三妃未之從。』昏義云：『后之立六宮，有三夫人。』然則三妃即三夫人也。后之有三妃，猶天子之有三公也。按周禮，三公八命，諸侯七命。三公既尊於列國諸侯，三妃亦貴於庶邦夫人。據春秋傳，仲子非魯惠元嫡，尚得考彼別宮。今貴妃是秩，天之崇班，理應立此新廟。」左丞徐爰議：「宣貴妃既加殊命，禮絕五宮，考之古典，顯有成據。廟堂克構，宜選將作大匠。」參詳以龢、爰議爲允。詔可。
@@ -173,7 +173,7 @@
 大明七年十一月，南巡。乙酉，遣使祭晉大司馬桓溫、征西將軍毛璩墓。<span class="jiaozhusup">各本並脫「大」字。據晉書桓溫傳補。</span>
 </p>
 <p class="em2" id="p56"><a class="gg-link" href="#p56" onclick="return changeColor(this);"></a>
-劉禪景耀六年，詔爲丞相諸葛亮立廟於沔陽。先是所居各請立廟，不許，百姓遂私祭之。而言事者或以爲可立於京師，乃從人意，皆不納。步兵校尉習隆、中書侍郎向充等言於禪曰：<span class="jiaozhusup">「向充」各本並作「向允」，據三國志蜀志諸葛亮傳裴注引襄陽記、通典禮典、元龜五九六改。</span>「昔周人懷邵伯之美，甘棠爲之不伐；越王思范蠡之功，鑄金以存其象。自漢興已來，小善小德，而圖形立廟者多矣；況亮德範遐邇，勳蓋季世，興王室之不壞，實斯人是賴。而烝嘗止於私門，廟象闕而莫立，百姓巷祭，戎夷野祀，非所以存德念功，述追在昔也。今若盡從人心，則瀆而無典；建之京師，又逼宗廟。此聖懷所以惟疑也。愚以爲宜因近其墓，立之於沔陽，使屬所以時賜祭。凡其故臣欲奉祠者，皆限至廟。斷其私祀，以崇正禮。」於是從之。何承天曰：「周禮：『凡有功者祭於大烝。』故後代遵之，以元勳配饗。充等曾不是式，<span class="jiaozhusup">「充」各本並作「允」，據通典禮典、元龜五九六改。</span>禪又從之，並非禮也。」
+劉禪景耀六年，詔爲丞相諸葛亮立廟於沔陽。先是所居各請立廟，不許，百姓遂私祭之。而言事者或以爲可立於京師，乃從人意，皆不納。步兵校尉習隆、中書侍郎向充等言於禪曰：「<span class="jiaozhusup">「向充」各本並作「向允」，據三國志蜀志諸葛亮傳裴注引襄陽記、通典禮典、元龜五九六改。</span>昔周人懷邵伯之美，甘棠爲之不伐；越王思范蠡之功，鑄金以存其象。自漢興已來，小善小德，而圖形立廟者多矣；況亮德範遐邇，勳蓋季世，興王室之不壞，實斯人是賴。而烝嘗止於私門，廟象闕而莫立，百姓巷祭，戎夷野祀，非所以存德念功，述追在昔也。今若盡從人心，則瀆而無典；建之京師，又逼宗廟。此聖懷所以惟疑也。愚以爲宜因近其墓，立之於沔陽，使屬所以時賜祭。凡其故臣欲奉祠者，皆限至廟。斷其私祀，以崇正禮。」於是從之。何承天曰：「周禮：『凡有功者祭於大烝。』故後代遵之，以元勳配饗。充等曾不是式，<span class="jiaozhusup">「充」各本並作「允」，據通典禮典、元龜五九六改。</span>禪又從之，並非禮也。」
 </p>
 <p class="em2" id="p57"><a class="gg-link" href="#p57" onclick="return changeColor(this);"></a>
 漢時城陽國人以劉章有功於漢，爲之立祠。青州諸郡，轉相放效，濟南尤盛。至魏武帝爲濟南相，皆毀絕之。及秉大政，普加除翦，世之淫祀遂絕。至文帝黃初五年十一月，詔曰：「先王制禮，所以昭孝事祖，大則郊社，其次宗廟，三辰五行，名山川澤，非此族也，不在祀典。叔世衰亂，<span class="jiaozhusup">「世」各本並作「代」，據三國志魏志文帝紀改。</span>崇信巫史，至乃宮殿之內，戶牖之間，無不沃酹，甚矣其惑也。自今其敢設非禮之祭，巫祝之言，皆以執左道論，著于令。」明帝青龍元年，又詔：「郡國山川不在祀典者，勿祠。」
