--- a/OEBPS/Text/1284.html
+++ b/OEBPS/Text/1284.html
@@ -29,7 +29,7 @@
 周禮：「日至之景，尺有五寸，謂之地中。」鄭眾說「土圭之長，尺有五寸。以夏至之日，立八尺之表，其景與土圭等，謂之地中，今潁川陽城地也。」鄭玄云：「凡日景於地千里而差一寸，景尺有五寸者，南戴日下萬五千里也。」以此推之，日當去其下地八萬里矣。日邪射陽城，則天徑之半也。天體圓如彈丸，地處天之半，而陽城爲中，則日春秋冬夏，昏明晝夜，去陽城皆等，無盈縮矣。故知從日邪射陽城爲天徑之半也。
 </p>
 <p class="margin2" id="p8"><a class="gg-link" href="#p8" onclick="return changeColor(this);"></a>
-以句股法言之，傍萬五千里，句也，立八萬里，股也，從日邪射陽城，弦也。以句股求弦法入之，得八萬一千三百九十四里三十步五尺三寸六分，天徑之半，而地上去天之數也。倍之，得十六萬二千七百八十八里六十一步四尺七寸二分，天徑之數也。以周率乘之，徑率約之，得五十一萬三千六百八十七里六十八步一尺八寸二分<span class="jiaozhusup">「三千」各本並作「二千」，據晉書天文志改。</span>，周天之數也。減甄耀度、考異郵五十五萬七千三百一十二里有奇。一度凡千四百六里百二十四步六寸四分十萬七千五百六十五分分之萬九千三十九，減舊度千五百二十五里二百五十六步三尺三寸二十一萬五千一百三十分分之十六萬七百三十分。
+以句股法言之，傍萬五千里，句也，立八萬里，股也，從日邪射陽城，弦也。以句股求弦法入之，得八萬一千三百九十四里三十步五尺三寸六分，天徑之半，而地上去天之數也。倍之，得十六萬二千七百八十八里六十一步四尺七寸二分，天徑之數也。以周率乘之，徑率約之，得五十一萬三千六百八十七里六十八步一尺八寸二分，<span class="jiaozhusup">「三千」各本並作「二千」，據晉書天文志改。</span>周天之數也。減甄耀度、考異郵五十五萬七千三百一十二里有奇。一度凡千四百六里百二十四步六寸四分十萬七千五百六十五分分之萬九千三十九，減舊度千五百二十五里二百五十六步三尺三寸二十一萬五千一百三十分分之十六萬七百三十分。
 </p>
 <p class="margin2" id="p9"><a class="gg-link" href="#p9" onclick="return changeColor(this);"></a>
 黃赤二道，相與交錯，其間相去二十四度。以兩儀推之，二道俱三百六十五度有奇，是以知天體圓如彈丸。而陸績造渾象，其形如鳥卵，然則黃道應長於赤道矣。績云天東西南北徑三十五萬七千里，然則績亦以天形正圓也。而渾象爲鳥卵，則爲自相違背。
@@ -53,7 +53,7 @@
 蓋天之術，云出周公旦訪之殷商，蓋假託之說也。其書號曰周髀。髀者表也。周天之數也。其術云：「天如覆蓋，地如覆盆，地中高而四隤，日月隨天轉運，隱地之高，以爲晝夜也。天地相去凡八萬里，天地之中，高於外衡六萬里，地上之高，高於天之外衡二萬里也。」或問蓋天於揚雄。揚雄曰：「蓋哉！蓋哉！」難其八事。鄭玄又難其二事。爲蓋天之學者，不能通也。劉向五紀說，夏曆以爲列宿日月皆西移，列宿疾而日次之，月最遲。故日與列宿昏俱入西方；後九十一日，是宿在北方；又九十一日，是宿在東方；九十一日，在南方。此明日行遲於列宿也。月生三日，日入而月見西方；至十五日，日入而月見東方；將晦，日未出，乃見東方。以此明月行之遲於日，而皆西行也。向難之以鴻範傳曰：「晦而月見西方，謂之朓。朓，疾也。朔而月見東方，謂之側匿。側匿，遲不敢進也。星辰西行，史官謂之逆行。」此三說，夏曆皆違之，跡其意，好異者之所作也。
 </p>
 <p class="em2" id="p16"><a class="gg-link" href="#p16" onclick="return changeColor(this);"></a>
-晉成帝咸康中，會稽虞喜造安天論，以爲「天高窮於無窮，地深測於不測。地有居靜之體，天有常安之形。論其大體，當相覆冒，方則俱方，圓則俱圓，無方圓不同之義也」。<span class="jiaozhusup">「無方圓」三字，各本並脫。據晉書天文志、隋書天文志補。</span>喜族祖河間太守聳又立穹天論云：<span class="jiaozhusup">「河間太守」，晉書天文志隋書天文志皆作「河間相」。張森楷校勘記云：「作相是。三國吳志虞翻傳注亦云聳入晉為河間相。」</span>「天形穹隆，當如雞子幕，其際周接四海之表，浮乎元氣之上。」而吳太常姚信造昕天論曰：「嘗覽漢書云：冬至日在牽牛，去極遠；夏至日在東井，去極近。欲以推日之長短，信以太極處二十八宿之中央，雖有遠近，不能相倍。」今昕天之說，以爲「冬至極低，而天運近南，故日去人遠，而斗去人近，北天氣至，故冰寒也。夏至極起，而天運近北，而斗去人遠，<span class="jiaozhusup">各本並脫「而」字，據晉書天文志、隋書天文志補。</span>日去人近，南天氣至，故炎熱也。極之立時，日行地中淺，故夜短，天去地高，故晝長也。極之低時，日行地中深，故夜長，天去地下淺，故晝短也。然則天行寒依於渾，夏依於蓋也」。按此說應作「軒昂」之「軒」，而作「昕」，所未詳也。凡三說皆好異之談，失之遠矣。
+晉成帝咸康中，會稽虞喜造安天論，以爲「天高窮於無窮，地深測於不測。地有居靜之體，天有常安之形。論其大體，當相覆冒，方則俱方，圓則俱圓，無方圓不同之義也」。<span class="jiaozhusup">「無方圓」三字，各本並脫。據晉書天文志、隋書天文志補。</span>喜族祖河間太守聳又立穹天論云：「<span class="jiaozhusup">「河間太守」，晉書天文志隋書天文志皆作「河間相」。張森楷校勘記云：「作相是。三國吳志虞翻傳注亦云聳入晉為河間相。」</span>天形穹隆，當如雞子幕，其際周接四海之表，浮乎元氣之上。」而吳太常姚信造昕天論曰：「嘗覽漢書云：冬至日在牽牛，去極遠；夏至日在東井，去極近。欲以推日之長短，信以太極處二十八宿之中央，雖有遠近，不能相倍。」今昕天之說，以爲「冬至極低，而天運近南，故日去人遠，而斗去人近，北天氣至，故冰寒也。夏至極起，而天運近北，而斗去人遠，<span class="jiaozhusup">各本並脫「而」字，據晉書天文志、隋書天文志補。</span>日去人近，南天氣至，故炎熱也。極之立時，日行地中淺，故夜短，天去地高，故晝長也。極之低時，日行地中深，故夜長，天去地下淺，故晝短也。然則天行寒依於渾，夏依於蓋也」。按此說應作「軒昂」之「軒」，而作「昕」，所未詳也。凡三說皆好異之談，失之遠矣。
 </p>
 <p class="em2" id="p17"><a class="gg-link" href="#p17" onclick="return changeColor(this);"></a>
 凡天文經星，常宿中外宮，前史已詳。今惟記魏文帝黃初以來星變爲天文志，以續司馬彪云。
