--- a/OEBPS/Text/1285.html
+++ b/OEBPS/Text/1285.html
@@ -62,7 +62,7 @@
 永興元年十二月壬寅夜，赤氣亙天，砰隱有聲。二年十月丁丑，赤氣見在北方，東西竟天。占曰：「並爲大兵。砰隱有聲，怒之象也。」是後四海雲擾，九服交兵。
 </p>
 <p class="em2" id="p19"><a class="gg-link" href="#p19" onclick="return changeColor(this);"></a>
-永興二年四月丙子，太白犯狼星。占曰：「大兵起。」九月，歲星守東井。占曰：「有兵。井又秦分也。」是年，苟晞破公師藩<span class="jiaozhusup">「藩」各本並作「蕃」，據晉書惠帝紀改。</span>，張方破范陽王虓，關西諸將攻河間王顒，顒奔走，東海王迎殺之。
+永興二年四月丙子，太白犯狼星。占曰：「大兵起。」九月，歲星守東井。占曰：「有兵。井又秦分也。」是年，苟晞破公師藩，<span class="jiaozhusup">「藩」各本並作「蕃」，據晉書惠帝紀改。</span>張方破范陽王虓，關西諸將攻河間王顒，顒奔走，東海王迎殺之。
 </p>
 <p class="em2" id="p20"><a class="gg-link" href="#p20" onclick="return changeColor(this);"></a>
 永興二年八月，星孛于昴、畢。占曰：「爲兵喪。」昴、畢，又趙、魏分也。十月丁丑，有星孛于北斗。占曰：「璿璣更授，天子出走。」又曰：「強國發兵，諸侯爭權。」是後皆有其應。明年，惠帝崩。
