--- a/OEBPS/Text/1287.html
+++ b/OEBPS/Text/1287.html
@@ -158,7 +158,7 @@
 後廢帝元徽三年七月丙申，太白入角，犯歲星。占曰：「角爲天門，國將有兵事。」占，於角太白與木星會，殺軍在外，破軍殺將。其月丁巳，太白入氐。氐爲天子宿宮，太白兵凶之星。八月己巳，太白犯房北頭第二星。占曰：「王失德。」九月癸卯，太白犯南斗第三星。占曰：「大人當之，國易政。」十月丙戌，歲星入氐。占曰：「諸侯人君有來入宮者。」十一月庚戌，月入太微，奄屏西南星。占曰：「貴者失勢。」四年七月，建平王景素據京口反。時廢主凶慝無度，五年七月殞，安成王入纂皇阼。三年，齊受禪。
 </p>
 <p class="em2" id="p51"><a class="gg-link" href="#p51" onclick="return changeColor(this);"></a>
-元徽四年三月乙巳<span class="jiaozhusup">「乙巳」下，各本並有「朔」字。按是年三月庚寅朔，十六日乙巳，「朔」字是衍文，今刪去。</span>，月犯房北頭第一星，進犯鍵閉星。占曰：「有謀伏甲兵在宗廟中，天子不可出宮下堂，多暴事。」九月甲辰，填星犯太微西蕃。占曰：「立王。」一曰：「徙王。」又曰：「大人憂。」時廢帝出入無度，卒以此殞，安成王立。
+元徽四年三月乙巳，<span class="jiaozhusup">「乙巳」下，各本並有「朔」字。按是年三月庚寅朔，十六日乙巳，「朔」字是衍文，今刪去。</span>月犯房北頭第一星，進犯鍵閉星。占曰：「有謀伏甲兵在宗廟中，天子不可出宮下堂，多暴事。」九月甲辰，填星犯太微西蕃。占曰：「立王。」一曰：「徙王。」又曰：「大人憂。」時廢帝出入無度，卒以此殞，安成王立。
 </p>
 <p class="em2" id="p52"><a class="gg-link" href="#p52" onclick="return changeColor(this);"></a>
 元徽五年正月戊申，月犯南斗第五星。與前同占。四月丁巳，熒惑犯輿鬼西北星。占曰：「大人憂，近期六十日，遠期六百日。」又曰：「人君惡之。」其月丙子，太白犯輿鬼西北星。占曰：「大赦。」五月戊申，太白晝見午上，光明異常。占曰：「更姓。」六月壬戌，月犯鉤鈐星。占曰：「有大令。」其月乙丑，月犯南斗第四星。與前同占。七月，廢帝殞，大赦天下。後二年，齊受禪。
