--- a/OEBPS/Text/1291.html
+++ b/OEBPS/Text/1291.html
@@ -170,7 +170,7 @@
 晉元帝太興以來，兵士以絳囊縛紒。紒在首，莫上焉。周易乾爲首，坤爲囊。坤，臣道也。晉金行，赤火色，金之賊也。以朱囊縛紒，臣道上侵之象也。到永昌元年，大將軍王敦舉兵內攻，六軍散潰。
 </p>
 <p class="em2" id="p55"><a class="gg-link" href="#p55" onclick="return changeColor(this);"></a>
-舊爲羽扇，柄刻木，象其骨形，羽用十，取全數也。晉中興初，王敦南征，始改爲長柄下出，可捉，而減其羽用八。識者尤之曰：「夫羽扇，翼之名也。創爲長柄者，執其柄制羽翼也。以十改八者<span class="jiaozhusup">各本並作「以八改十者」，據晉書五行志訂正。按上文云「羽用十」，又云「減其羽用八」，則此當作「以十改八」為是。</span>，將以未備奪已備也。」是時爲衣者，又上短，帶至于掖；著帽者，以帶縛項。下逼上，上無地也。下袴者，直幅爲口無殺，下大失裁也。尋有兵亂，三年而再攻京師。
+舊爲羽扇，柄刻木，象其骨形，羽用十，取全數也。晉中興初，王敦南征，始改爲長柄下出，可捉，而減其羽用八。識者尤之曰：「夫羽扇，翼之名也。創爲長柄者，執其柄制羽翼也。以十改八者，<span class="jiaozhusup">各本並作「以八改十者」，據晉書五行志訂正。按上文云「羽用十」，又云「減其羽用八」，則此當作「以十改八」為是。</span>將以未備奪已備也。」是時爲衣者，又上短，帶至于掖；著帽者，以帶縛項。下逼上，上無地也。下袴者，直幅爲口無殺，下大失裁也。尋有兵亂，三年而再攻京師。
 </p>
 <p class="em2" id="p56"><a class="gg-link" href="#p56" onclick="return changeColor(this);"></a>
 晉海西初嗣位，迎官忘設豹尾。識者以爲不終之象，近服妖也。
