--- a/OEBPS/Text/1293.html
+++ b/OEBPS/Text/1293.html
@@ -182,7 +182,7 @@
 晉安帝元興三年，荊、江二界生竹實如麥。
 </p>
 <p class="em2" id="p59"><a class="gg-link" href="#p59" onclick="return changeColor(this);"></a>
-晉安帝義熙二年九月，揚州營揚武將軍營士陳蓋家有苦蕒菜<span class="jiaozhusup">各本並脫「營士」二字，據晉書五行志補。</span>，莖高四尺六寸，廣三尺二寸。此殆與吳終同象也。
+晉安帝義熙二年九月，揚州營揚武將軍營士陳蓋家有苦蕒菜，<span class="jiaozhusup">各本並脫「營士」二字，據晉書五行志補。</span>莖高四尺六寸，廣三尺二寸。此殆與吳終同象也。
 </p>
 <p class="em2" id="p60"><a class="gg-link" href="#p60" onclick="return changeColor(this);"></a>
 義熙中，宮城上御道左右皆生蒺蔾。草妖也。蒺蔾有刺，不可踐而行，生宮牆及馳道，天戒若曰，人君拱默不能聽政，雖居宸極，猶若空宮，雖有御道，未嘗馳騁，皆生蒺蔾若空廢也。
