--- a/OEBPS/Text/1296.html
+++ b/OEBPS/Text/1296.html
@@ -89,7 +89,7 @@
 婁令，漢舊縣。
 </p>
 <p class="margin2" id="p28"><a class="gg-link" href="#p28" onclick="return changeColor(this);"></a>
-嘉興令，此地本名長水，秦改曰由拳。吳孫權黃龍四年<span class="jiaozhusup">三國志吳志吳主權傳繫三年。</span>，由拳縣生嘉禾，改曰禾興。孫皓父名和，又改名曰嘉興。
+嘉興令，此地本名長水，秦改曰由拳。吳孫權黃龍四年，<span class="jiaozhusup">三國志吳志吳主權傳繫三年。</span>由拳縣生嘉禾，改曰禾興。孫皓父名和，又改名曰嘉興。
 </p>
 <p class="margin2" id="p29"><a class="gg-link" href="#p29" onclick="return changeColor(this);"></a>
 海虞令，晉武帝太康四年，分吳縣之虞鄉立。
@@ -497,7 +497,7 @@
 高密令，<span class="jiazhu">別見。</span>江左立高密國，後爲南高密郡。文帝元嘉十八年，省爲高密縣，屬此。
 </p>
 <p class="em2" id="p164"><a class="gg-link" href="#p164" onclick="return changeColor(this);"></a>
-南濟陰太守，二漢、晉屬兗州，前漢初屬梁國，景帝中六年<span class="jiaozhusup">各本並作「景帝中平六年」。成孺宋書州郡志校勘記云：「漢志景帝中六年，別爲濟陰國。『平』字衍。中平乃漢靈帝紀年。」按成校是，今訂正。</span>，別爲濟陰國，宣帝甘露二年，更名定陶國，後還曰濟陰。永初郡國又有句陽、定陶二縣。<span class="jiazhu">並漢舊名。</span>今領縣四。戶一千六百五十五，口八千一百九十三。
+南濟陰太守，二漢、晉屬兗州，前漢初屬梁國，景帝中六年，<span class="jiaozhusup">各本並作「景帝中平六年」。成孺宋書州郡志校勘記云：「漢志景帝中六年，別爲濟陰國。『平』字衍。中平乃漢靈帝紀年。」按成校是，今訂正。</span>別爲濟陰國，宣帝甘露二年，更名定陶國，後還曰濟陰。永初郡國又有句陽、定陶二縣。<span class="jiazhu">並漢舊名。</span>今領縣四。戶一千六百五十五，口八千一百九十三。
 </p>
 <p class="margin2" id="p165"><a class="gg-link" href="#p165" onclick="return changeColor(this);"></a>
 城武令。<span class="jiazhu">別見。</span>
@@ -737,7 +737,7 @@
 酇令，漢屬沛，晉屬譙。文帝元嘉八年，自南譙度屬歷陽，後廢帝元徽元年度屬此。
 </p>
 <p class="em2" id="p244"><a class="gg-link" href="#p244" onclick="return changeColor(this);"></a>
-南兗州刺史，中原亂，北州流民多南渡，晉成帝立南兗州，寄治京口。時又立南青州及并州，武帝永初元年，省并併南兗。<span class="jiaozhusup">孫虨宋書考論云：「當云省併南兗，謂南青州、并州俱省併也。」按南齊書州郡志：「宋永初元年，罷青并兗。」則南青時亦併省，孫說是。</span>文帝元嘉八年，始割江淮間爲境，治廣陵。永初郡國領十四郡。南高平、南平昌、南濟陰、南濮陽、南泰山、濟陽、南魯七郡，<span class="jiaozhusup">「七」字各本並作「山」字。成孺宋書州郡志校勘記云：「山當作七，形近之訛。」按成校是，今改正。</span>今並屬徐州。又有東燕郡，江左分濮陽所立也，領燕縣、<span class="jiazhu">前漢曰南燕，後漢曰燕，並屬東郡。太康地志屬濮陽。</span>白馬、平昌、考城凡四縣。文帝元嘉十八年，省考城併燕。十九年，省東燕郡爲東燕縣，屬南濮陽，後又省東燕縣。<span class="jiaozhusup">各本並脫「郡爲東燕」四字。孫虨宋書考論云：「東燕縣既省，以何者屬南濮陽，且上文亦但見燕縣，無東燕縣。此當作省東燕郡爲東燕縣，屬南濮陽，後又省東燕縣。」按孫說是，今訂正。</span>南東平郡領范、蛇丘、歷城凡三縣。高密郡領淳于、黔陬、營陵、夷安凡四縣。南齊郡領西安、臨菑凡二縣。<span class="jiaozhusup">「西安」各本並作「安西」。孫虨宋書考論云：「安西當作西安，見南魯郡。」按孫說是，今改正。</span>南平原郡領平原、高唐、茌平<span class="jiazhu">並別見。</span>凡三縣。濟岷郡<span class="jiazhu">江左立。</span>領營城、晉寧<span class="jiazhu">江左立。</span>凡二縣。雁門郡<span class="jiazhu">漢舊郡。</span>領樓煩、<span class="jiazhu">別見。</span>陰館、<span class="jiazhu">前漢作「觀」，後漢、晉作「館」也。</span>廣武、<span class="jiazhu">前漢屬太原，後漢、晉太康地志屬雁門也。</span>崞、馬邑<span class="jiazhu">並漢舊名。</span>凡五縣。凡七郡，二十三縣，並省屬南徐州。諸僑郡縣何志又有鍾離、雁門、平原、東平、北沛五郡。鍾離今屬徐州。雁門領樓煩、陰館、廣武三縣。平原領茌平、臨菑、營城、平原四縣。東平領范、朝陽、歷城三縣<span class="jiaozhusup">「東平」各本並作「東平原」。洪頤楫諸史考異云：「東平原當作東平，衍原字。」按洪說是，今刪「原」字。據晉書地理志東平國領范縣，魏書地形志東平郡領范縣，即此。則此是「東平」，不當作「東平原」。地形志別有東平原郡，治梁鄒，非此郡。</span>。北沛領符離、蕭、相、沛四縣。<span class="jiaozhusup">各本並脫「北」字。成孺宋書州郡志校勘記云：「案上文何志又有北沛郡，即南沛太守下何志云北沛新立者也。然則此沛字上亦當有北字。」按成校是，今補正。</span><span class="jiazhu">符離，漢舊縣。餘並別見。</span>凡十四縣。起居注，元嘉十一年，以南兗州東平之平陸併范，壽張併朝陽，平原之濟岷、晉寧併營城，<span class="jiazhu">先是省濟岷郡爲縣。</span>高唐併茌平。<span class="jiaozhusup">「高唐」各本並作「高康」。孫虨宋書考論云：「康當爲唐。」按孫說是，今改正。</span>按此五縣，元嘉十一年所省，則平陸、壽張疑在永初郡國志，而無此二縣，未詳。徐志有南東平郡，領范、朝陽、歷城、樓煩、陰觀、廣武、茌平、營城、臨菑、平原十縣，則是雁門、平原併東平也。孝武大明五年，以東平併廣陵。宋又僑立新平、北淮陽、北濟陰、北下邳、東莞五郡。<span class="jiaozhusup">「北濟陰」各本並脫「陰」字。孫虨宋書考論云：「北濟下脫陰字。」按孫說是，今補正。</span>元嘉二十八年，南兗州徙治盱眙。三十年，省南兗州併南徐，其後復立，還治廣陵。徐志領郡九，縣三十九。戶三萬一千一百一十五，口十五萬九千三百六十二。宋末領郡十一，縣四十四。去京都水二百五十，陸一百八十。
+南兗州刺史，中原亂，北州流民多南渡，晉成帝立南兗州，寄治京口。時又立南青州及并州，武帝永初元年，省并併南兗。<span class="jiaozhusup">孫虨宋書考論云：「當云省併南兗，謂南青州、并州俱省併也。」按南齊書州郡志：「宋永初元年，罷青并兗。」則南青時亦併省，孫說是。</span>文帝元嘉八年，始割江淮間爲境，治廣陵。永初郡國領十四郡。南高平、南平昌、南濟陰、南濮陽、南泰山、濟陽、南魯七郡，<span class="jiaozhusup">「七」字各本並作「山」字。成孺宋書州郡志校勘記云：「山當作七，形近之訛。」按成校是，今改正。</span>今並屬徐州。又有東燕郡，江左分濮陽所立也，領燕縣、<span class="jiazhu">前漢曰南燕，後漢曰燕，並屬東郡。太康地志屬濮陽。</span>白馬、平昌、考城凡四縣。文帝元嘉十八年，省考城併燕。十九年，省東燕郡爲東燕縣，屬南濮陽，後又省東燕縣。<span class="jiaozhusup">各本並脫「郡爲東燕」四字。孫虨宋書考論云：「東燕縣既省，以何者屬南濮陽，且上文亦但見燕縣，無東燕縣。此當作省東燕郡爲東燕縣，屬南濮陽，後又省東燕縣。」按孫說是，今訂正。</span>南東平郡領范、蛇丘、歷城凡三縣。高密郡領淳于、黔陬、營陵、夷安凡四縣。南齊郡領西安、臨菑凡二縣。<span class="jiaozhusup">「西安」各本並作「安西」。孫虨宋書考論云：「安西當作西安，見南魯郡。」按孫說是，今改正。</span>南平原郡領平原、高唐、茌平<span class="jiazhu">並別見。</span>凡三縣。濟岷郡<span class="jiazhu">江左立。</span>領營城、晉寧<span class="jiazhu">江左立。</span>凡二縣。雁門郡<span class="jiazhu">漢舊郡。</span>領樓煩、<span class="jiazhu">別見。</span>陰館、<span class="jiazhu">前漢作「觀」，後漢、晉作「館」也。</span>廣武、<span class="jiazhu">前漢屬太原，後漢、晉太康地志屬雁門也。</span>崞、馬邑<span class="jiazhu">並漢舊名。</span>凡五縣。凡七郡，二十三縣，並省屬南徐州。諸僑郡縣何志又有鍾離、雁門、平原、東平、北沛五郡。鍾離今屬徐州。雁門領樓煩、陰館、廣武三縣。平原領茌平、臨菑、營城、平原四縣。東平領范、朝陽、歷城三縣。<span class="jiaozhusup">「東平」各本並作「東平原」。洪頤楫諸史考異云：「東平原當作東平，衍原字。」按洪說是，今刪「原」字。據晉書地理志東平國領范縣，魏書地形志東平郡領范縣，即此。則此是「東平」，不當作「東平原」。地形志別有東平原郡，治梁鄒，非此郡。</span>北沛領符離、蕭、相、沛四縣。<span class="jiaozhusup">各本並脫「北」字。成孺宋書州郡志校勘記云：「案上文何志又有北沛郡，即南沛太守下何志云北沛新立者也。然則此沛字上亦當有北字。」按成校是，今補正。</span><span class="jiazhu">符離，漢舊縣。餘並別見。</span>凡十四縣。起居注，元嘉十一年，以南兗州東平之平陸併范，壽張併朝陽，平原之濟岷、晉寧併營城，<span class="jiazhu">先是省濟岷郡爲縣。</span>高唐併茌平。<span class="jiaozhusup">「高唐」各本並作「高康」。孫虨宋書考論云：「康當爲唐。」按孫說是，今改正。</span>按此五縣，元嘉十一年所省，則平陸、壽張疑在永初郡國志，而無此二縣，未詳。徐志有南東平郡，領范、朝陽、歷城、樓煩、陰觀、廣武、茌平、營城、臨菑、平原十縣，則是雁門、平原併東平也。孝武大明五年，以東平併廣陵。宋又僑立新平、北淮陽、北濟陰、北下邳、東莞五郡。<span class="jiaozhusup">「北濟陰」各本並脫「陰」字。孫虨宋書考論云：「北濟下脫陰字。」按孫說是，今補正。</span>元嘉二十八年，南兗州徙治盱眙。三十年，省南兗州併南徐，其後復立，還治廣陵。徐志領郡九，縣三十九。戶三萬一千一百一十五，口十五萬九千三百六十二。宋末領郡十一，縣四十四。去京都水二百五十，陸一百八十。
 </p>
 <p class="em2" id="p245"><a class="gg-link" href="#p245" onclick="return changeColor(this);"></a>
 廣陵太守，漢高六年立，屬荊國，十一年，更屬吳，景帝四年，更名江都國，武帝元狩三年，更名廣陵。舊屬徐州。晉武帝太康三年，治淮陰故城，後又治射陽，<span class="jiazhu">射陽別見。</span>江左治廣陵。永初郡國又有輿、<span class="jiazhu">前漢屬臨淮，後漢省臨淮屬廣陵，文帝元嘉十三年并江都也。</span>肥如、潞、真定、新市五縣。<span class="jiazhu">並二漢舊名。肥如屬遼西，潞屬上黨，真定前漢屬真定，後漢省真定屬常山，晉亦屬常山。新市二漢、晉屬中山。</span><span class="jiaozhusup">各本並脫「二漢晉屬中山」六字，據錢氏考異說補。錢大昕廿二史考異云：「新市下有脫文。當云二漢、晉屬中山。」</span><span class="jiazhu">永初郡國云四縣本屬遼西，則是晉末遼西僑郡省併廣陵也。何有肥如、新市，徐與今同也。</span>今領縣四。戶七千七百四十四，口四萬五千六百一十三。
@@ -956,7 +956,7 @@
 亢父令，漢舊縣。舊屬任城。
 </p>
 <p class="em2" id="p317"><a class="gg-link" href="#p317" onclick="return changeColor(this);"></a>
-魯郡太守，秦薛郡，漢高后更名。本屬徐州，光武改屬豫州<span class="jiaozhusup">「豫州」各本並作「任城」，據續漢書郡國志劉昭注改。</span>，江左屬兗州。領縣六。戶四千六百三十一，口二萬八千三百七。去州陸三百五十。去京都陸一千一百。
+魯郡太守，秦薛郡，漢高后更名。本屬徐州，光武改屬豫州，<span class="jiaozhusup">「豫州」各本並作「任城」，據續漢書郡國志劉昭注改。</span>江左屬兗州。領縣六。戶四千六百三十一，口二萬八千三百七。去州陸三百五十。去京都陸一千一百。
 </p>
 <p class="margin2" id="p318"><a class="gg-link" href="#p318" onclick="return changeColor(this);"></a>
 鄒令，漢舊縣。
