--- a/OEBPS/Text/1298.html
+++ b/OEBPS/Text/1298.html
@@ -11,7 +11,7 @@
 荊州刺史，漢治武陵漢壽，魏、晉治江陵，王敦治武昌，陶侃前治沔陽，後治武昌，王廙治江陵，庾亮治武昌，庾翼進襄陽，復還夏口，桓溫治江陵，桓沖治上明，王忱還江陵，<span class="jiaozhusup">「王忱」各本並作「王說」，據南齊書州郡志改。洪頤楫諸史考異云：「王說是王忱之訛。晉書忱傳，太元中，出爲荊州刺史。」</span>此後遂治江陵。宋初領郡三十一，後分南陽、順陽、襄陽、新野、竟陵爲雍州，湘川十郡爲湘州，江夏、武陵屬郢州，<span class="jiaozhusup">「武陵」各本並作「武陽」，孫虨宋書考論云：「武陽當是武陵。」按孫說是，今改正。</span>隨郡、義陽屬司州，北義陽省，凡餘十一郡。文帝世，又立宋安左郡，領拓邊、綏慕、樂寧、慕化、仰澤、革音、歸德七縣，後省改。汶陽郡又度屬。今領郡十二，縣四十八。戶六萬五千六百四。去京都水三千三百八十。
 </p>
 <p class="em2" id="p2"><a class="gg-link" href="#p2" onclick="return changeColor(this);"></a>
-南郡太守，秦立。漢高帝元年，爲臨江國，景帝中二年復故<span class="jiaozhusup">「漢高帝」各本作「漢文帝」，「中二年」各本作「中元年」，並據漢書地理志改。漢書地理志南郡下云：「秦置，高帝元年，更爲臨江郡，五年，復故。景帝二年（當作七年），復爲臨江，中二年復故。」宋志略去高帝五年省臨江國復置南郡，景帝七年復爲臨江國一節，「高帝」又訛「文帝」，「中二年」又訛「中元年」。漢書高帝紀，元年以懷王柱國共敖爲臨江王，則宋志作臨江國是，漢志作臨江郡者誤。景帝七年復爲臨江國，以廢太子榮爲臨江王，至中二年榮自殺，國除。</span>。晉武帝太康元年改曰新郡，尋復故。宋初領縣九，後州陵、監利度屬巴陵；旌陽文帝元嘉十八年省併枝江。二漢無旌陽，見晉太康地志，疑是吳所立。凡餘六縣。戶一萬四千五百四十四，口七萬五千八十七。
+南郡太守，秦立。漢高帝元年，爲臨江國，景帝中二年復故。<span class="jiaozhusup">「漢高帝」各本作「漢文帝」，「中二年」各本作「中元年」，並據漢書地理志改。漢書地理志南郡下云：「秦置，高帝元年，更爲臨江郡，五年，復故。景帝二年（當作七年），復爲臨江，中二年復故。」宋志略去高帝五年省臨江國復置南郡，景帝七年復爲臨江國一節，「高帝」又訛「文帝」，「中二年」又訛「中元年」。漢書高帝紀，元年以懷王柱國共敖爲臨江王，則宋志作臨江國是，漢志作臨江郡者誤。景帝七年復爲臨江國，以廢太子榮爲臨江王，至中二年榮自殺，國除。</span>晉武帝太康元年改曰新郡，尋復故。宋初領縣九，後州陵、監利度屬巴陵；旌陽文帝元嘉十八年省併枝江。二漢無旌陽，見晉太康地志，疑是吳所立。凡餘六縣。戶一萬四千五百四十四，口七萬五千八十七。
 </p>
 <p class="margin2" id="p3"><a class="gg-link" href="#p3" onclick="return changeColor(this);"></a>
 江陵公相，漢舊縣。
@@ -755,7 +755,7 @@
 略陽侯相。<span class="jiazhu">別見。</span>
 </p>
 <p class="margin2" id="p250"><a class="gg-link" href="#p250" onclick="return changeColor(this);"></a>
-河陽令。<span class="jiazhu">別見。</span><span class="jiaozhusup">「河陽」後天水太守作「阿陽」，疑作阿陽者是。漢志、續漢志、魏書地形志、水經漾水注並作「阿陽」。顏師古漢書高帝紀注云：「阿陽，天水之縣也。今流俗本或作河陽者非。」按阿陽之作河陽，最早見於此志及南齊書州郡志。其後周書獨孤信傳、隋志、元和志、寰宇記並作「河陽」。寰宇記且云：「河陽，漢置縣，在河之西北，故曰河陽。」</span>。
+河陽令。<span class="jiazhu">別見。</span>。<span class="jiaozhusup">「河陽」後天水太守作「阿陽」，疑作阿陽者是。漢志、續漢志、魏書地形志、水經漾水注並作「阿陽」。顏師古漢書高帝紀注云：「阿陽，天水之縣也。今流俗本或作河陽者非。」按阿陽之作河陽，最早見於此志及南齊書州郡志。其後周書獨孤信傳、隋志、元和志、寰宇記並作「河陽」。寰宇記且云：「河陽，漢置縣，在河之西北，故曰河陽。」</span>
 </p>
 <p class="em2" id="p251"><a class="gg-link" href="#p251" onclick="return changeColor(this);"></a>
 建昌太守，孝建元年，刺史朱脩之免軍戶爲永興、安寧二縣，立建昌郡，又立永寧爲昌國郡，並寄治襄陽。昌國後省。徐志，建昌又有永寧縣，今無。領縣二。戶七百三十二，口四千二百六十四。
@@ -929,7 +929,7 @@
 吉陽令，永初郡國云北吉陽，何、徐無。
 </p>
 <p class="em2" id="p308"><a class="gg-link" href="#p308" onclick="return changeColor(this);"></a>
-晉壽太守，晉地記云，孝武太元十五年，梁州刺史周瓊表立<span class="jiaozhusup">「周瓊」各本並作「周馥」。按周馥見晉書周浚傳從弟馥附傳，西晉末爲鎮東將軍、都督揚州諸軍事，未嘗爲梁州刺史。周瓊見晉書周訪傳曾孫瓊附傳，孝武世，代楊亮爲梁州刺史。知周馥爲周瓊之誤，今改正。</span>。何志故屬梓潼。而益州南晉壽郡悉有此諸縣。永初郡國、徐又有南晉壽、南興、樂南、興安縣。何無南興樂，云南晉壽，惠帝立，餘並不注置立。今領縣四。去州陸一千二百。去京都水一萬。
+晉壽太守，晉地記云，孝武太元十五年，梁州刺史周瓊表立。<span class="jiaozhusup">「周瓊」各本並作「周馥」。按周馥見晉書周浚傳從弟馥附傳，西晉末爲鎮東將軍、都督揚州諸軍事，未嘗爲梁州刺史。周瓊見晉書周訪傳曾孫瓊附傳，孝武世，代楊亮爲梁州刺史。知周馥爲周瓊之誤，今改正。</span>何志故屬梓潼。而益州南晉壽郡悉有此諸縣。永初郡國、徐又有南晉壽、南興、樂南、興安縣。何無南興樂，云南晉壽，惠帝立，餘並不注置立。今領縣四。去州陸一千二百。去京都水一萬。
 </p>
 <p class="margin2" id="p309"><a class="gg-link" href="#p309" onclick="return changeColor(this);"></a>
 晉壽令，屬梓潼。何志晉惠帝立。按晉起居注，武帝太康元年，改梓潼之漢壽曰晉壽。漢壽之名，疑是蜀立，云惠帝立，非也。
@@ -1292,7 +1292,7 @@
 宋興令，何志新立。
 </p>
 <p class="em2" id="p429"><a class="gg-link" href="#p429" onclick="return changeColor(this);"></a>
-天水太守，漢武元鼎三年立，明帝改曰漢陽。雍州已有此郡<span class="jiaozhusup">「郡」各本並作「縣」。孫虨宋書考論云：「縣當作郡。」按孫說是，今改正。</span>。永初郡國無。領縣二。戶八百九十三，口五千二百二十八。
+天水太守，漢武元鼎三年立，明帝改曰漢陽。雍州已有此郡。<span class="jiaozhusup">「郡」各本並作「縣」。孫虨宋書考論云：「縣當作郡。」按孫說是，今改正。</span>永初郡國無。領縣二。戶八百九十三，口五千二百二十八。
 </p>
 <p class="margin2" id="p430"><a class="gg-link" href="#p430" onclick="return changeColor(this);"></a>
 阿陽令，漢舊名，晉太康地志無。
