--- a/OEBPS/Text/1300.html
+++ b/OEBPS/Text/1300.html
@@ -80,7 +80,7 @@
 持節都督，無定員。前漢遣使，始有持節。光武建武初，征伐四方，始權時置督軍御史，事竟罷。建安中，魏武帝爲相，始遣大將軍督軍。二十一年，征孫權還，夏侯惇督二十六軍是也。魏文帝黃初二年，始置都督諸州軍事，或領刺史。三年，上軍大將軍曹真都督中外諸軍事，假黃鉞，則總統外內諸軍矣。明帝太和四年，晉宣帝征蜀，加號大都督。高貴公正元二年，晉文帝都督中外諸軍，尋加大都督。晉世則都督諸軍爲上，監諸軍次之，督諸軍爲下。使持節爲上，持節次之，假節爲下。使持節得殺二千石以下；持節殺無官位人，若軍事得與使持節同；假節唯軍事得殺犯軍令者。晉江左以來，都督中外尤重，唯王導居之。宋氏人臣則無也。江夏王義恭假黃鉞。假黃鉞，則專戮節將，非人臣常器矣。
 </p>
 <p class="em2" id="p25"><a class="gg-link" href="#p25" onclick="return changeColor(this);"></a>
-征東將軍，一人。漢獻帝初平三年，馬騰居之。征南將軍，一人。漢光武建武中，岑彭居之。征西將軍，一人。漢光武建武中，馮異居之。征北將軍，一人。魚豢曰：「四征，魏武帝置，秩二千石<span class="jiaozhusup">各本並脫「石」字，據職官分紀補。</span>。黃初中，位次三公。漢舊諸征與偏裨雜號同。」
+征東將軍，一人。漢獻帝初平三年，馬騰居之。征南將軍，一人。漢光武建武中，岑彭居之。征西將軍，一人。漢光武建武中，馮異居之。征北將軍，一人。魚豢曰：「四征，魏武帝置，秩二千石。<span class="jiaozhusup">各本並脫「石」字，據職官分紀補。</span>黃初中，位次三公。漢舊諸征與偏裨雜號同。」
 </p>
 <p class="em2" id="p26"><a class="gg-link" href="#p26" onclick="return changeColor(this);"></a>
 鎮東將軍，一人。後漢末，魏武帝居之。鎮南將軍，一人。後漢末，劉表居之。鎮西將軍，一人。後漢初平三年，韓遂居之。鎮北將軍，一人。
@@ -98,7 +98,7 @@
 左將軍。右將軍。前將軍。後將軍。左將軍以下，周末官，秦、漢並因之，光武建武七年省，魏以來復置。
 </p>
 <p class="em2" id="p31"><a class="gg-link" href="#p31" onclick="return changeColor(this);"></a>
-征虜將軍，漢光武建武中，始以祭遵居之。冠軍將軍，楚懷王以宋義爲卿子冠軍。冠軍之名，自此始也。魏正始中，以文欽爲冠軍將軍、揚州刺史。輔國將軍，漢獻帝以伏完居之。宋太宗泰始四年，改爲輔師，後廢帝元徽二年復故。龍驤將軍，晉武帝始以王濬居之<span class="jiaozhusup">廿二史考異於宋書百官志下寧朔至五威、五武將軍條云：「寧朔將軍，班在五威、五武之上，而前卷敘列將軍獨遺之，此傳寫偶脫一行耳。南齊志，寧朔將軍列於輔國之後。據此志官品先後次之，似寧朔當在龍驤之後矣。」</span>。
+征虜將軍，漢光武建武中，始以祭遵居之。冠軍將軍，楚懷王以宋義爲卿子冠軍。冠軍之名，自此始也。魏正始中，以文欽爲冠軍將軍、揚州刺史。輔國將軍，漢獻帝以伏完居之。宋太宗泰始四年，改爲輔師，後廢帝元徽二年復故。龍驤將軍，晉武帝始以王濬居之。<span class="jiaozhusup">廿二史考異於宋書百官志下寧朔至五威、五武將軍條云：「寧朔將軍，班在五威、五武之上，而前卷敘列將軍獨遺之，此傳寫偶脫一行耳。南齊志，寧朔將軍列於輔國之後。據此志官品先後次之，似寧朔當在龍驤之後矣。」</span>
 </p>
 <p class="em2" id="p32"><a class="gg-link" href="#p32" onclick="return changeColor(this);"></a>
 東中郎將，漢靈帝以董卓居之。南中郎將，漢獻帝建安中，以臨淄侯曹植居之。西中郎將。北中郎將，漢建安中，以鄢陵侯曹彰居之。凡四中郎將，何承天云，並後漢置。
