--- a/OEBPS/Text/1306.html
+++ b/OEBPS/Text/1306.html
@@ -131,7 +131,7 @@
 初，別駕張熙說道濟令糶太倉穀，賊以九月末圍城，至十二月末，廩糧便盡。方明將二千人出城求食，爲賊所敗，匹馬獨還。賊因追之，眾復大集。方明夜於城西縋上，道濟爲設食，饐不能餐，唯泣涕而已。道濟時有疾已篤，自力慰勉之曰：「卿非大丈夫，小敗何苦。賊勢既衰，臺兵垂至，但令卿還，何憂於賊。」即減左右數十人配之。賊城外云：「方明已死，可來取喪。」城中大恐。道濟夜列炬火，方明自出，眾見之乃安。道濟悉出財物於北射堂，令方明募人。時城中或傳道濟已亡，莫有至者。梁雋之說道濟曰：「將軍氣息綿綿，而外論互有同異。今軍師屢敗，妖寇未殄，若一旦不虞，則危禍立至。宜稱小損，聽左右給使暫出，不然敗矣。」道濟從之，即喚左右三十餘人告之曰：「吾疾久，汝等扶侍疲勞。今既小損，各聽歸家休息，喚復還。」給使既出，其父兄皆問：「使君亡來幾日？」子弟皆言：「君漸差，誰言亡者！」傳相告語，城內乃安，由是應募者一日千餘人。十年正月，賊眾大至，攻逼成都。道濟卒，梁雋之與方明等，及其故舊門生數人，共埋尸於後齋。使書與道濟相似者爲教命，酬答籤疏，不異常日，故雖母妻，不知也。
 </p>
 <p class="em2" id="p42"><a class="gg-link" href="#p42" onclick="return changeColor(this);"></a>
-二月，道養於毀金橋升壇郊天，方就柴燎，方明將三千人出擊之。賊列陣營前死戰，日夕乃大敗。臨陣斬僞征虜將軍趙石之等八百餘級，道養等退保廣漢。是月，平西將軍臨川王義慶，以揚武將軍、巴東太守周籍之即本號督巴西梓潼宕渠遂寧巴郡五郡諸軍事、巴西梓潼二郡太守，率平西參軍費淡、龍驤將軍羅猛二千人援成都。廣等屯據廣漢，分守郫川，連營百數，處處屯結。籍之與方明及費淡等攻郫，剋之。廣等退據郡城，傍竹自固。羅猛率隊主王盱等并力追討。張尋自涪城率眾二萬來助廣等，方明、淡斬竹開逕邀之，戰敗，退還郫縣。廣等又移營屯箭竿橋，方明等破其六營，乘勝追奔，逕至廣漢。廣等走還涪及五城。四月十日，發道濟喪。五月，方明進軍向涪城<span class="jiaozhusup">各本並脫「明」字，據通鑑宋文帝元嘉十年補。</span>。張尋、唐頻渡水拒戰，方明擊破之，生擒僞驃騎將軍、雍秦二州刺史司馬龍伸斬之。龍伸，道助也。州吏嚴道度斬嚴遐首，廣等並奔散，涪、蜀皆平。俄而張尋攻破陰平，復與道養合。帛氐奴攻廣漢，費淡督將軍种松等與戰，斬其梁州刺史杜承等百餘級。
+二月，道養於毀金橋升壇郊天，方就柴燎，方明將三千人出擊之。賊列陣營前死戰，日夕乃大敗。臨陣斬僞征虜將軍趙石之等八百餘級，道養等退保廣漢。是月，平西將軍臨川王義慶，以揚武將軍、巴東太守周籍之即本號督巴西梓潼宕渠遂寧巴郡五郡諸軍事、巴西梓潼二郡太守，率平西參軍費淡、龍驤將軍羅猛二千人援成都。廣等屯據廣漢，分守郫川，連營百數，處處屯結。籍之與方明及費淡等攻郫，剋之。廣等退據郡城，傍竹自固。羅猛率隊主王盱等并力追討。張尋自涪城率眾二萬來助廣等，方明、淡斬竹開逕邀之，戰敗，退還郫縣。廣等又移營屯箭竿橋，方明等破其六營，乘勝追奔，逕至廣漢。廣等走還涪及五城。四月十日，發道濟喪。五月，方明進軍向涪城。<span class="jiaozhusup">各本並脫「明」字，據通鑑宋文帝元嘉十年補。</span>張尋、唐頻渡水拒戰，方明擊破之，生擒僞驃騎將軍、雍秦二州刺史司馬龍伸斬之。龍伸，道助也。州吏嚴道度斬嚴遐首，廣等並奔散，涪、蜀皆平。俄而張尋攻破陰平，復與道養合。帛氐奴攻廣漢，費淡督將軍种松等與戰，斬其梁州刺史杜承等百餘級。
 </p>
 <p class="em2" id="p43"><a class="gg-link" href="#p43" onclick="return changeColor(this);"></a>
 九月，益州刺史甄法崇至成都，誅費謙之，<span class="jiaozhusup">「費謙之」即上文之「費謙」，南北朝人名下之「之」字，有時可省去。</span>道濟喪及方明等並東反。道養等領二千餘家逃于郪山，其餘群賊，亦各擁戶藏竄，出爲寇盜不絕。
