--- a/OEBPS/Text/1307.html
+++ b/OEBPS/Text/1307.html
@@ -53,7 +53,7 @@
 邵悉心政事，精力絕人。及誅劉藩，邵時在西州直廬，即夜誡眾曹曰：「大軍當大討，可各修舟船倉庫，及曉取辦。」旦日，帝求諸簿署，應時即至，怪問其速，諸曹答曰：「昨夜受張主簿處分。」帝曰：「張邵可謂同我憂慮矣。」九年，世子始開征虜府，補邵錄事參軍，轉號中軍，遷諮議參軍，領記室。
 </p>
 <p class="em2" id="p16"><a class="gg-link" href="#p16" onclick="return changeColor(this);"></a>
-十二年，武帝北伐，邵請見，曰：「人生危脆，必當遠慮。穆之若邂逅不幸，誰可代之？尊業如此，苟有不諱，事將如何？」帝曰：「此自委穆之及卿耳。」青州刺史檀祗鎮廣陵，時滁中結聚亡命<span class="jiaozhusup">「滁中」各本並作「滁州」，據南史改。按時無「滁州」，當作「滁中」。</span>，祗率眾掩之，劉穆之恐以爲變，將發軍。邵曰：「檀韶據中流，道濟爲軍首，若疑狀發露，恐生大變。宜且遣慰勞，以觀其意。」既而祗果不動。及穆之卒，朝廷恇懼，便欲發詔以司馬徐羨之代之，邵對曰：「今誠急病，任終在徐，且世子無專命，宜須北咨。」信反，方使世子出命曰：「朝廷及大府事，悉咨徐司馬，其餘啟還。」武帝重其臨事不撓，有大臣體。十四年，以世子鎮荊州，邵諫曰：「儲貳之重，四海所繫，不宜處外，敢以死請。」從之。
+十二年，武帝北伐，邵請見，曰：「人生危脆，必當遠慮。穆之若邂逅不幸，誰可代之？尊業如此，苟有不諱，事將如何？」帝曰：「此自委穆之及卿耳。」青州刺史檀祗鎮廣陵，時滁中結聚亡命，<span class="jiaozhusup">「滁中」各本並作「滁州」，據南史改。按時無「滁州」，當作「滁中」。</span>祗率眾掩之，劉穆之恐以爲變，將發軍。邵曰：「檀韶據中流，道濟爲軍首，若疑狀發露，恐生大變。宜且遣慰勞，以觀其意。」既而祗果不動。及穆之卒，朝廷恇懼，便欲發詔以司馬徐羨之代之，邵對曰：「今誠急病，任終在徐，且世子無專命，宜須北咨。」信反，方使世子出命曰：「朝廷及大府事，悉咨徐司馬，其餘啟還。」武帝重其臨事不撓，有大臣體。十四年，以世子鎮荊州，邵諫曰：「儲貳之重，四海所繫，不宜處外，敢以死請。」從之。
 </p>
 <p class="em2" id="p17"><a class="gg-link" href="#p17" onclick="return changeColor(this);"></a>
 文帝爲中郎將、荊州刺史，以邵爲司馬，領南郡相，眾事悉決於邵。武帝受命，以佐命功，封臨沮伯。分荊州立湘州，以邵爲刺史。將署府，邵以爲長沙內地，非用武之國，置署妨人，乖爲政要。帝從之。謝晦反，遺書要邵，邵不發函，馳使呈帝。
