--- a/OEBPS/Text/1311.html
+++ b/OEBPS/Text/1311.html
@@ -23,7 +23,7 @@
 高祖伐羌，假藩寧朔將軍，參太尉軍事，統別軍。至河東，暴風漂藩重艦渡北岸，<span class="jiaozhusup">「藩」各本及元龜七二四同，元龜三四四作「輜」，疑是。</span>索虜牽得此艦，取其器物。藩氣厲心憤，率左右十二人，乘小船逕往河北。賊騎五六百見藩來，並笑之。藩素善射，登岸射，賊應弦而倒者十許人，賊皆奔退，悉收所失而反。又遣藩及朱超石等追索虜於半城，虜騎數重，藩及超石所領皆割配新軍，不盈五千，率厲力戰，大破之。又與超石等擊姚業於蒲阪，超石失利退還，藩收超石所捨資實，徐行而反，業不敢追。
 </p>
 <p class="em2" id="p6"><a class="gg-link" href="#p6" onclick="return changeColor(this);"></a>
-高祖還彭城，參相國軍事。時盧循餘黨與蘇淫賊大相聚結，<span class="jiaozhusup">「蘇淫」元龜六七一作「蘇溪」。</span>以爲始興相。論平司馬休之及廣固功，封陽山縣男，食邑五百戶。少帝景平元年，坐守東府，開掖門，免官，尋復其職。元嘉四年<span class="jiaozhusup">各本並脫「元嘉」二字，按上有少帝景平元年，下有七年，景平無四年，當爲文帝元嘉四年，今補「元嘉」二字。</span>，遷建武將軍、江夏內史。七年，徵爲游擊將軍。到彥之北伐，南兗州刺史長沙王義欣進據彭城，藩出戍廣陵，行府州事。轉太子左衛率。十年，卒，時年六十二，諡曰壯侯。
+高祖還彭城，參相國軍事。時盧循餘黨與蘇淫賊大相聚結，<span class="jiaozhusup">「蘇淫」元龜六七一作「蘇溪」。</span>以爲始興相。論平司馬休之及廣固功，封陽山縣男，食邑五百戶。少帝景平元年，坐守東府，開掖門，免官，尋復其職。元嘉四年，<span class="jiaozhusup">各本並脫「元嘉」二字，按上有少帝景平元年，下有七年，景平無四年，當爲文帝元嘉四年，今補「元嘉」二字。</span>遷建武將軍、江夏內史。七年，徵爲游擊將軍。到彥之北伐，南兗州刺史長沙王義欣進據彭城，藩出戍廣陵，行府州事。轉太子左衛率。十年，卒，時年六十二，諡曰壯侯。
 </p>
 <p class="em2" id="p7"><a class="gg-link" href="#p7" onclick="return changeColor(this);"></a>
 子隆世嗣，官至西陽太守。隆世卒，子乾秀嗣。藩庶子六十人，多不遵法度。藩第十四子遵世，爲臧質寧遠參軍，去職還家，與孔熙先同逆謀，太祖以藩功臣，不欲顯其事，使江州以他事收殺之。二十四年，藩第十六子誕世、第十七子茂世率群從二百餘人攻破郡縣，殺太守桓隆之、令諸葛和之，欲奉庶人義康。值交州刺史檀和之至豫章，討平之。誕世兄車騎參軍新興太守景世、景世弟寶世，詣廷尉歸罪，並徙遠州。乾秀奪國。世祖初，徙者並得還。
@@ -50,7 +50,7 @@
 垣護之字彥宗，略陽桓道人也。祖敞，仕苻氏，爲長樂國郎中令。慕容德入青州，以敞爲車騎長史。德兄子超襲僞位，伯父遵、父苗復見委任。遵爲尚書，苗京兆太守。高祖圍廣固，遵、苗踰城歸降，並以爲太尉行參軍。太祖元嘉中，遵爲員外散騎常侍，苗屯騎校尉。
 </p>
 <p class="em2" id="p15"><a class="gg-link" href="#p15" onclick="return changeColor(this);"></a>
-護之少倜儻，不拘小節，形狀短陋，而氣榦強果。從高祖征司馬休之，爲世子中軍府長史，兼行參軍。永初中，補奉朝請。元嘉初，爲殿中將軍。隨到彥之北伐，彥之將回師，護之爲書諫曰：「外聞節下欲回師反旆，竊所不同。何者？殘虜畏威，望風奔迸，八載侵地，不戰克復。方當長驅朔漠，窮掃遺醜，況乃自送，無假遠勞。宜使竺靈秀速進滑臺助朱脩之固守，節下大軍進擬河北，則牢、洛遊魂<span class="jiaozhusup">三朝本作「牢洛」，北監本、毛本、殿本、局本作「牢落」。按三朝本是。牢謂虎牢，洛謂洛陽。「牢洛」本書屢見。</span>，自然奔退。且昔人有連年攻戰，失眾乏糧者，猶張膽爭前，莫肯輕退。況今青州豐穰，濟漕流通，士馬飽逸，威力無損。若空棄滑臺，坐喪成業，豈是朝廷受任之旨。」彥之不納，散敗而歸。太祖聞而善之，以補江夏王義恭征北行參軍、北高平太守。以載禁物繫尚方，久之蒙宥。又補衡陽王義季征北長流參軍，遷宣威將軍、鍾離太守。
+護之少倜儻，不拘小節，形狀短陋，而氣榦強果。從高祖征司馬休之，爲世子中軍府長史，兼行參軍。永初中，補奉朝請。元嘉初，爲殿中將軍。隨到彥之北伐，彥之將回師，護之爲書諫曰：「外聞節下欲回師反旆，竊所不同。何者？殘虜畏威，望風奔迸，八載侵地，不戰克復。方當長驅朔漠，窮掃遺醜，況乃自送，無假遠勞。宜使竺靈秀速進滑臺助朱脩之固守，節下大軍進擬河北，則牢、洛遊魂，<span class="jiaozhusup">三朝本作「牢洛」，北監本、毛本、殿本、局本作「牢落」。按三朝本是。牢謂虎牢，洛謂洛陽。「牢洛」本書屢見。</span>自然奔退。且昔人有連年攻戰，失眾乏糧者，猶張膽爭前，莫肯輕退。況今青州豐穰，濟漕流通，士馬飽逸，威力無損。若空棄滑臺，坐喪成業，豈是朝廷受任之旨。」彥之不納，散敗而歸。太祖聞而善之，以補江夏王義恭征北行參軍、北高平太守。以載禁物繫尚方，久之蒙宥。又補衡陽王義季征北長流參軍，遷宣威將軍、鍾離太守。
 </p>
 <p class="em2" id="p16"><a class="gg-link" href="#p16" onclick="return changeColor(this);"></a>
 隨王玄謨入河，玄謨攻滑臺，護之百舸爲前鋒，進據石濟。石濟在滑臺西南百二十里。及虜救至，又馳書勸玄謨急攻，曰：「昔武皇攻廣固，死沒者亦眾。況事殊曩日，豈得計士眾傷疲，願以屠城爲急。」不從。玄謨敗退，不暇報護之。護之聞知，而虜悉已牽玄謨水軍大艚，連以鐵鎖三重斷河，欲以絕護之還路。<span class="jiaozhusup">各本並脫「還」字，據南史、藝文類聚七一引、御覽七七０引、元龜四一四、通鑑宋文帝元嘉二十七年補。</span>河水迅急，護之中流而下，每至鐵鎖，以長柯斧斷之，虜不能禁。唯失一舸，餘舸並全。留戍靡溝城。
@@ -68,7 +68,7 @@
 弟詢之，驍敢有氣力，元凶夙聞其名，以副輔國將軍張柬。時張超首行大逆，<span class="jiaozhusup">「張超」二凶傳作「張超之」。南北朝人名後之「之」字，有時可省去。</span>亦領軍隸柬。詢之規殺之，慮柬不同，<span class="jiaozhusup">各本並脫「柬不同」三字，據南史、元龜三七一補。</span>柬宿有此志，又未測詢之同否，<span class="jiaozhusup">各本並脫「未」字，據元龜三七一補。</span>互相觀察。會超來論事，柬色動，詢之覺之，即共定謀，遣信召超。超疑之不至，改宿他所。詢之不知其移，逕斫之，殺其僕於床，因與柬南奔。柬溺淮死，詢之得至。時世祖已即位，以爲積弩將軍。梁山之役力戰，爲流矢所中，死，追贈冀州刺史。
 </p>
 <p class="em2" id="p21"><a class="gg-link" href="#p21" onclick="return changeColor(this);"></a>
-二年，護之坐論功挾私，免官。復爲游擊將軍。俄遷大司馬<span class="jiaozhusup">廿二史考異云：「大司馬下，當有脫文，是時江夏王義恭以大司馬領南徐州刺史，除護之爲大司馬僚佐兼郡守，非遷大司馬也。」</span>，輔國將軍，領南東海太守。未拜，復督青冀二州諸軍事、寧遠將軍、青冀二州刺史，鎮歷城。明年，進號寧朔將軍，進督徐州之東莞東安二郡軍事。<span class="jiaozhusup">各本「東安」二字並空白，據錢氏考異說補。廿二史考異云：「時垣護之以青、冀二州刺史鎮歷城。故事，青州刺史常兼督徐州之東安、東莞二郡，則此闕文，當爲『東安』二字。」孫虨宋書考論亦云：「闕處是『東安』二字，杜驥、顏師伯傳可證。」</span>世祖以歷下要害，欲移青州并鎮歷城，議者多異。護之曰：「青州北有河、濟，又多陂澤，非虜所向。每來寇掠，必由歷城，二州并鎮，此經遠之略也。北又近河，歸順者易，近息民患，遠申王威，安邊之上計也。」由是遂定。
+二年，護之坐論功挾私，免官。復爲游擊將軍。俄遷大司馬，<span class="jiaozhusup">廿二史考異云：「大司馬下，當有脫文，是時江夏王義恭以大司馬領南徐州刺史，除護之爲大司馬僚佐兼郡守，非遷大司馬也。」</span>輔國將軍，領南東海太守。未拜，復督青冀二州諸軍事、寧遠將軍、青冀二州刺史，鎮歷城。明年，進號寧朔將軍，進督徐州之東莞東安二郡軍事。<span class="jiaozhusup">各本「東安」二字並空白，據錢氏考異說補。廿二史考異云：「時垣護之以青、冀二州刺史鎮歷城。故事，青州刺史常兼督徐州之東安、東莞二郡，則此闕文，當爲『東安』二字。」孫虨宋書考論亦云：「闕處是『東安』二字，杜驥、顏師伯傳可證。」</span>世祖以歷下要害，欲移青州并鎮歷城，議者多異。護之曰：「青州北有河、濟，又多陂澤，非虜所向。每來寇掠，必由歷城，二州并鎮，此經遠之略也。北又近河，歸順者易，近息民患，遠申王威，安邊之上計也。」由是遂定。
 </p>
 <p class="em2" id="p22"><a class="gg-link" href="#p22" onclick="return changeColor(this);"></a>
 大明三年，徵爲右衛將軍。還，於道聞司空竟陵王誕於廣陵反叛，護之即率部曲受車騎大將軍沈慶之節度。事平，轉西陽王子尚撫軍司馬、臨淮太守。明年，出爲使持節、督豫司二州諸軍事、輔國將軍、豫州刺史、淮南太守。復隸沈慶之伐西陽蠻。護之所蒞多聚斂，賄貨充積。七年，坐下獄，免官。明年，復起爲太中大夫，未拜，其年卒，時年七十，諡曰壯侯。前廢帝永光元年，追贈冠軍將軍、豫州刺史。
@@ -92,7 +92,7 @@
 大明末，除員外散騎侍郎，仍除宣威將軍、隨郡太守。未行，太宗即位，四方反叛。進興世號龍驤將軍，領水軍，距南賊於赭圻。築二城於湖口，<span class="jiaozhusup">按下文云興世攻克二城，則此二城乃非興世所築。孫虨宋書考論云：「築上當云賊。鄧琬傳曰，孫沖之等於湖白口築二城。」</span>僞龍驤將軍陳慶領舸於前爲游軍。興世率龍驤將軍佼長生、董凱之攻克二城，因擊慶，慶戰大敗，投水死者數千人。時臺軍據赭圻，南賊屯鵲尾，相持久不決。興世建議曰：「賊據上流，兵強地勝。我今雖相持有餘，而制敵不足。今若以兵數千，潛出其上，因險自固，隨宜斷截，使其首尾周遑，進退疑沮，中流一梗，糧運自艱。制賊之奇，莫過於此。」沈攸之、吳喜並贊其計。時豫州刺史殷琰據壽陽同逆，<span class="jiaozhusup">「殷琰」下各本並衍「之」字，今刪去。</span>爲劉勉所攻，南賊遣龐孟虯率軍助琰，劉勉遣信求援甚急。建安王休仁欲遣興世救之，問沈攸之。攸之曰：「孟虯蟻寇，必無能爲。遣別將馬步數千，足以相制。若有意外，且以江西餌之。上流若捷，<span class="jiaozhusup">「捷」各本並作「據」，據元龜四０三改。</span>不憂不殄。興世之行，是安危大機，必不可輟。」乃遣段佛榮等援勉。
 </p>
 <p class="em2" id="p29"><a class="gg-link" href="#p29" onclick="return changeColor(this);"></a>
-興世欲率所領直取大雷，而軍旅未集，不足分張。會薛索兒平定，太宗使張永以步騎五千留戍盱眙，餘眾二萬人悉遣南討。山陽又尋平，徵阮佃夫所領諸軍，悉還南伐，眾軍大集。乃分戰士七千配興世，興世乃令輕舸泝流而上，旋復回還，一二日中，輒復如此，使賊不爲之備。劉胡聞興世欲上，笑之曰：「我尚不敢越彼下取揚州，張興世何物人，欲輕據我上！」興世謂攸之等曰：「上流唯有錢谿可據，地既險要，江又甚狹，去大眾不遠，應赴無難。江有洄洑，船下必來泊，岸有橫浦，可以藏船舸，二三爲宜。」乃夜渡湖口，至鵲頭<span class="jiaozhusup">「鵲頭」各本並作「散頭」，據元龜二一六改。</span>，因復回下疑之。其夜四更，值風，仍舉颿直前。賊亦遣胡靈秀諸軍，於東岸相翼而上。興世夕住景江浦宿，賊亦不進。夜潛遣黃道標領七十舸，徑據錢谿，營立城柴。明旦，興世與軍齊集。停一宿，劉胡自領水步二十六軍平旦來攻。將士欲迎擊之，興世禁曰：<span class="jiaozhusup">「禁」字下，元龜二一六、通鑑宋明帝泰始二年有「之」字，是。</span>「賊來尚遠，而氣盛矢驟，驟既力盡，盛亦易衰，此曹劌之所以破齊也。」令將士不得妄動，治城如故。俄而賊來轉近，舫入洄洑，興世乃命壽寂之、任農夫率壯士數百擊之，眾軍相繼進，胡於是敗走。斬級數百，投水者甚眾，胡收軍而下。
+興世欲率所領直取大雷，而軍旅未集，不足分張。會薛索兒平定，太宗使張永以步騎五千留戍盱眙，餘眾二萬人悉遣南討。山陽又尋平，徵阮佃夫所領諸軍，悉還南伐，眾軍大集。乃分戰士七千配興世，興世乃令輕舸泝流而上，旋復回還，一二日中，輒復如此，使賊不爲之備。劉胡聞興世欲上，笑之曰：「我尚不敢越彼下取揚州，張興世何物人，欲輕據我上！」興世謂攸之等曰：「上流唯有錢谿可據，地既險要，江又甚狹，去大眾不遠，應赴無難。江有洄洑，船下必來泊，岸有橫浦，可以藏船舸，二三爲宜。」乃夜渡湖口，至鵲頭，<span class="jiaozhusup">「鵲頭」各本並作「散頭」，據元龜二一六改。</span>因復回下疑之。其夜四更，值風，仍舉颿直前。賊亦遣胡靈秀諸軍，於東岸相翼而上。興世夕住景江浦宿，賊亦不進。夜潛遣黃道標領七十舸，徑據錢谿，營立城柴。明旦，興世與軍齊集。停一宿，劉胡自領水步二十六軍平旦來攻。將士欲迎擊之，興世禁曰：「<span class="jiaozhusup">「禁」字下，元龜二一六、通鑑宋明帝泰始二年有「之」字，是。</span>賊來尚遠，而氣盛矢驟，驟既力盡，盛亦易衰，此曹劌之所以破齊也。」令將士不得妄動，治城如故。俄而賊來轉近，舫入洄洑，興世乃命壽寂之、任農夫率壯士數百擊之，眾軍相繼進，胡於是敗走。斬級數百，投水者甚眾，胡收軍而下。
 </p>
 <p class="em2" id="p30"><a class="gg-link" href="#p30" onclick="return changeColor(this);"></a>
 時興世城壘未固，司徒建安王休仁慮賊并力更攻錢谿，欲分其形勢，命沈攸之、吳喜、佼長生、劉靈遺等以皮艦二十，攻賊濃湖，苦戰連日，斬獲千數。是日，劉胡果率眾軍，欲更攻興世。未至錢谿數十里，袁顗以濃湖之急遽追之，錢溪城柴由此得立。賊連戰轉敗，興世又遏其糧道，尋陽遣運至南陵，不敢下，賊眾漸饑。劉胡乃遣顗安北府司馬、僞右軍沈仲玉領千人步取南陵，迎接糧運。仲玉至南陵，領米三十萬斛，錢布數十舫，豎榜爲城，規欲突過。行至貴口，不敢進，遣間信報胡，令遣重軍援接。興世、壽寂之、任農夫、李安民等三千人至貴口擊之，與仲玉相值。交戰盡日，仲玉走還顗營，悉虜其資實，賊眾大敗，胡棄軍遁走，顗仍亦奔散。興世率軍追討，與吳喜共平江陵。遷左軍將軍，尋爲督豫司二州南豫州之梁郡諸軍事，<span class="jiaozhusup">「之梁」二字，各本並作「六」一字。孫虨宋書考論云：「六字當作之梁二字。據殷琰及山陽王休祐傳，豫州刺史必帶督南豫州之梁郡。梁郡即壽春，爲豫州治，而又屬南豫不屬豫州故也。」按孫說是，今改正。</span>封作唐縣侯，食邑千戶。
