--- a/OEBPS/Text/1315.html
+++ b/OEBPS/Text/1315.html
@@ -17,7 +17,7 @@
 子山士，<span class="jiaozhusup">「山士」殿本作「󺦋」，各本作「勰」，不成字。本書褚叔度傳：「孔季恭子山士。」符瑞志下，元嘉二十年，吳興太守孔山士。二凶傳有吳興太守孔山士。此山士二字，誤併成「勰」。今改正。</span>歷顯位，侍中，會稽太守，坐小弟駕部郎道穰逼略良家子女，白衣領郡。元嘉二十七年，卒官。
 </p>
 <p class="em2" id="p4"><a class="gg-link" href="#p4" onclick="return changeColor(this);"></a>
-弟靈符，元嘉末，爲南譙王義宣司空長史、南郡太守，尚書吏部郎。世祖大明初，自侍中爲輔國將軍、郢州刺史。入爲丹陽尹。山陰縣土境褊狹，民多田少，靈符表徙無貲之家於餘姚、鄞、鄮三縣界，墾起湖田。上使公卿博議，太宰江夏王義恭議曰：「夫訓農修本，有國所同，土著之民，習翫日久，如京師無田，不聞徙居他縣。尋山陰豪族富室，頃畝不少，貧者肆力，非爲無處，耕起空荒，無救災歉。又緣湖居民，魚鴨爲業，及有居肆，理無樂徙。」尚書令柳元景、右僕射劉秀之、尚書王瓚之、顧凱之、顏師伯、嗣湘東王彧議曰：<span class="jiaozhusup">孫虨宋書考論云：「嗣字不瞭，疑衛尉字之誤。時太宗正爲衛尉。」</span>「富戶溫房，無假遷業；窮身寒室，必應徙居。葺宇疏皋，產粒無待，資公則公未易充，課私則私卒難具。生計既完，畬功自息，宜募亡叛通卹及與樂田者，其往經創，須粗修立，然後徙居。」侍中沈懷文、王景文、黃門侍郎劉敳、郄顒議曰：「百姓雖不親農，不無資生之路，若驅以就田，則坐相違奪。且鄞等三縣，去治並遠，既安之民，忽徙他邑，新垣未立，舊居已毀，去留兩困，無以自資。謂宜適任民情，從其所樂，開宥逋亡，且令就業，若審成腴壤，然後議遷。」太常王玄謨議曰：「小民貧匱，遠就荒疇，去舊即新，糧種俱闕，習之既難，勸之未易。謂宜微加資給，使得肆勤，明力田之賞，申怠惰之罰。」光祿勳王昇之議曰：「遠廢之疇，方翦荊棘，率課窮乏，其事彌難，資徙粗立，<span class="jiaozhusup">「徙」各本並作「徒」，據通典食貨典、元龜四八六改。</span>徐行無晚。」上違議，從其徙民，並成良業。
+弟靈符，元嘉末，爲南譙王義宣司空長史、南郡太守，尚書吏部郎。世祖大明初，自侍中爲輔國將軍、郢州刺史。入爲丹陽尹。山陰縣土境褊狹，民多田少，靈符表徙無貲之家於餘姚、鄞、鄮三縣界，墾起湖田。上使公卿博議，太宰江夏王義恭議曰：「夫訓農修本，有國所同，土著之民，習翫日久，如京師無田，不聞徙居他縣。尋山陰豪族富室，頃畝不少，貧者肆力，非爲無處，耕起空荒，無救災歉。又緣湖居民，魚鴨爲業，及有居肆，理無樂徙。」尚書令柳元景、右僕射劉秀之、尚書王瓚之、顧凱之、顏師伯、嗣湘東王彧議曰：「<span class="jiaozhusup">孫虨宋書考論云：「嗣字不瞭，疑衛尉字之誤。時太宗正爲衛尉。」</span>富戶溫房，無假遷業；窮身寒室，必應徙居。葺宇疏皋，產粒無待，資公則公未易充，課私則私卒難具。生計既完，畬功自息，宜募亡叛通卹及與樂田者，其往經創，須粗修立，然後徙居。」侍中沈懷文、王景文、黃門侍郎劉敳、郄顒議曰：「百姓雖不親農，不無資生之路，若驅以就田，則坐相違奪。且鄞等三縣，去治並遠，既安之民，忽徙他邑，新垣未立，舊居已毀，去留兩困，無以自資。謂宜適任民情，從其所樂，開宥逋亡，且令就業，若審成腴壤，然後議遷。」太常王玄謨議曰：「小民貧匱，遠就荒疇，去舊即新，糧種俱闕，習之既難，勸之未易。謂宜微加資給，使得肆勤，明力田之賞，申怠惰之罰。」光祿勳王昇之議曰：「遠廢之疇，方翦荊棘，率課窮乏，其事彌難，資徙粗立，<span class="jiaozhusup">「徙」各本並作「徒」，據通典食貨典、元龜四八六改。</span>徐行無晚。」上違議，從其徙民，並成良業。
 </p>
 <p class="em2" id="p5"><a class="gg-link" href="#p5" onclick="return changeColor(this);"></a>
 靈符自丹陽出爲會稽太守，尋加豫章王子尚撫軍長史。靈符家本豐，產業甚廣，又於永興立墅，周回三十三里，水陸地二百六十五頃，含帶二山，又有果園九處。爲有司所糾，詔原之，而靈符答對不實，坐以免官。後復舊官，又爲尋陽王子房右軍長史，太守如故。愨實有材幹，不存華飾，每所蒞官，政績修理。前廢帝景和中，犯忤近臣，爲所讒搆，遣鞭殺之。二子湛之、淵之，於都賜死。太宗即位，追贈靈符金紫光祿大夫。
@@ -29,7 +29,7 @@
 羊玄保，太山南城人也。祖楷，尚書都官郎。父綏，中書侍郎。
 </p>
 <p class="em2" id="p8"><a class="gg-link" href="#p8" onclick="return changeColor(this);"></a>
-玄保起家楚臺太常博士，遭母憂，服闕，右將軍何無忌、前將軍諸葛長民俱板爲參軍，並不就。除臨安令。劉穆之舉爲高祖鎮軍參軍，庫部郎，永世令。復爲高祖太尉參軍，轉主簿，丹陽丞。少帝景平二年，入爲尚書右丞，轉左丞，司徒右長史。<span class="jiaozhusup">各本並脫「右」字，據南史補。按下有左長史庾登之，則此當有「右」字。</span>府公王弘甚知重之，謂左長史庾登之、吏部尚書王准之曰：<span class="jiaozhusup">「准之」各本並作「淮之」，據本書卷六十王准之傳改。</span>「卿二賢明美朗識，會悟多通，然弘懿之望，故當共推羊也。」頃之，入爲黃門侍郎。
+玄保起家楚臺太常博士，遭母憂，服闕，右將軍何無忌、前將軍諸葛長民俱板爲參軍，並不就。除臨安令。劉穆之舉爲高祖鎮軍參軍，庫部郎，永世令。復爲高祖太尉參軍，轉主簿，丹陽丞。少帝景平二年，入爲尚書右丞，轉左丞，司徒右長史。<span class="jiaozhusup">各本並脫「右」字，據南史補。按下有左長史庾登之，則此當有「右」字。</span>府公王弘甚知重之，謂左長史庾登之、吏部尚書王准之曰：「<span class="jiaozhusup">「准之」各本並作「淮之」，據本書卷六十王准之傳改。</span>卿二賢明美朗識，會悟多通，然弘懿之望，故當共推羊也。」頃之，入爲黃門侍郎。
 </p>
 <p class="em2" id="p9"><a class="gg-link" href="#p9" onclick="return changeColor(this);"></a>
 善弈棋，棋品第三，太祖與賭郡戲，勝，以補宣城太守。先是，劉式之爲宣城，立吏民亡叛制，一人不禽，符伍里吏送州作部，若獲者賞位二階。玄保以爲非宜，陳之曰：「臣伏尋亡叛之由，皆出於窮逼，未有足以推存而樂爲此者也。今立殊制，於事爲苦。臣聞苦節不可貞，懼致流弊。昔龔遂譬民於亂繩，緩之然後可理，黃霸以寬和爲用，不以嚴刻爲先。臣愚以謂單身逃役，便爲盡戶。今一人不測，坐者甚多，既憚重負，各爲身計，牽挽逃竄，必致繁滋。又能禽獲叛身，類非謹惜，既無堪能，坐陵勞吏，名器虛假，所妨實多，將階級不足供賞，服勤無以自勸。又尋此制，施一邦而已，若其是邪，則應與天下爲一，若其非邪，亦不宜獨行一郡。民離憂患，其弊將甚。臣忝守所職，懼難遵用，致率管穴，冒以陳聞。」由此此制得停。
