--- a/OEBPS/Text/1317.html
+++ b/OEBPS/Text/1317.html
@@ -38,7 +38,7 @@
 又曰：「凶門柏裝，不出禮典，起自末代，積習生常，遂成舊俗。爰自天子，達于庶人，誠行之有由，卒革必駭。然苟無關於情，而有愆禮度，存之未有所明，去之未有所失，固當式遵先典，釐革後謬，況復兼以游費，實爲民患者乎。凡人士喪儀，多出閭里，每有此須，動十數萬，損民財力，而義無所取。至於寒庶，則人思自竭，雖復室如懸磬，莫不傾產殫財，所謂葬之以禮，其若此乎。謂宜謹遵先典，一罷凶門之式，表以素扇，足以示凶。」
 </p>
 <p class="em2" id="p11"><a class="gg-link" href="#p11" onclick="return changeColor(this);"></a>
-又曰：「昔事故飢荒，米穀綿絹皆貴，其後米價登復，而絹于今一倍。綿絹既貴，蠶業者滋，雖懃厲兼倍，而貴猶不息。愚謂致此，良有其由。昔事故之前，軍器正用鎧而已，至於袍襖裲襠，必俟戰陣，實在庫藏，永無損毀。今儀從直衛及邀羅使命，或有防衛送迎<span class="jiaozhusup">各本並脫「或」字，據元龜四七一補。</span>，悉用袍襖之屬，非唯一府，眾軍皆然。綿帛易敗，勢不支久。又晝以禦寒，夜以寢臥，曾未周年，便自敗裂。每絲綿新登，易折租以市，又諸府競收，動有千萬，<span class="jiaozhusup">「動」各本並作「勳」。張元濟、張森楷校勘記云：「勳當作動。」按二張校是，今改正。</span>積貴不已，實由於斯，私服爲之艱匱，<span class="jiaozhusup">「艱匱」各本並作「難貴」，據元龜四七一改。</span>官庫爲之空盡。愚謂若侍衛所須，固不可廢，其餘則依舊用鎧。小小使命送迎之屬，止宜給仗，不煩鎧襖。用之既簡，則其價自降。」
+又曰：「昔事故飢荒，米穀綿絹皆貴，其後米價登復，而絹于今一倍。綿絹既貴，蠶業者滋，雖懃厲兼倍，而貴猶不息。愚謂致此，良有其由。昔事故之前，軍器正用鎧而已，至於袍襖裲襠，必俟戰陣，實在庫藏，永無損毀。今儀從直衛及邀羅使命，或有防衛送迎，<span class="jiaozhusup">各本並脫「或」字，據元龜四七一補。</span>悉用袍襖之屬，非唯一府，眾軍皆然。綿帛易敗，勢不支久。又晝以禦寒，夜以寢臥，曾未周年，便自敗裂。每絲綿新登，易折租以市，又諸府競收，動有千萬，<span class="jiaozhusup">「動」各本並作「勳」。張元濟、張森楷校勘記云：「勳當作動。」按二張校是，今改正。</span>積貴不已，實由於斯，私服爲之艱匱，<span class="jiaozhusup">「艱匱」各本並作「難貴」，據元龜四七一改。</span>官庫爲之空盡。愚謂若侍衛所須，固不可廢，其餘則依舊用鎧。小小使命送迎之屬，止宜給仗，不煩鎧襖。用之既簡，則其價自降。」
 </p>
 <p class="em2" id="p12"><a class="gg-link" href="#p12" onclick="return changeColor(this);"></a>
 又曰：「夫不恥惡食，唯君子能之。肴饌尚奢，爲日久矣。今雖改張是弘，而此風未革。所甘不過一味，而陳必方丈，適口之外，皆爲悅目之費，富者以之示夸，貧者爲之殫產，眾所同鄙，而莫能獨異。愚謂宜粗爲其品，使奢儉有中，若有不改，加以貶黜，則德儉之化，不日而流。」
