--- a/OEBPS/Text/1326.html
+++ b/OEBPS/Text/1326.html
@@ -41,7 +41,7 @@
 北土舊法，問疾必遣子弟。驥年十三，父使候同郡韋華。華子玄有高名，見而異之，以女妻焉。桂陽公義真鎮長安，辟爲州主簿，後爲義真車騎行參軍，員外散騎侍郎，江夏王義恭撫軍刑獄參軍，尚書都官郎，長沙王義欣後軍錄事參軍。
 </p>
 <p class="em2" id="p12"><a class="gg-link" href="#p12" onclick="return changeColor(this);"></a>
-元嘉七年，隨到彥之入河南，加建武將軍。索虜撤河南戍悉歸河北，彥之使驥守洛陽。洛陽城不治既久，又無糧食，及彥之敗退，驥欲棄城走，慮爲太祖所誅。初，高祖平關洛，<span class="jiaozhusup">「關洛」各本並作「西洛」，據南史改。</span>致鍾虡舊器南還，一大鍾墜洛水。至是太祖遣將姚聳夫領千五百人迎致之。時聳夫政率所領牽鍾於洛水，驥乃誑之曰：「虜既南渡，洛城勢弱，今修理城池，並已堅固，軍糧又足，所乏者人耳。君率眾見就，共守此城，大功既立，取鍾無晚。」聳夫信之，率所領就驥。既至見城不可守，又無糧食，於是引眾去。驥亦委城南奔，白太祖曰：「本欲以死固守，姚聳夫及城便走，人情沮敗，不可復禁。」上大怒，使建威將軍鄭順之殺聳夫於壽陽。聳夫，吳興武康人。勇果有氣力，宋世偏裨小將莫及。始隨到彥之北伐。與虜遇，聳夫手斬託跋燾叔父英文特勤首<span class="jiaozhusup">「特勤」各本並作「特勒」。按「特勒」當作「特勤」，唐突厥闕特勤碑可證。索虜傳作「直懃」，近年出土北魏司馬金龍妻源氏墓誌亦作「直懃」，即特勤之異譯。勤勒形似而訛，今改正。</span>，燾以馬百匹贖之。
+元嘉七年，隨到彥之入河南，加建武將軍。索虜撤河南戍悉歸河北，彥之使驥守洛陽。洛陽城不治既久，又無糧食，及彥之敗退，驥欲棄城走，慮爲太祖所誅。初，高祖平關洛，<span class="jiaozhusup">「關洛」各本並作「西洛」，據南史改。</span>致鍾虡舊器南還，一大鍾墜洛水。至是太祖遣將姚聳夫領千五百人迎致之。時聳夫政率所領牽鍾於洛水，驥乃誑之曰：「虜既南渡，洛城勢弱，今修理城池，並已堅固，軍糧又足，所乏者人耳。君率眾見就，共守此城，大功既立，取鍾無晚。」聳夫信之，率所領就驥。既至見城不可守，又無糧食，於是引眾去。驥亦委城南奔，白太祖曰：「本欲以死固守，姚聳夫及城便走，人情沮敗，不可復禁。」上大怒，使建威將軍鄭順之殺聳夫於壽陽。聳夫，吳興武康人。勇果有氣力，宋世偏裨小將莫及。始隨到彥之北伐。與虜遇，聳夫手斬託跋燾叔父英文特勤首，<span class="jiaozhusup">「特勤」各本並作「特勒」。按「特勒」當作「特勤」，唐突厥闕特勤碑可證。索虜傳作「直懃」，近年出土北魏司馬金龍妻源氏墓誌亦作「直懃」，即特勤之異譯。勤勒形似而訛，今改正。</span>燾以馬百匹贖之。
 </p>
 <p class="em2" id="p13"><a class="gg-link" href="#p13" onclick="return changeColor(this);"></a>
 以驥爲通直郎，射聲校尉，世祖征虜諮議參軍。十七年，出督青冀二州徐州之東莞東安二郡諸軍事、寧遠將軍、青冀二州刺史。在任八年，惠化著於齊土。自義熙至于宋末，刺史唯羊穆之及驥，爲吏民所稱詠。二十四年，徵左軍將軍，兄坦代爲刺史，北土以爲榮焉。坦長子琬爲員外散騎侍郎，太祖嘗有函詔敕坦，琬輒開視。信未發又追取之，敕函已發，大相推檢。丞都答云：「諸郎開視。」上遣主書詰責，驥答曰：「開函是臣第四子季文，伏待刑坐。」上特原不問。二十七年，卒，時年六十四。
