--- a/OEBPS/Text/1327.html
+++ b/OEBPS/Text/1327.html
@@ -32,7 +32,7 @@
 恢之至新安太守，中大夫。恢之弟瓚之，世祖大明中，吏部尚書，金紫光祿大夫，諡曰貞子。瓚之弟昇之，都官尚書。昇之子延之，昇明末，爲尚書左僕射，江州刺史。
 </p>
 <p class="em2" id="p9"><a class="gg-link" href="#p9" onclick="return changeColor(this);"></a>
-何尚之字彥德，廬江灊人也。曾祖準，高尚不應徵辟。祖惔<span class="jiaozhusup">「惔」各本並作「恢」，據晉書何準傳改。洪頤楫諸史考異云：「案晉書何準傳，準三子放、惔、憕。惔官至南康太守。『恢』乃『惔』字之訛。」</span>，南康太守。父叔度，恭謹有行業，姨適沛郡劉璩，與叔度母情愛甚篤，叔度母蚤卒，奉姨有若所生。姨亡，朔望必往致哀，并設祭奠，食並珍新，躬自臨視。若朔望應有公事，則先遣送祭，皆手自料簡，流涕對之，公事畢，即往致哀，以此爲常，至三年服竟。義熙五年，吳興武康縣民王延祖爲劫，父睦以告官。新制，凡劫身斬刑，家人棄市。睦既自告，於法有疑。時叔度爲尚書，議曰：「設法止姦，本於情理，非謂一人爲劫，<span class="jiaozhusup">各本並脫「謂」字，據南史補。</span>闔門應刑。所以罪及同產，欲開其相告，以出爲惡之身。睦父子之至，容可悉共逃亡，而割其天屬，還相縛送，螫毒在手，解腕求全，於情可愍，理亦宜宥。使凶人不容於家，逃刑無所，乃大絕根源也。睦既糾送，則餘人無應復告，並合從原。」從之。<span class="jiaozhusup">各本作「並全之」三字，據南史訂正。</span>後爲金紫光祿大夫，吳郡太守，加秩中二千石。太保王弘稱其清身潔己。元嘉八年，卒。
+何尚之字彥德，廬江灊人也。曾祖準，高尚不應徵辟。祖惔，<span class="jiaozhusup">「惔」各本並作「恢」，據晉書何準傳改。洪頤楫諸史考異云：「案晉書何準傳，準三子放、惔、憕。惔官至南康太守。『恢』乃『惔』字之訛。」</span>南康太守。父叔度，恭謹有行業，姨適沛郡劉璩，與叔度母情愛甚篤，叔度母蚤卒，奉姨有若所生。姨亡，朔望必往致哀，并設祭奠，食並珍新，躬自臨視。若朔望應有公事，則先遣送祭，皆手自料簡，流涕對之，公事畢，即往致哀，以此爲常，至三年服竟。義熙五年，吳興武康縣民王延祖爲劫，父睦以告官。新制，凡劫身斬刑，家人棄市。睦既自告，於法有疑。時叔度爲尚書，議曰：「設法止姦，本於情理，非謂一人爲劫，<span class="jiaozhusup">各本並脫「謂」字，據南史補。</span>闔門應刑。所以罪及同產，欲開其相告，以出爲惡之身。睦父子之至，容可悉共逃亡，而割其天屬，還相縛送，螫毒在手，解腕求全，於情可愍，理亦宜宥。使凶人不容於家，逃刑無所，乃大絕根源也。睦既糾送，則餘人無應復告，並合從原。」從之。<span class="jiaozhusup">各本作「並全之」三字，據南史訂正。</span>後爲金紫光祿大夫，吳郡太守，加秩中二千石。太保王弘稱其清身潔己。元嘉八年，卒。
 </p>
 <p class="em2" id="p10"><a class="gg-link" href="#p10" onclick="return changeColor(this);"></a>
 尚之少時頗輕薄，好摴蒲，既長折節蹈道，以操立見稱。爲陳郡謝混所知，與之遊處。家貧，起爲臨津令。高祖領征西將軍，<span class="jiaozhusup">「征西」各本並作「征南」，據南史改。按時在義熙九年，劉裕兼領荊州。</span>補府主簿。從征長安，以公事免，還都。因患勞疾積年，飲婦人乳，乃得差。以從征之勞，賜爵都鄉侯。少帝即位，爲廬陵王義真車騎諮議參軍。義真與司徒徐羨之、尚書令傅亮等不協，每有不平之言，尚之諫戒，不納。義真被廢，入爲中書侍郎。太祖即位，出爲臨川內史，入爲黃門侍郎，尚書吏部郎，左衛將軍，父憂去職。服闋，復爲左衛，領太子中庶子。尚之雅好文義，從容賞會，甚爲太祖所知。十二年，遷侍中，中庶子如故。尋改領游擊將軍。
@@ -62,7 +62,7 @@
 大明二年，以爲左光祿、開府儀同三司，侍中如故。尚之在家常著鹿皮帽，及拜開府，天子臨軒，百僚陪位，沈慶之於殿廷戲之曰；「今日何不著鹿皮冠？」慶之累辭爵命，朝廷敦勸甚篤，尚之謂曰：「主上虛懷側席，詎宜固辭。」慶之曰：「沈公不效何公，去而復還也。」尚之有愧色。愛尚文義，老而不休，與太常顏延之論議往反，傳於世。立身簡約，車服率素，妻亡不娶，又無姬妾。秉衡當朝，畏遠權柄，親戚故舊，一無薦舉，既以致怨，亦以此見稱。復以本官領中書令。四年，疾篤，詔遣侍中沈懷文、黃門侍郎王釗問疾。薨于位，時年七十九。追贈司空，侍中、中書令如故。諡曰簡穆公。子偃，別有傳。
 </p>
 <p class="em2" id="p19"><a class="gg-link" href="#p19" onclick="return changeColor(this);"></a>
-尚之弟悠之，義興太守，侍中，太常。與琅邪王微相善，悠之卒，微與偃書曰：<span class="jiaozhusup">兩「微」字各本並作「徽」字，據本書王微傳改。孫虨宋書考論云：「按即王微也。徽字誤。」</span>「吾與義興，直恨相知之晚，每惟君子知我。若夫嘉我小善，矜余不能，唯賢叔耳。」悠之弟愉之，新安太守。愉之弟翌之，都官尚書。悠之子顒之，尚太祖第四女臨海惠公主。太宗世，官至通直常侍。
+尚之弟悠之，義興太守，侍中，太常。與琅邪王微相善，悠之卒，微與偃書曰：「<span class="jiaozhusup">兩「微」字各本並作「徽」字，據本書王微傳改。孫虨宋書考論云：「按即王微也。徽字誤。」</span>吾與義興，直恨相知之晚，每惟君子知我。若夫嘉我小善，矜余不能，唯賢叔耳。」悠之弟愉之，新安太守。愉之弟翌之，都官尚書。悠之子顒之，尚太祖第四女臨海惠公主。太宗世，官至通直常侍。
 </p>
 <p class="em2" id="p20"><a class="gg-link" href="#p20" onclick="return changeColor(this);"></a>
 史臣曰：江左以來，樹根本於揚越，任推轂於荊楚。揚土自廬、蠡以北，臨海而極大江；荊部則包括湘、沅，跨巫山而掩鄧塞。民戶境域，過半於天下。晉世幼主在位，政歸輔臣，荊、揚司牧，事同二陝。宋室受命，權不能移，二州之重，咸歸密戚。是以義宣藉西楚強富，因十載之基，嫌隙既樹，遂規問鼎。而建郢分揚，矯枉過直，藩城既剖，盜實人單，閫外之寄，於斯而盡。若長君南面，威刑自出，至親在外，事不患強。若運經盛衰，時艱主弱，雖近臣懷禍，止有外憚，呂宗不競，實由齊、楚，興喪之源，於斯尤著。尚之言并合，可謂識治也矣。
