--- a/OEBPS/Text/1330.html
+++ b/OEBPS/Text/1330.html
@@ -17,7 +17,7 @@
 景平元年，召入，拜尚書吏部郎，遷右衛將軍。出督廣交二州諸軍事、建威將軍、平越中郎將、廣州刺史。嫡母憂去職。服闋，爲侍中。撫軍將軍江夏王義恭鎮江陵，以湛爲使持節、南蠻校尉、領撫軍長史，行府州事。時王弘輔政，而王華、王曇首任事居中，湛自謂才能不後之，不願外出，是行也，謂爲弘等所斥，意甚不平，常曰：「二王若非代邸之舊，無以至此，可謂遭遇風雲。」湛負其志氣，常慕汲黯、崔琰爲人，故名長子曰黯字長孺，第二子曰琰字季珪。琰於江陵病卒，湛求自送喪還都，義恭亦爲之陳請，太祖答義恭曰：「吾亦得湛啟事，爲之酸懷，乃不欲苟違所請。但汝弱年，新涉庶務，八州殷曠，專斷事重，疇諮委仗，不可不得其人，量算二三，未獲便相順許。今答湛啟，權停彼葬。頃朝臣零落相係，寄懷轉寡，湛實國器，吾乃欲引其令還，直以西夏任重，要且停此事耳。汝慶賞黜罰，豫關失得者，必宜悉相委寄。」
 </p>
 <p class="em2" id="p4"><a class="gg-link" href="#p4" onclick="return changeColor(this);"></a>
-義恭性甚狷隘，年又漸長，欲專政事，每爲湛所裁，主佐之間，嫌隙遂構。太祖聞之，密遣使詰讓義恭，并使深加諧緝。義恭具陳湛無居下之禮，又自以年長，未得行意，雖奉詔旨，頗有怨言。上友于素篤，欲加酬順，乃詔之曰：「事至於此，甚爲可歎。當今乏才<span class="jiaozhusup">「乏」各本並作「之」，據殿本南史改。</span>，委授已爾，宜盡相彌縫，取其可取，棄其可棄。汝疏云『泯然無際』，如此甚佳。彼多猜，不可令萬一覺也。汝年已長，漸更事物，且群情矚望，不以幼昧相期，何由故如十歲時，動止諮問。但當今所專，必是小事耳。亦恐量此輕重，未必盡得，彼之疑怨，兼或由此邪。」
+義恭性甚狷隘，年又漸長，欲專政事，每爲湛所裁，主佐之間，嫌隙遂構。太祖聞之，密遣使詰讓義恭，并使深加諧緝。義恭具陳湛無居下之禮，又自以年長，未得行意，雖奉詔旨，頗有怨言。上友于素篤，欲加酬順，乃詔之曰：「事至於此，甚爲可歎。當今乏才，<span class="jiaozhusup">「乏」各本並作「之」，據殿本南史改。</span>委授已爾，宜盡相彌縫，取其可取，棄其可棄。汝疏云『泯然無際』，如此甚佳。彼多猜，不可令萬一覺也。汝年已長，漸更事物，且群情矚望，不以幼昧相期，何由故如十歲時，動止諮問。但當今所專，必是小事耳。亦恐量此輕重，未必盡得，彼之疑怨，兼或由此邪。」
 </p>
 <p class="em2" id="p5"><a class="gg-link" href="#p5" onclick="return changeColor(this);"></a>
 先是，王華既亡，曇首又卒，領軍將軍殷景仁以時賢零落，白太祖徵湛。八年，召爲太子詹事，加給事中、本州大中正，與景仁並被任遇。湛常云：「今世宰相何難，此政可當我南陽郡漢世功曹耳。」明年，景仁轉尚書僕射，領選護軍將軍，湛代爲領軍將軍。十二年，又領詹事。湛與景仁素款，又以其建議徵之，甚相感說。及俱被時遇，猜隙漸生，以景仁專管內任，謂爲間己。時彭城王義康專秉朝權，而湛昔爲上佐，遂以舊情委心自結，欲因宰相之力以回主心，傾黜景仁，獨當時務。義康屢構之於太祖，其事不行。義康僚屬及湛諸附隸潛相約勒，無敢歷殷氏門者。湛黨劉敬文父成未悟其機，詣景仁求郡，敬文遽往謝湛曰：「老父悖耄，遂就殷鐵干祿。由敬文闇淺，上負生成，合門慚懼，無地自處。」敬文之姦諂無愧如此。
