--- a/OEBPS/Text/1331.html
+++ b/OEBPS/Text/1331.html
@@ -8,7 +8,7 @@
 袁淑字陽源，陳郡陽夏人，丹陽尹豹少子也。
 </p>
 <p class="em2" id="p1"><a class="gg-link" href="#p1" onclick="return changeColor(this);"></a>
-少有風氣，年數歲，伯父湛謂家人曰：<span class="jiaozhusup">各本並脫「父」字，據南史補。</span>「此非凡兒。」至十餘歲，爲姑夫王弘所賞。不爲章句之學，而博涉多通，好屬文，辭采遒豔，縱橫有才辯。本州命主簿，著作佐郎，太子舍人，並不就。彭城王義康命爲司徒祭酒。<span class="jiaozhusup">「司徒祭酒」各本並作「軍司祭酒」，據南史改。按時無軍司祭酒之官，而彭城王時爲司徒，據百官志司徒府有祭酒。</span>義康不好文學，雖外相禮接，意好甚疏。劉湛，淑從母兄也，欲其附己，而淑不以爲意，由是大相乖失，以久疾免官。補衡陽王義季右軍主簿，遷太子洗馬，以腳疾不拜。衛軍臨川王義慶雅好文章，請爲諮議參軍。頃之，遷司徒左西屬。出爲宣城太守，入補中書侍郎，以母憂去職。服闋，爲太子中庶子。元嘉二十六年，遷尚書吏部郎。其秋，大舉北伐，淑侍坐從容曰：「今當鳴鑾中岳，席卷趙、魏，檢玉岱宗，今其時也。臣逢千載之會，願上封禪書一篇。」太祖笑曰：「盛德之事，我何足以當之。」出爲始興王征北長史、南東海太守。淑始到府，濬引見，謂曰：「不意舅遂垂屈佐。」淑答曰：「朝廷遣下官，本以光公府望。」還爲御史中丞。
+少有風氣，年數歲，伯父湛謂家人曰：「<span class="jiaozhusup">各本並脫「父」字，據南史補。</span>此非凡兒。」至十餘歲，爲姑夫王弘所賞。不爲章句之學，而博涉多通，好屬文，辭采遒豔，縱橫有才辯。本州命主簿，著作佐郎，太子舍人，並不就。彭城王義康命爲司徒祭酒。<span class="jiaozhusup">「司徒祭酒」各本並作「軍司祭酒」，據南史改。按時無軍司祭酒之官，而彭城王時爲司徒，據百官志司徒府有祭酒。</span>義康不好文學，雖外相禮接，意好甚疏。劉湛，淑從母兄也，欲其附己，而淑不以爲意，由是大相乖失，以久疾免官。補衡陽王義季右軍主簿，遷太子洗馬，以腳疾不拜。衛軍臨川王義慶雅好文章，請爲諮議參軍。頃之，遷司徒左西屬。出爲宣城太守，入補中書侍郎，以母憂去職。服闋，爲太子中庶子。元嘉二十六年，遷尚書吏部郎。其秋，大舉北伐，淑侍坐從容曰：「今當鳴鑾中岳，席卷趙、魏，檢玉岱宗，今其時也。臣逢千載之會，願上封禪書一篇。」太祖笑曰：「盛德之事，我何足以當之。」出爲始興王征北長史、南東海太守。淑始到府，濬引見，謂曰：「不意舅遂垂屈佐。」淑答曰：「朝廷遣下官，本以光公府望。」還爲御史中丞。
 </p>
 <p class="em2" id="p2"><a class="gg-link" href="#p2" onclick="return changeColor(this);"></a>
 時索虜南侵，遂至瓜步，太祖使百官議防禦之術，淑上議曰：
