--- a/OEBPS/Text/1333.html
+++ b/OEBPS/Text/1333.html
@@ -26,7 +26,7 @@
 二十八年夏，虜荊州刺史魯爽及弟秀等，率部曲詣鑠歸順。其年七月，鑠所生吳淑儀薨，鑠歸京師，葬畢，還攝本任。時江夏王義恭領南兗州刺史，鎮盱眙。<span class="jiaozhusup">各本並脫「南」字。按州郡志，元嘉二十八年，南兗州徙治盱眙，是脫「南」字，今據補。</span>丁母憂，還京師。上以兗土彫荒，罷南兗併南徐州，當別置淮南都督住盱眙，開創屯田，應接遠近，欲以授鑠。既而改授散騎常侍、撫軍將軍，領兵戍石頭。
 </p>
 <p class="em2" id="p6"><a class="gg-link" href="#p6" onclick="return changeColor(this);"></a>
-元凶弒立，以爲中軍將軍，護軍、常侍如故。<span class="jiaozhusup">上云爲撫軍將軍，不云爲護軍，蓋護軍爲撫軍之訛。</span>世祖入討，劭屯兵京邑，使鑠巡行撫勞。劭還立南兗，以鑠爲使持節、都督南兗徐兗青冀幽六州諸軍事、征北將軍、開府儀同三司、南兗州刺史<span class="jiaozhusup">「征北將軍」各本並作「征虜將軍」，若稱征虜，則爲降號。今據二凶傳改正。</span>，常侍如故。柳元景至新亭，劭親自攻之，挾鑠自隨。江夏王義恭南奔，使鑠守東府，以腹心防之。進授侍中、驃騎將軍、錄尚書事，餘如故。劭迎蔣侯神於宮內，疏世祖年諱，厭祝祈請，假授位號，使鑠造策文。及義軍入宮，鑠與濬俱歸世祖，濬即伏法，上迎鑠入營。當時倉卒失國璽，事寧，更鑄給之。進侍中、司空，領兵置佐，以國哀未闋，讓侍中。
+元凶弒立，以爲中軍將軍，護軍、常侍如故。<span class="jiaozhusup">上云爲撫軍將軍，不云爲護軍，蓋護軍爲撫軍之訛。</span>世祖入討，劭屯兵京邑，使鑠巡行撫勞。劭還立南兗，以鑠爲使持節、都督南兗徐兗青冀幽六州諸軍事、征北將軍、開府儀同三司、南兗州刺史，<span class="jiaozhusup">「征北將軍」各本並作「征虜將軍」，若稱征虜，則爲降號。今據二凶傳改正。</span>常侍如故。柳元景至新亭，劭親自攻之，挾鑠自隨。江夏王義恭南奔，使鑠守東府，以腹心防之。進授侍中、驃騎將軍、錄尚書事，餘如故。劭迎蔣侯神於宮內，疏世祖年諱，厭祝祈請，假授位號，使鑠造策文。及義軍入宮，鑠與濬俱歸世祖，濬即伏法，上迎鑠入營。當時倉卒失國璽，事寧，更鑄給之。進侍中、司空，領兵置佐，以國哀未闋，讓侍中。
 </p>
 <p class="em2" id="p7"><a class="gg-link" href="#p7" onclick="return changeColor(this);"></a>
 鑠素不推事世祖，又爲元凶所任，上乃以藥內食中毒殺之，時年二十三，追贈侍中、司徒。
@@ -185,7 +185,7 @@
 上與休仁素厚，至於相害，慮在後嗣不安。休仁既死，痛悼甚至，謂人曰：「我與建安年時相鄰，少便狎從。景和、泰始之間，勳誠實重。事計交切，不得不相除。痛念之至，不能自已。今有一事不如與諸侯共說，歡適之方，於今盡矣。」因流涕不自勝。
 </p>
 <p class="em2" id="p59"><a class="gg-link" href="#p59" onclick="return changeColor(this);"></a>
-子伯融，妃殷氏所生。殷氏，吳興太守沖女也。范陽祖翻有醫術，姿貌又美，殷氏有疾，翻入視脈，說之，遂通好。事泄，遣還家賜死。伯融歷南豫州刺史，琅邪、臨淮二郡太守，寧朔將軍，廣州刺史，不之職。廢徙丹楊縣。後廢帝元徽元年，還京邑，襲封始興王<span class="jiaozhusup">張森楷校勘記云：「始興當作始安，休仁降封始安縣王，非始興也。」按州郡志，湘州始建內史領始安子相，即此縣。</span>。弟伯猷，初出繼江夏愍王伯禽，封江夏王，邑二千戶。休仁死後還本，與伯融俱徙丹楊縣。後廢帝元徽元年，賜爵都鄉侯。建平王景素爲逆，楊運長等畏忌宗室，稱詔賜伯融等死。伯融時年十九，伯猷年十一。
+子伯融，妃殷氏所生。殷氏，吳興太守沖女也。范陽祖翻有醫術，姿貌又美，殷氏有疾，翻入視脈，說之，遂通好。事泄，遣還家賜死。伯融歷南豫州刺史，琅邪、臨淮二郡太守，寧朔將軍，廣州刺史，不之職。廢徙丹楊縣。後廢帝元徽元年，還京邑，襲封始興王。<span class="jiaozhusup">張森楷校勘記云：「始興當作始安，休仁降封始安縣王，非始興也。」按州郡志，湘州始建內史領始安子相，即此縣。</span>弟伯猷，初出繼江夏愍王伯禽，封江夏王，邑二千戶。休仁死後還本，與伯融俱徙丹楊縣。後廢帝元徽元年，賜爵都鄉侯。建平王景素爲逆，楊運長等畏忌宗室，稱詔賜伯融等死。伯融時年十九，伯猷年十一。
 </p>
 <p class="em2" id="p60"><a class="gg-link" href="#p60" onclick="return changeColor(this);"></a>
 晉平剌王休祐，文帝第十三子也。
