--- a/OEBPS/Text/1334.html
+++ b/OEBPS/Text/1334.html
@@ -128,7 +128,7 @@
 且以己爲度者，無以自通彼量。渾四游而斡五緯，天道弘也。振河海而載山川，地道厚也。一情紀而合流貫，人靈茂也。昔之通乎此數者，不爲剖判之行，必廣其風度，無挾私殊，博其交道，靡懷曲異。<span class="jiaozhusup">「靡」三朝本、毛本作「唯」，北監本、殿本、局本作「無」，元龜八一六作「靡」。今從元龜改正。</span>故望塵請友，則義士輕身，一遇拜親，則仁人投分。此倫序通允，禮俗平一，上獲其用，下得其和。
 </p>
 <p class="margin2" id="p41"><a class="gg-link" href="#p41" onclick="return changeColor(this);"></a>
-世務雖移，前休未遠，人之適主，吾將反本。夫人之生<span class="jiaozhusup">各本並作「三人至生」，據元龜八一六改。</span>，暫有心識，<span class="jiaozhusup">「心」各本並作「之」，據元龜八一六改。</span>幼壯驟過，衰耗騖及。其間夭鬱，既難勝言，假獲存遂，又云無幾。柔麗之身，亟委土木，剛清之才，遽爲丘壤，回遑顧慕，雖數紀之中爾。以此持榮，曾不可留，以此服道，亦何能平。進退我生，遊觀所達，得貴爲人，將在含理。含理之貴，惟神與交，幸有心靈，義無自惡，偶信天德，逝不上慚。欲使人沈來化，志符往哲，勿謂是賒，日鑿斯密。著通此意，吾將忘老，如曰不然，<span class="jiaozhusup">「曰」各本並作「固」，據元龜八一六改。</span>其誰與歸。偶懷所撰，<span class="jiaozhusup">「偶」各本並作「值」，據元龜八一六改。</span>略布眾條；<span class="jiaozhusup">「條」各本並作「脩」，據元龜八一六改。</span>若備舉情見，顧未書一。贍身之經，別在田家節政；奉終之紀，自著燕居畢義。
+世務雖移，前休未遠，人之適主，吾將反本。夫人之生，<span class="jiaozhusup">各本並作「三人至生」，據元龜八一六改。</span>暫有心識，<span class="jiaozhusup">「心」各本並作「之」，據元龜八一六改。</span>幼壯驟過，衰耗騖及。其間夭鬱，既難勝言，假獲存遂，又云無幾。柔麗之身，亟委土木，剛清之才，遽爲丘壤，回遑顧慕，雖數紀之中爾。以此持榮，曾不可留，以此服道，亦何能平。進退我生，遊觀所達，得貴爲人，將在含理。含理之貴，惟神與交，幸有心靈，義無自惡，偶信天德，逝不上慚。欲使人沈來化，志符往哲，勿謂是賒，日鑿斯密。著通此意，吾將忘老，如曰不然，<span class="jiaozhusup">「曰」各本並作「固」，據元龜八一六改。</span>其誰與歸。偶懷所撰，<span class="jiaozhusup">「偶」各本並作「值」，據元龜八一六改。</span>略布眾條；<span class="jiaozhusup">「條」各本並作「脩」，據元龜八一六改。</span>若備舉情見，顧未書一。贍身之經，別在田家節政；奉終之紀，自著燕居畢義。
 </p>
 <p class="em2" id="p42"><a class="gg-link" href="#p42" onclick="return changeColor(this);"></a>
 劉湛誅，起延之爲始興王濬後軍諮議參軍，御史中丞。在任縱容，無所舉奏。遷國子祭酒、司徒左長史，坐啟買人田，不肯還直，尚書左丞荀赤松奏之曰：「求田問舍，前賢所鄙。延之唯利是視，輕冒陳聞，依傍詔恩，拒捍餘直，垂及周年，猶不畢了，昧利苟得，無所顧忌。延之昔坐事屏斥，復蒙抽進，而曾不悛革，怨誹無已。交遊闒茸，沈迷麴糱，橫興譏謗，詆毀朝士。仰竊過榮，增憤薄之性；私恃顧盻，成強梁之心。外示寡求，內懷奔競，干祿祈遷，不知極已，預讌班觴，肆罵上席。山海含容，每存遵養，愛兼彫蟲，未忍遐棄，而驕放不節，日月彌著。臣聞聲問過情，孟軻所恥，況聲非外來，問由己出，雖心智薄劣，而高自比擬，客氣虛張，曾無愧畏，豈可復弼亮五教，增曜台階。請以延之訟田不實，妄干天聽，以強凌弱，免所居官。」詔可。
