--- a/OEBPS/Text/1335.html
+++ b/OEBPS/Text/1335.html
@@ -14,13 +14,13 @@
 質年始出三十，屢居名郡，涉獵史籍，尺牘便敏，既有氣幹，好言兵權。太祖謂可大任，欲以爲益州事，未行，徵爲使持節、都督徐兗二州諸軍事、寧遠將軍、徐兗二州刺史。在鎮奢費，爵命無章，爲有司所糾，遇赦。與范曄、徐湛之等厚善，曄謀反，量質必與之同，會事發，復爲建威將軍、義興太守。元嘉二十六年，太祖謁京陵，質朝丹徒，與何勗、檀和之並功臣子，時共上禮，太祖設燕盡歡，賜布千匹。
 </p>
 <p class="em2" id="p3"><a class="gg-link" href="#p3" onclick="return changeColor(this);"></a>
-二十七年春，遷南譙王義宣司空司馬、寧朔將軍、南平內史<span class="jiaozhusup">各本並脫「司空」二字，據南史補。</span>。未之職，會索虜大帥拓跋燾圍汝南，汝南戍主陳憲固守告急。太祖遣質輕往壽陽，即統彼軍，與安蠻司馬劉康祖等救憲。虜退走，因使質伐汝南西境刀壁等山蠻，大破之，獲萬餘口，遷太子左衛率。坐前伐蠻，枉殺隊主嚴祖，又納面首生口，不以送臺，免官。是時上大舉北討，質白衣與驃騎司馬王方回等率軍出許、洛，安北司馬王玄謨攻滑臺不拔，質請乘驛代將，太祖不許。
+二十七年春，遷南譙王義宣司空司馬、寧朔將軍、南平內史。<span class="jiaozhusup">各本並脫「司空」二字，據南史補。</span>未之職，會索虜大帥拓跋燾圍汝南，汝南戍主陳憲固守告急。太祖遣質輕往壽陽，即統彼軍，與安蠻司馬劉康祖等救憲。虜退走，因使質伐汝南西境刀壁等山蠻，大破之，獲萬餘口，遷太子左衛率。坐前伐蠻，枉殺隊主嚴祖，又納面首生口，不以送臺，免官。是時上大舉北討，質白衣與驃騎司馬王方回等率軍出許、洛，安北司馬王玄謨攻滑臺不拔，質請乘驛代將，太祖不許。
 </p>
 <p class="em2" id="p4"><a class="gg-link" href="#p4" onclick="return changeColor(this);"></a>
 虜侵徐、豫，拓跋燾率大眾數十萬遂向彭城，以質爲輔國將軍、假節、置佐，率萬人北救。始至盱眙，燾已過淮，冗從僕射胡崇之領質府司馬，崇之副太子積弩〔將軍臧澄之、建威〕將軍毛熙祚亦受統於質。<span class="jiaozhusup">各本並無「將軍臧澄之建威」七字，按文帝紀時臧澄之爲太子積弩將軍，毛熙祚爲建威將軍。今據補。</span>盱眙城東有高山，質慮虜據之，使崇之、澄之二軍營於山上，質營城南。虜攻崇之、澄之二營，崇之等力戰不敵，眾散，並爲虜所殺。虜又攻熙祚，熙祚所領悉北府精兵，幢主李灌率厲將士，殺賊甚多。隊主周胤之、外監楊方生又率射賊，賊垂退，會熙祚被創死，軍遂散亂。其日質案兵不敢救，故三營一時覆沒。<span class="jiaozhusup">「三營」各本並作「二營」，據元龜四四二改。按胡崇之、臧澄之二營，加毛熙祚一營，是三營，下云「三營既敗」可證。</span>初，仇池之平也，以崇之爲龍驤將軍、北秦州刺史，鎮百頃，<span class="jiaozhusup">「鎮」各本並作「宋」，據劉懷肅傳改。</span>行至濁水，爲索虜所克，舉軍敗散，崇之及將佐以下，皆爲虜所執，後得叛還，至是又爲虜所敗焉。熙祚，司州刺史脩之兄子也。崇之、熙祚並贈正員郎，澄之事在祖父燾傳。
 </p>
 <p class="em2" id="p5"><a class="gg-link" href="#p5" onclick="return changeColor(this);"></a>
-三營既敗，其夕質軍亦奔散，棄輜重器甲，單士百人投盱眙<span class="jiaozhusup">「單士百人」，明弘治本、北監本、毛本、殿本、局本作「單七百人」。百衲本所據底本本作「單士百人」，涵芬樓影印時，改從各本。按「單士百人」實不誤，上言質棄輜重器甲，故下言「單士」，單士猶言持輕兵器軍士。</span>，盱眙太守沈璞完爲守戰之備，城內有實力三千，質大喜，因共守。虜初南出，後無資糧，唯以百姓爲命。及過淮，食平越、石鱉二屯穀，至是抄掠無所，人馬饑困，聞盱眙有積粟，欲以爲歸路之資。既破崇之等，一攻城不拔，便引眾南向。城內增修守備，莫不完嚴。
+三營既敗，其夕質軍亦奔散，棄輜重器甲，單士百人投盱眙，<span class="jiaozhusup">「單士百人」，明弘治本、北監本、毛本、殿本、局本作「單七百人」。百衲本所據底本本作「單士百人」，涵芬樓影印時，改從各本。按「單士百人」實不誤，上言質棄輜重器甲，故下言「單士」，單士猶言持輕兵器軍士。</span>盱眙太守沈璞完爲守戰之備，城內有實力三千，質大喜，因共守。虜初南出，後無資糧，唯以百姓爲命。及過淮，食平越、石鱉二屯穀，至是抄掠無所，人馬饑困，聞盱眙有積粟，欲以爲歸路之資。既破崇之等，一攻城不拔，便引眾南向。城內增修守備，莫不完嚴。
 </p>
 <p class="em2" id="p6"><a class="gg-link" href="#p6" onclick="return changeColor(this);"></a>
 二十八年正月初，燾自廣陵北返，便悉力攻盱眙，就質求酒，質封溲便與之。燾怒甚，築長圍，一夜便合，開攻道，趣城東北，運東山土石填之。虜又恐城內水路遁走，乃引大船，欲於君山作浮橋，以絕淮道。城內乘艦逆戰，大破之。明旦，賊更方舫爲桁，桁上各嚴兵自衛。城內更擊不能禁，遂於君山立桁，水陸路並斷。
