--- a/OEBPS/Text/1341.html
+++ b/OEBPS/Text/1341.html
@@ -62,7 +62,7 @@
 始平孝敬王子鸞字孝羽，孝武帝第八子也。
 </p>
 <p class="em2" id="p18"><a class="gg-link" href="#p18" onclick="return changeColor(this);"></a>
-大明四年，年五歲，封襄陽王，食邑二千戶。仍爲東中郎將、吳郡太守。其年，改封新安王，戶邑如先。五年，遷北中郎將、南徐州刺史，領南琅邪太守。母殷淑儀，寵傾後宮，子鸞愛冠諸子，凡爲上所盼遇者，莫不入子鸞之府、國。及爲南徐州，又割吳郡以屬之<span class="jiaozhusup">「吳郡」各本並作「吳都」，據南史、藝文類聚四０引、元龜二七六改。</span>。
+大明四年，年五歲，封襄陽王，食邑二千戶。仍爲東中郎將、吳郡太守。其年，改封新安王，戶邑如先。五年，遷北中郎將、南徐州刺史，領南琅邪太守。母殷淑儀，寵傾後宮，子鸞愛冠諸子，凡爲上所盼遇者，莫不入子鸞之府、國。及爲南徐州，又割吳郡以屬之。<span class="jiaozhusup">「吳郡」各本並作「吳都」，據南史、藝文類聚四０引、元龜二七六改。</span>
 </p>
 <p class="em2" id="p19"><a class="gg-link" href="#p19" onclick="return changeColor(this);"></a>
 六年，丁母憂。追進淑儀爲貴妃，班亞皇后，諡曰宣。葬給轀輬車，虎賁、班劍，鑾輅九旒，黃屋左纛，前後部羽葆、鼓吹。上自臨南掖門，臨過喪車，悲不自勝，左右莫不感動。上痛愛不已，擬漢武李夫人賦，其詞曰：
@@ -74,7 +74,7 @@
 巡靈周之殘冊，略鴻漢之遺篆。弔新宮之奄映，喭璧臺之蕪踐。賦流波以謠思，詔河濟以崇典。雖媛德之有載，竟滯悲其何遣。訪物運之榮落，訊雲霞之舒卷。念桂枝之秋霣，惜瑤華之春翦。桂枝折兮沿歲傾，瑤華碎兮思聯情。彤殿閉兮素塵積，翠戺蕪兮紫苔生。寶羅暍兮春幌垂，珍簟空兮夏幬扃。秋臺惻兮碧煙凝，冬宮冽兮朱火清。流律有終，深心無歇。徙倚雲日，裴回風月。思玉步於鳳墀，想金聲於鸞闕。竭方池而飛傷，損圜淵而流咽。端蚤朝之晨罷，泛輦路之晚清。轥南陸，蹕閶闔，轢北津，警承明。面縞館之酸素，造松帳之蔥青。俛眾胤而慟興，撫藐女而悲生。雖哀終其已切，將何慰於爾靈。存飛榮於景路，沒申藻於服車。垂葆旒於昭術，竦鸞劍於清都。朝有儷於徵準，禮無替於粹圖。閟瑤光之密陛，宮虛梁之餘陰。俟玉羊之晨照，正金雞之夕臨。升雲鼛以引思，鏘鴻鐘以節音。文七星於霜野，旗二燿於寒林。中雲枝之夭秀，寓坎泉之曾岑。屈封嬴之自古，申反周乎在今。遣雙靈兮達孝思，附孤魂兮展慈心。伊鞠報之必至，諒顯晦之同深。予棄西楚之齊化，略東門之遙䘳。淪漣兩拍之傷，奄抑七萃之箴。
 </p>
 <p class="em2" id="p22"><a class="gg-link" href="#p22" onclick="return changeColor(this);"></a>
-又諷有司曰：<span class="jiaozhusup">「有司」下疑脫「奏」字。</span>「典禮云，天子有后，有夫人。檀弓云，舜葬蒼梧，三妃不從。<span class="jiaozhusup">「三妃」各本並作「二妃」，據檀弓原文改。</span>昏義云，后立六宮，有三夫人。然則三妃則三夫人也。后之有三妃，猶天子之有三公也。按周禮，三公八命，諸侯七命。三公既尊於列國諸侯，三妃亦貴於庶邦夫人。據春秋傳，仲子非魯惠公之元嫡，尚得考彼別宮；今貴妃蓋天秩之崇班，理應創立新廟。」尚書左丞徐爰之又議：「宣貴妃既加殊命，禮絕五宮，考之古典，顯有成據。廟堂克構，宜選將作大匠卿。」
+又諷有司曰：「<span class="jiaozhusup">「有司」下疑脫「奏」字。</span>典禮云，天子有后，有夫人。檀弓云，舜葬蒼梧，三妃不從。<span class="jiaozhusup">「三妃」各本並作「二妃」，據檀弓原文改。</span>昏義云，后立六宮，有三夫人。然則三妃則三夫人也。后之有三妃，猶天子之有三公也。按周禮，三公八命，諸侯七命。三公既尊於列國諸侯，三妃亦貴於庶邦夫人。據春秋傳，仲子非魯惠公之元嫡，尚得考彼別宮；今貴妃蓋天秩之崇班，理應創立新廟。」尚書左丞徐爰之又議：「宣貴妃既加殊命，禮絕五宮，考之古典，顯有成據。廟堂克構，宜選將作大匠卿。」
 </p>
 <p class="em2" id="p23"><a class="gg-link" href="#p23" onclick="return changeColor(this);"></a>
 葬畢，詔子鸞攝職，以本官兼司徒，進號撫軍、司徒，給鼓吹一部，禮儀並依正公。又加都督南徐州諸軍事。八年，加中書令，領司徒。前廢帝即位，解中書令，領司徒，加持節之鎮。
