--- a/OEBPS/Text/1342.html
+++ b/OEBPS/Text/1342.html
@@ -62,7 +62,7 @@
 覬之初爲郡主簿。謝晦爲荊州，以爲南蠻功曹，仍爲晦衛軍參軍。晦愛其雅素，深相知待。王弘辟爲揚州主簿，仍爲弘衛軍參軍，鹽官令，衡陽王義季右軍主簿，尚書都官郎，護軍司馬。時大將軍彭城王義康秉權，殷、劉之隙已著，覬之不欲與殷景仁久接事，乃辭腳疾自免歸。在家每夜常於床上行腳，家人竊異之，而莫曉其意。<span class="jiaozhusup">各本並脫「意」字，據元龜七九０補。</span>後義康徙廢，朝廷多以異同受禍。復爲東遷、山陰令。山陰民戶三萬，海內劇邑，前後官長，晝夜不得休，事猶不舉。覬之理繁以約，縣用無事，晝日垂簾，門階閑寂，自宋世爲山陰，務簡而績修，莫能尚也。
 </p>
 <p class="em2" id="p19"><a class="gg-link" href="#p19" onclick="return changeColor(this);"></a>
-還爲揚州治中從事史，廣陵王誕、廬陵王紹北中郎左軍司馬<span class="jiaozhusup">各本並脫「軍」字，據孫虨說補。孫虨宋書考論云：「北中郎不得置司馬，蓋『左』下脫『軍』字。北中郎，竟陵王誕也。左軍，廬陵王紹也。」</span>，揚州別駕從事史，尚書吏部郎。嘗於太祖坐論江左人物，言及顧榮，袁淑謂覬之曰：「卿南人怯懦，豈辦作賊。」覬之正色曰：「卿乃復以忠義笑人！」淑有愧色。元凶弒立，朝士無不移任，唯覬之不徙官。世祖即位，遷御史中丞。孝建元年，出爲義陽王昶東中郎長史、寧朔將軍、行會稽郡事。尋徵爲右衛將軍，領本邑中正。明年，出爲湘州刺史，善於蒞民，治甚有績。大明元年，徵守度支尚書，領本州中正。二年，轉吏部尚書。四年致仕，不許。
+還爲揚州治中從事史，廣陵王誕、廬陵王紹北中郎左軍司馬，<span class="jiaozhusup">各本並脫「軍」字，據孫虨說補。孫虨宋書考論云：「北中郎不得置司馬，蓋『左』下脫『軍』字。北中郎，竟陵王誕也。左軍，廬陵王紹也。」</span>揚州別駕從事史，尚書吏部郎。嘗於太祖坐論江左人物，言及顧榮，袁淑謂覬之曰：「卿南人怯懦，豈辦作賊。」覬之正色曰：「卿乃復以忠義笑人！」淑有愧色。元凶弒立，朝士無不移任，唯覬之不徙官。世祖即位，遷御史中丞。孝建元年，出爲義陽王昶東中郎長史、寧朔將軍、行會稽郡事。尋徵爲右衛將軍，領本邑中正。明年，出爲湘州刺史，善於蒞民，治甚有績。大明元年，徵守度支尚書，領本州中正。二年，轉吏部尚書。四年致仕，不許。
 </p>
 <p class="em2" id="p20"><a class="gg-link" href="#p20" onclick="return changeColor(this);"></a>
 時沛郡相縣唐賜往比邨朱起母彭家飲酒還，因得病，吐蠱蟲十餘枚。臨死語妻張，死後刳腹出病。後張手自破視，五藏悉糜碎。郡縣以張忍行刳剖，賜子副又不禁駐，事起赦前，法不能決。律傷死人，四歲刑，妻傷夫，五歲刑，子不孝父母，棄市，並非科例。三公郎劉勰議：「賜妻痛遵往言，<span class="jiaozhusup">「遵往」各本並作「往遵」，據通典刑典乙正。</span>兒識謝及理，考事原心，非存忍害，謂宜哀矜。」覬之議曰：「法移路尸，猶爲不道，況在妻子，而忍行凡人所不行。不宜曲通小情，當以大理爲斷，謂副爲不孝，張同不道。」詔如覬之議。
