--- a/OEBPS/Text/1343.html
+++ b/OEBPS/Text/1343.html
@@ -20,7 +20,7 @@
 吾雖疲冗，亦嘗聽君子之餘論，豈敢忘之。凡士之置身有三耳：一則雲戶岫寢，欒危桂榮，秣芝浮霜，翦松沈雪，憐肌蓄髓，寶氣愛魂，非但土石侯卿，腐鴆梁錦，實迺竚意天后，睨目羽人。次則刳心掃智，剖命驅生，橫議於雲臺之下，切辭於宣室之上，衍主德而批民患，<span class="jiaozhusup">「主」各本並作「王」，據元龜九０五改。</span>進貞白而酖姦猾，<span class="jiaozhusup">「猾」各本並作「猜」，據元龜九０五改。</span>委玉入而齊聲禮，揭金出而烹勍寇，使車軌一風，甸道共德，令功日濟而己無跡，道日富而君難名，致諸侯斂手，天子改觀。其末則饜𥹋而出，望旃而入，結冕兩宮之下，<span class="jiaozhusup">「冕」各本並作「冤」，據元龜九０五改。</span>鼓袖六王之間，俛眉脅肩，言天下之道德，瞋目扼腕，陳從橫於四海，理有泰則止而進，調覺迕則反而還，閑居違官，交造頓罷，捐慕遺憂，夷毀銷譽，呼噏以補其氣，繕嚼以輔其生。凡此三者，皆志士仁人之所行，非吾之所能也。若吾幸病不及死，役不至身，蓬藜既滿，方杜長者之轍；穀稼是諮，自絕世豪之顧。塵生床帷，苔積堦月，又檐中山木，時華月深，池上海草，歲榮日蔓。且室間軒左，幸有陳書十篋，席隅奧右，頗得宿酒數壺。按絃拭徽，讎方校石，時復陳局露初，奠爵星晚，驩然不覺是羲、軒後也。近春田三頃，秋園五畦，若此無災，山裝可具。候振飲之罷，俟封勒之畢，當敬觀邠、酆，肅尋伊、鄗，傍眺燕、隴，邪履遼、衛，覛我周之軫跡，弔他賢之憂天。當其少涉，未休此欲，但理實詭固，物好交加，或徵勢而笑其言，或觀謀而害其意。夫楊朱以此，猶見嗤於梁人，況才減楊子之器，物甚魏君之意者哉。若如漢宗之言李廣，此固許天下之有才，又知天下之時非也。豈若黨巷閭里之間，忌見貞士之遭遇，便謂是臧獲庸人之徒耳。士固願呈心於其主，露奇於所歸。卿相，末事也。若廣者，何用侯爲。至迺復有致謁於爲亂之日，被訕於害正之徒，心奇而無由露，事直而變爲枉，豈不痛哉！豈不痛哉！
 </p>
 <p class="margin2" id="p5"><a class="gg-link" href="#p5" onclick="return changeColor(this);"></a>
-若足下可謂冠負日月，籍踐淵海，心支身首，無不通照。今復出入燕、河，交關姬、衛，整笏振豪，已議於帷筵之上，提鞭鳴劍，復呵於軍埸之間，身超每深恩之所集，心動必明主之所亮。可不直議正身，輔人君之過誤，明目張膽，謀軍家之得失，拔志勇之將<span class="jiaozhusup">「拔」各本並作「操」，據元龜九０五改。</span>，薦俊正之士，此迺足下之所以報也。不爾，便擐甲修戈，徘徊左右，衛君王之身，當馬首之鏑，關必固之壘，交死進之戰，使身分而主豫，寇滅而兵全，此亦報之次也。如是，則繫匈奴於北闕無日矣。亡但默默，窺寵而坐。謂子有心，敢書薄意。
+若足下可謂冠負日月，籍踐淵海，心支身首，無不通照。今復出入燕、河，交關姬、衛，整笏振豪，已議於帷筵之上，提鞭鳴劍，復呵於軍埸之間，身超每深恩之所集，心動必明主之所亮。可不直議正身，輔人君之過誤，明目張膽，謀軍家之得失，拔志勇之將，<span class="jiaozhusup">「拔」各本並作「操」，據元龜九０五改。</span>薦俊正之士，此迺足下之所以報也。不爾，便擐甲修戈，徘徊左右，衛君王之身，當馬首之鏑，關必固之壘，交死進之戰，使身分而主豫，寇滅而兵全，此亦報之次也。如是，則繫匈奴於北闕無日矣。亡但默默，窺寵而坐。謂子有心，敢書薄意。
 </p>
 <p class="em2" id="p6"><a class="gg-link" href="#p6" onclick="return changeColor(this);"></a>
 朗之辭意倜戃，類皆如此。
