--- a/OEBPS/Text/1346.html
+++ b/OEBPS/Text/1346.html
@@ -113,7 +113,7 @@
 太宗翦除暴主，又平四方，欲引朝望以佐大業，乃下詔曰：「夫良圖宣國，賞崇彝命；殊績顯朝，策勤王府。安南將軍、江州刺史景文，風度淹粹，理懷清暢，體兼望實，誠備夷岨。寶曆方啟，密贊義機，妖徒干紀，預毗廟略。宜登茅社，永傳厥祚。朕澄氛寧樞，實資多士，疏爵疇庸，實膺徽烈。尚書右僕射、領衛尉興宗，識懷詳正，思局通敏。吏部尚書、領太子左衛率淵，器情閑茂，風業韶遠。並謀參軍政，績亮時艱，拓宇開邑，實允勳典。景文可封江安縣侯，食邑八百戶，興宗可始昌縣伯，淵可南城縣伯，食邑五百戶。」景文固讓，不許，乃受五百戶。進號鎮南將軍，尋給鼓吹一部。後以江州當徙鎮南昌，領豫章太守，餘如故。州不果遷。頃之，徵爲尚書左僕射，領吏部，揚州刺史，加太子詹事，常侍如故。不願還朝，求爲湘州刺史，不許。
 </p>
 <p class="em2" id="p36"><a class="gg-link" href="#p36" onclick="return changeColor(this);"></a>
-時又謂景文在江州，不能潔己，景文與上幸臣王道隆書曰：<span class="jiaozhusup">「道隆」各本並作「道龍」，據南史、元龜九二四改。殿本考證亦云：「道龍當作道隆。」按王道隆見恩倖傳。</span>「吾雖寡於行己，庶不負心，既愧殊效，誓不上欺明主。竊聞有爲其貝錦者，云營生乃至巨萬，素無此能，一旦忽致異術，必非平理。唯乞平心精檢，若此言不虛，便宜肆諸市朝，以正風俗。脫其妄作，當賜思罔昧之由。吾踰忝轉深，足以致謗，念此驚懼，何能自測。區區所懷，不願望風容貸。吾自了不作偷，猶如不作賊。故以密白，想爲申啟。」
+時又謂景文在江州，不能潔己，景文與上幸臣王道隆書曰：「<span class="jiaozhusup">「道隆」各本並作「道龍」，據南史、元龜九二四改。殿本考證亦云：「道龍當作道隆。」按王道隆見恩倖傳。</span>吾雖寡於行己，庶不負心，既愧殊效，誓不上欺明主。竊聞有爲其貝錦者，云營生乃至巨萬，素無此能，一旦忽致異術，必非平理。唯乞平心精檢，若此言不虛，便宜肆諸市朝，以正風俗。脫其妄作，當賜思罔昧之由。吾踰忝轉深，足以致謗，念此驚懼，何能自測。區區所懷，不願望風容貸。吾自了不作偷，猶如不作賊。故以密白，想爲申啟。」
 </p>
 <p class="em2" id="p37"><a class="gg-link" href="#p37" onclick="return changeColor(this);"></a>
 景文屢辭內授，上手詔譬之曰：「尚書左僕射，卿己經此任，東宮詹事，用人雖美，職次正可比中書令耳。庶姓作揚州，徐干木、王休元、殷鐵並處之不辭。卿清令才望，何愧休元，毗贊中興，豈謝干木，綢繆相與，何後殷鐵邪？司徒以宰相不應帶神州，遠遵先旨，京口鄉基義重，密邇畿內，又不得不用驃騎，陝西任要，由來用宗室。驃騎既去，巴陵理應居之，中流雖曰閑地，控帶三江，通接荊、郢，經塗之要，由來有重鎮。如此，則揚州自成闕刺史，卿若有辭，更不知誰應處之。此選大備，與公卿疇懷，非聊爾也。」固辭詹事領選，徙爲中書令，<span class="jiaozhusup">「領選徙爲」各本並作「徙領」二字，據南史訂正。</span>常侍、僕射、揚州如故。又進中書監，領太子太傅，常侍、揚州如故。景文固辭太傅，上遣新除尚書右僕射褚淵宣旨，以古來比例六事詰難之，不得已乃受拜。
