--- a/OEBPS/Text/1348.html
+++ b/OEBPS/Text/1348.html
@@ -23,7 +23,7 @@
 先是惠開爲治，多任刑誅，蜀土咸懷猜怨。及聞欣壽沒，法度又不得前，晉原一郡遂反，<span class="jiaozhusup">「郡」各本並作「部」，據通鑑宋泰始二年改。按晉原郡屬益州，見州郡志。</span>於是諸郡悉應之，並來圍城。城內東兵不過二千，凡蜀人惠開疑之，皆悉遣出。子勛尋平，蜀人並欲屠城，以望厚賞。惠開每遣軍出戰，未嘗不捷，前後所摧破殺傷不可勝計。外眾逾合，勝兵者十餘萬人。時天下已平，太宗以蜀土險遠，赦其誅責，遣惠開弟惠基步道使蜀，具宣朝旨。惠基既至涪，而蜀人志在屠城，不欲使王命遠達，遏留惠基不聽進。惠基率部曲破其渠帥馬興懷等，然後得前。惠開奉旨歸順，城圍得解。
 </p>
 <p class="em2" id="p6"><a class="gg-link" href="#p6" onclick="return changeColor(this);"></a>
-時太宗遣惠開宗人寶首水路慰勞益州，寶首欲以平蜀爲功，更獎說蜀人，於是處處蜂起，凡諸離散者，一時還合。渠帥趙燕、句文章等，與寶首屯軍于上，去成都六十里，眾號二十萬人。惠開欲遣擊之，將佐咸曰：「攻破蜀賊，誠不爲難。但慰勞使至，未獲奉受，而遣兵相距，何以自明本心。」惠開曰：「今水陸四斷，表啟路絕，寶首或相誣陷，謂我不奉朝旨。我之欲戰，本在通使，使若得通，則誠心達矣。」乃作啟事，具陳事情，使腹心二人帶啟，戒之曰：「須賊破路開，便躍馬馳去。」遣宋寧太守蕭惠訓、別駕費欣業萬兵並進<span class="jiaozhusup">「宋寧」各本並作「永寧」，據南史改。按州郡志，益州屬郡有「宋寧」無「永寧」。</span>，與戰，大破之，生禽寶首，囚於成都縣獄。所遣使至，上使執送寶首，除惠開晉平王休祐驃騎長史、南郡太守。不拜。泰始四年，還至京師。
+時太宗遣惠開宗人寶首水路慰勞益州，寶首欲以平蜀爲功，更獎說蜀人，於是處處蜂起，凡諸離散者，一時還合。渠帥趙燕、句文章等，與寶首屯軍于上，去成都六十里，眾號二十萬人。惠開欲遣擊之，將佐咸曰：「攻破蜀賊，誠不爲難。但慰勞使至，未獲奉受，而遣兵相距，何以自明本心。」惠開曰：「今水陸四斷，表啟路絕，寶首或相誣陷，謂我不奉朝旨。我之欲戰，本在通使，使若得通，則誠心達矣。」乃作啟事，具陳事情，使腹心二人帶啟，戒之曰：「須賊破路開，便躍馬馳去。」遣宋寧太守蕭惠訓、別駕費欣業萬兵並進，<span class="jiaozhusup">「宋寧」各本並作「永寧」，據南史改。按州郡志，益州屬郡有「宋寧」無「永寧」。</span>與戰，大破之，生禽寶首，囚於成都縣獄。所遣使至，上使執送寶首，除惠開晉平王休祐驃騎長史、南郡太守。不拜。泰始四年，還至京師。
 </p>
 <p class="em2" id="p7"><a class="gg-link" href="#p7" onclick="return changeColor(this);"></a>
 初，惠開府錄事參軍到希微負蜀人債將百萬，<span class="jiaozhusup">「到希微」南史、御覽四七七引作「劉希微」。</span>爲責主所制，未得俱還。惠開與希微共事不厚，以爲隨其同上，不能攜接得還，意恥之，廄中凡有馬六十匹，悉以乞希微償責，其意趣不常皆如是。先劉瑀爲益州，張悅代之，瑀去任，凡所攜將佐有不樂反者，必逼制將還，語人曰：「隨我上，豈可爲張悅作西門客邪。」惠開自蜀還，資財二千餘萬，悉散施道路，<span class="jiaozhusup">「道路」南史作「道俗」。</span>一無所留。
