--- a/OEBPS/Text/1349.html
+++ b/OEBPS/Text/1349.html
@@ -74,7 +74,7 @@
 崔道固，清河人也。世祖世，以幹用見知，歷太子屯騎校尉，左軍將軍。大明三年，出爲齊、北海二郡太守。民焦恭破古冢，得玉鎧，道固檢得，獻之，執繫恭。入爲新安王子鸞北中郎諮議參軍，永嘉王子仁左軍司馬。
 </p>
 <p class="em2" id="p23"><a class="gg-link" href="#p23" onclick="return changeColor(this);"></a>
-景和元年，出爲寧朔將軍、冀州刺史，鎮歷城。泰始二年，進號輔國將軍，又進號征虜將軍。時徐州刺史薛安都同逆，上即還道固本號爲徐州代之。道固不受命，遣子景微、軍主傅靈越率眾赴安都<span class="jiaozhusup">張森楷校勘記云：「景微，薛安都傳作景徵，必有一誤。」</span>。既而爲土人起義所攻，屢戰失利，閉門自守。會四方平定，上遣使宣慰，道固奉詔歸順。先是與沈文秀共引虜，虜既至，固守距之，因被圍逼。虜每進，輒爲道固所摧。三年，以爲都督冀青兗幽并五州諸軍事、前將軍、冀州刺史，加節，又進號平北將軍。其年，爲虜所陷，被送桑乾，死於虜中。
+景和元年，出爲寧朔將軍、冀州刺史，鎮歷城。泰始二年，進號輔國將軍，又進號征虜將軍。時徐州刺史薛安都同逆，上即還道固本號爲徐州代之。道固不受命，遣子景微、軍主傅靈越率眾赴安都。<span class="jiaozhusup">張森楷校勘記云：「景微，薛安都傳作景徵，必有一誤。」</span>既而爲土人起義所攻，屢戰失利，閉門自守。會四方平定，上遣使宣慰，道固奉詔歸順。先是與沈文秀共引虜，虜既至，固守距之，因被圍逼。虜每進，輒爲道固所摧。三年，以爲都督冀青兗幽并五州諸軍事、前將軍、冀州刺史，加節，又進號平北將軍。其年，爲虜所陷，被送桑乾，死於虜中。
 </p>
 <p class="em2" id="p24"><a class="gg-link" href="#p24" onclick="return changeColor(this);"></a>
 史臣曰：春秋列國大夫得罪，皆先致其邑而後去，唯邾、莒三臣，書以叛人之目，蓋重地也。安都勤王之略，義闕於藩屏，以地外奔，罪同於三叛。詩云：「誰生厲階，至今爲梗。」其此之謂乎。
