--- a/OEBPS/Text/1353.html
+++ b/OEBPS/Text/1353.html
@@ -35,7 +35,7 @@
 徐豁字萬同，東莞姑幕人也，中散大夫廣兄子。父邈，晉太子左衛率。<span class="jiaozhusup">「太子左衛率」晉書、南史作「太子前衛率」。</span>
 </p>
 <p class="em2" id="p10"><a class="gg-link" href="#p10" onclick="return changeColor(this);"></a>
-豁晉安帝隆安末，爲太學博士。桓玄輔政，爲中外都督，豁議：<span class="jiaozhusup">「豁」各本並作「諮」。殿本考證云：「諮當作豁，以字形相近而訛。」今改正。</span>「致敬唯內外武官，太宰、司徒，並非軍職，則琅邪王不應加敬。」玄諷中丞免豁官。玄敗，以爲祕書郎，尚書倉部郎，右軍何無忌功曹，仍爲鎮南參軍，又祠部，永世令，<span class="jiaozhusup">孫虨宋書考論云：「祠部下當有郎字」。</span>建武司馬，中軍參軍，尚書左丞。永初初，爲徐羨之鎮軍司馬，尚書左丞，山陰令。歷二丞三邑，精練明理，爲一世所推。
+豁晉安帝隆安末，爲太學博士。桓玄輔政，爲中外都督，豁議：「<span class="jiaozhusup">「豁」各本並作「諮」。殿本考證云：「諮當作豁，以字形相近而訛。」今改正。</span>致敬唯內外武官，太宰、司徒，並非軍職，則琅邪王不應加敬。」玄諷中丞免豁官。玄敗，以爲祕書郎，尚書倉部郎，右軍何無忌功曹，仍爲鎮南參軍，又祠部，永世令，<span class="jiaozhusup">孫虨宋書考論云：「祠部下當有郎字」。</span>建武司馬，中軍參軍，尚書左丞。永初初，爲徐羨之鎮軍司馬，尚書左丞，山陰令。歷二丞三邑，精練明理，爲一世所推。
 </p>
 <p class="em2" id="p11"><a class="gg-link" href="#p11" onclick="return changeColor(this);"></a>
 元嘉初，爲始興太守。三年，遣大使巡行四方，并使郡縣各言損益，豁因此表陳三事，其一曰：「郡大田，武吏年滿十六，便課米六十斛，十五以下至十三，皆課米三十斛，一戶內隨丁多少，悉皆輸米。且十三歲兒，未堪田作，或是單迥，無相兼通，年及應輸，便自逃逸，既遏接蠻、俚，去就益易。或乃斷截支體，產子不養，戶口歲減，實此之由。謂宜更量課限，使得存立。今若減其米課，雖有交損，考之將來，理有深益。」其二曰：「郡領銀民三百餘戶，鑿坑採砂，皆二三丈，功役既苦，不顧崩壓，一歲之中，每有死者。官司檢切，猶致逋違，老少相隨，永絕農業，千有餘口，皆資他食，豈唯一夫不耕，或受其饑而已。所以歲有不稔，便致甚困。尋臺邸用米，不異於銀，謂宜准銀課米，即事爲便。」其三曰：「中宿縣俚民課銀，一子丁輸南稱半兩。尋此縣自不出銀，又俚民皆巢居鳥語，不閑貨易之宜，每至買銀，爲損已甚。又稱兩受入，易生姦巧，山俚愚怯，不辨自申，官所課甚輕，民以所輸爲劇。今若聽計丁課米，公私兼利。」
