--- a/OEBPS/Text/1355.html
+++ b/OEBPS/Text/1355.html
@@ -5,7 +5,7 @@
 恩倖
 </h2></div>
 <p class="em2" id="p0"><a class="gg-link" href="#p0" onclick="return changeColor(this);"></a>
-夫君子小人，類物之通稱。<span class="jiaozhusup">各本並脫「通」字，據文選五０、通鑑宋孝武帝大明二年補。</span>蹈道則爲君子，違之則爲小人。屠釣，卑事也，版築，賤役也，太公起爲周師，傅說去爲殷相。非論公侯之世，鼎食之資，明揚幽仄，唯才是與。逮于二漢，茲道未革，胡廣累世農夫，伯始致位公相；黃憲牛醫之子，叔度名重京師。且任子居朝，咸有職業，雖七葉珥貂，見崇西漢，而侍中身奉奏事，又分掌御服，東方朔爲黃門侍郎，執戟殿下。郡縣掾史，<span class="jiaozhusup">「史」文選作「吏」。</span>並出豪家，負戈宿衛，皆由勢族，非若晚代，分爲二塗者也。漢末喪亂，魏武始基，軍中倉卒，權立九品，蓋以論人才優劣，非爲世族高卑。因此相沿，遂爲成法。自魏至晉，莫之能改，州都郡正，以才品人，而舉世人才，升降蓋寡。徒以馮藉世資，用相陵駕，都正俗士，斟酌時宜，品目少多，隨事俯仰，劉毅所云「下品無高門，上品無賤族」者也。歲月遷訛，斯風漸篤，凡厥衣冠，莫非二品，自此以還，遂成卑庶。周、漢之道，以智役愚，臺隸參差，用成等級；魏晉以來，以貴役賤，士庶之科，較然有辨。夫人君南面，九重奧絕，陪奉朝夕，義隔卿士，階闥之任，宜有司存。既而恩以倖生，信由恩固，無可憚之姿，有易親之色。孝建、泰始，主威獨運，官置百司，權不外假，而刑政糾雜，理難遍通，耳目所寄，事歸近習。賞罰之要，是謂國權，出內王命，由其掌握，於是方塗結軌，輻湊同奔。人主謂其身卑位薄，以爲權不得重。曾不知鼠憑社貴，狐藉虎威，外無逼主之嫌，內有專用之功，勢傾天下，未之或悟。挾朋樹黨，政以賄成，鈇鉞創痏，構於筵笫之曲，<span class="jiaozhusup">「筵笫」文選、藝文類聚三二作「床笫」。</span>服冕乘軒，出乎言笑之下，南金北毳，來悉方艚，素縑丹魄，至皆兼兩，西京許、史，蓋不足云，晉朝王、庾<span class="jiaozhusup">「庾」文選、藝文類聚三二作「石」。文選注：「石崇貪而好利，富擬王者。」按王、庾謂王導、庾亮；若言王、石，則謂王愷、石崇。</span>，未或能比。及太宗晚運，慮經盛衰，權幸之徒，慴憚宗戚，欲使幼主孤立，永竊國權，構造同異，興樹禍隙，帝弟宗王，相繼屠劋。民忘宋德，雖非一塗，寶祚夙傾，實由於此。嗚呼！漢書有恩澤侯表，又有佞倖傳，今採其名，列以爲恩倖篇云。
+夫君子小人，類物之通稱。<span class="jiaozhusup">各本並脫「通」字，據文選五０、通鑑宋孝武帝大明二年補。</span>蹈道則爲君子，違之則爲小人。屠釣，卑事也，版築，賤役也，太公起爲周師，傅說去爲殷相。非論公侯之世，鼎食之資，明揚幽仄，唯才是與。逮于二漢，茲道未革，胡廣累世農夫，伯始致位公相；黃憲牛醫之子，叔度名重京師。且任子居朝，咸有職業，雖七葉珥貂，見崇西漢，而侍中身奉奏事，又分掌御服，東方朔爲黃門侍郎，執戟殿下。郡縣掾史，<span class="jiaozhusup">「史」文選作「吏」。</span>並出豪家，負戈宿衛，皆由勢族，非若晚代，分爲二塗者也。漢末喪亂，魏武始基，軍中倉卒，權立九品，蓋以論人才優劣，非爲世族高卑。因此相沿，遂爲成法。自魏至晉，莫之能改，州都郡正，以才品人，而舉世人才，升降蓋寡。徒以馮藉世資，用相陵駕，都正俗士，斟酌時宜，品目少多，隨事俯仰，劉毅所云「下品無高門，上品無賤族」者也。歲月遷訛，斯風漸篤，凡厥衣冠，莫非二品，自此以還，遂成卑庶。周、漢之道，以智役愚，臺隸參差，用成等級；魏晉以來，以貴役賤，士庶之科，較然有辨。夫人君南面，九重奧絕，陪奉朝夕，義隔卿士，階闥之任，宜有司存。既而恩以倖生，信由恩固，無可憚之姿，有易親之色。孝建、泰始，主威獨運，官置百司，權不外假，而刑政糾雜，理難遍通，耳目所寄，事歸近習。賞罰之要，是謂國權，出內王命，由其掌握，於是方塗結軌，輻湊同奔。人主謂其身卑位薄，以爲權不得重。曾不知鼠憑社貴，狐藉虎威，外無逼主之嫌，內有專用之功，勢傾天下，未之或悟。挾朋樹黨，政以賄成，鈇鉞創痏，構於筵笫之曲，<span class="jiaozhusup">「筵笫」文選、藝文類聚三二作「床笫」。</span>服冕乘軒，出乎言笑之下，南金北毳，來悉方艚，素縑丹魄，至皆兼兩，西京許、史，蓋不足云，晉朝王、庾，<span class="jiaozhusup">「庾」文選、藝文類聚三二作「石」。文選注：「石崇貪而好利，富擬王者。」按王、庾謂王導、庾亮；若言王、石，則謂王愷、石崇。</span>未或能比。及太宗晚運，慮經盛衰，權幸之徒，慴憚宗戚，欲使幼主孤立，永竊國權，構造同異，興樹禍隙，帝弟宗王，相繼屠劋。民忘宋德，雖非一塗，寶祚夙傾，實由於此。嗚呼！漢書有恩澤侯表，又有佞倖傳，今採其名，列以爲恩倖篇云。
 </p>
 <p class="em2" id="p1"><a class="gg-link" href="#p1" onclick="return changeColor(this);"></a>
 戴法興，會稽山陰人也。家貧，父碩子，販紵爲業。法興二兄延壽、延興並修立，延壽善書，法興好學。山陰有陳載者，<span class="jiaozhusup">「陳載」南史作「陳戴」。</span>家富，有錢三千萬，鄉人咸云：「戴碩子三兒，敵陳載三千萬錢。」
@@ -92,7 +92,7 @@
 朕撥亂反正，勳濟天下，靈祇助順，群逆必夷，況爰恩養，而無輸效，遂內挾異心，著於形跡，陽愚杜口，罔所陳聞，惰事緩文，庶申詭略。當今朝列賢彥，國無佞邪，而秉心弗純，累蠹時政。以其自告之辰，用賜歸老之職，榮禮優崇，寧非饕過。不謂潛怨斥外，進競不已，勤言託意，觸遇斯發。小人之情，雖所先照，猶許其當改，未忍加法。遂恃朕仁弘，必永容貸。昨因觴宴，肆意譏毀，謂制詔所爲，皆資傍說，又宰輔無斷，朝要非才，恃老與舊，慢戾斯甚。比邊難未靜，安眾以惠，戎略是務，政網從簡，故得使此小物，乘寬自縱。乃合投畀豺虎，以清王猷，但朽悴將盡，不足窮法，可特原罪，徙付交州。
 </p>
 <p class="em2" id="p29"><a class="gg-link" href="#p29" onclick="return changeColor(this);"></a>
-爰既行，又詔曰：「八議緩罪，舊在一條；五刑所抵，耆必加貸。徐爰前後釁跡，理無可申，廢棄海埵，實允國憲。但蚤蒙朕識，曲矜愚朽，既經大宥，思沾殊渥。可特除廣州統內郡。」有司奏以爲宋隆太守。除命既下，爰已至交州，值刺史張牧病卒，土人李長仁爲亂<span class="jiaozhusup">「李長仁」各本並作「孝長仁」，據明帝紀改。</span>，悉誅北來流寓，無或免者。長仁素聞爰名，以智計誑誘，故得無患。久之聽還，仍除南康郡丞。太宗崩，還京都，以爰爲南濟陰太守，復除中散大夫。元徽三年，卒，時年八十二。
+爰既行，又詔曰：「八議緩罪，舊在一條；五刑所抵，耆必加貸。徐爰前後釁跡，理無可申，廢棄海埵，實允國憲。但蚤蒙朕識，曲矜愚朽，既經大宥，思沾殊渥。可特除廣州統內郡。」有司奏以爲宋隆太守。除命既下，爰已至交州，值刺史張牧病卒，土人李長仁爲亂，<span class="jiaozhusup">「李長仁」各本並作「孝長仁」，據明帝紀改。</span>悉誅北來流寓，無或免者。長仁素聞爰名，以智計誑誘，故得無患。久之聽還，仍除南康郡丞。太宗崩，還京都，以爰爲南濟陰太守，復除中散大夫。元徽三年，卒，時年八十二。
 </p>
 <p class="em2" id="p30"><a class="gg-link" href="#p30" onclick="return changeColor(this);"></a>
 阮佃夫，會稽諸暨人也。元嘉中，出身爲臺小史。太宗初出閤，選爲主衣。世祖召還左右，補內監。永光中，太宗又請爲世子師，甚見信待。景和末，太宗被拘於殿內，住在祕書省，爲帝所疑，大禍將至，惶懼計無所出。佃夫與王道隆、李道兒及帝左右琅邪淳于文祖謀共廢立。時直閤將軍柳光世亦與帝左右蘭陵繆方盛、丹陽周登之有密謀，未知所奉。登之與太宗有舊，方盛等乃使登之結佃夫，佃夫大說。先是帝立皇后，普暫徹諸王奄人，太宗左右錢藍生亦在其例。事畢未被遣，密使藍生候帝，慮事泄，藍生不欲自出，帝動止輒以告淳于文祖，令文祖報佃夫。
@@ -104,7 +104,7 @@
 時巫覡云：「後堂有鬼。」其夕，帝於竹林堂前，與巫共射之。建安王休仁等山陰主並從，帝素不說寂之，見輒切齒。寂之既與佃夫成謀，又慮禍至，抽刀前入，姜產之隨其後，淳于文祖、繆方盛、周登之、富靈符、聶慶、田嗣、王敬則、俞道龍、宋逵之又繼進。休仁聞行聲甚疾，謂休祐曰：「事作矣。」相隨奔景陽山。帝見寂之至，引弓射之，不中，乃走，寂之追而殞之。事定，宣令宿衛曰：「湘東王受太后令，除狂主。今已平定。」太宗即位，論功行賞，壽寂之封應城縣侯，食邑千戶。姜產之汝南縣侯，佃夫建城縣侯，食邑八百戶。王道隆吳平縣侯，淳于文祖陽城縣侯，食邑各五百戶。李道兒新渝縣侯，<span class="jiaozhusup">「新渝」各本並作「新塗」，據南史改。按州郡志有新渝，無「新塗」。</span>繆方盛劉陽縣侯，周登之曲陵縣侯，食邑各四百戶。富靈符惠懷縣子，聶慶建陽縣子，田嗣將樂縣子，王敬則重安縣子，俞道龍茶陵縣子，宋逵之零陵縣子，食邑各三百戶。
 </p>
 <p class="em2" id="p33"><a class="gg-link" href="#p33" onclick="return changeColor(this);"></a>
-佃夫遷南臺侍御史。薛索兒渡淮爲寇，山陽太守程天祚又反，佃夫與諸軍討之，破索兒，降天祚。遷龍驤將軍、司徒參軍，率所領南助赭圻，轉太子步兵校尉、南魯郡太守，侍太子於東宮。泰始四年，以破薛索兒功，增封二百戶，并前千戶。以本官兼游擊將軍，假寧朔將軍，與輔國將軍兼驍騎將軍孟次陽與二衛參員直。次陽字崇基，平昌安丘人也。泰始初，爲山陽王休祐驃騎參軍。薛安都子道標攻合肥，次陽擊破之，以功封攸縣子，食邑三百戶。歷右軍、驃騎參軍<span class="jiaozhusup">「參軍」各本作「將軍」。張森楷校勘記云：「驃騎將軍位從公，非雜號將軍之比。此下云次陽出爲輔師將軍、兗州刺史，進號冠軍將軍，是驃騎之號必有誤。」孫虨宋書考論云：「將軍當爲參軍訛。」按孫說是，今改正。</span>，六年，出爲輔師將軍、兗州刺史，戍淮陰，立北兗州，自此始也。進號冠軍將軍。元徽四年，卒。
+佃夫遷南臺侍御史。薛索兒渡淮爲寇，山陽太守程天祚又反，佃夫與諸軍討之，破索兒，降天祚。遷龍驤將軍、司徒參軍，率所領南助赭圻，轉太子步兵校尉、南魯郡太守，侍太子於東宮。泰始四年，以破薛索兒功，增封二百戶，并前千戶。以本官兼游擊將軍，假寧朔將軍，與輔國將軍兼驍騎將軍孟次陽與二衛參員直。次陽字崇基，平昌安丘人也。泰始初，爲山陽王休祐驃騎參軍。薛安都子道標攻合肥，次陽擊破之，以功封攸縣子，食邑三百戶。歷右軍、驃騎參軍，<span class="jiaozhusup">「參軍」各本作「將軍」。張森楷校勘記云：「驃騎將軍位從公，非雜號將軍之比。此下云次陽出爲輔師將軍、兗州刺史，進號冠軍將軍，是驃騎之號必有誤。」孫虨宋書考論云：「將軍當爲參軍訛。」按孫說是，今改正。</span>六年，出爲輔師將軍、兗州刺史，戍淮陰，立北兗州，自此始也。進號冠軍將軍。元徽四年，卒。
 </p>
 <p class="em2" id="p34"><a class="gg-link" href="#p34" onclick="return changeColor(this);"></a>
 時佃夫、王道隆、楊運長並執權柄，亞於人主。巢、戴大明之世方之蔑如也。嘗值正旦應合朔，尚書奏遷元會，佃夫曰：「元正慶會，國之大禮，何不遷合朔日邪。」其不稽古如此。大通貨賄，凡事非重賂不行。人有餉絹二百匹，嫌少，不答書。宅舍園池，諸王邸第莫及。妓女數十，藝貌冠絕當時，金玉錦繡之飾，宮掖不逮也。每製一衣，造一物，京邑莫不法效焉。於宅內開瀆，東出十許里，塘岸整絜，汎輕舟，奏女樂。中書舍人劉休嘗詣之，值佃夫出行，中路相逢，要休同反，就席，便命施設，一時珍羞，莫不畢備。凡諸火劑，並皆始熟，如此者數十種。佃夫嘗作數十人饌，以待賓客，故造次便辦，類皆如此，雖晉世王、石，不能過也。泰始初，軍功既多，爵秩無序，佃夫僕從附隸，皆受不次之位，捉車人虎賁中郎，傍馬者員外郎。朝士貴賤，莫不自結，而矜傲無所降意，入其室者，唯吳興沈勃、吳郡張澹數人而已。
