--- a/OEBPS/Text/1357.html
+++ b/OEBPS/Text/1357.html
@@ -11,7 +11,7 @@
 渾既上隴，出罕幵、西零。西零，今之西平郡，罕幵，今枹罕縣。自枹罕以東千餘里，暨甘松，西至河南，南界昴城、龍涸。自洮水西南，極白蘭，數千里中，逐水草，廬帳居，以肉酪爲糧。西北諸雜種謂之爲阿柴虜。
 </p>
 <p class="em2" id="p2"><a class="gg-link" href="#p2" onclick="return changeColor(this);"></a>
-渾年七十二死，有子六十人，長吐延嗣。吐延身長七尺八寸，勇力過人，性刻暴，爲昴城羌酋姜聰所刺，劍猶在體，呼子葉延，語其大將絕拔渥曰：<span class="jiaozhusup">「絕拔渥」魏書作「紇拔渥」，晉書作「紇拔泥」。</span>「吾氣絕，棺斂訖，便遠去保白蘭。白蘭地既嶮遠，又土俗懦弱，易爲控御。葉延小，意乃欲授與餘人，恐倉卒終不能相制。今以葉延付汝，汝竭股肱之力以輔之，孺子得立，吾無恨矣。」抽劍而死。嗣位十三年，年三十五。有子十二人。
+渾年七十二死，有子六十人，長吐延嗣。吐延身長七尺八寸，勇力過人，性刻暴，爲昴城羌酋姜聰所刺，劍猶在體，呼子葉延，語其大將絕拔渥曰：「<span class="jiaozhusup">「絕拔渥」魏書作「紇拔渥」，晉書作「紇拔泥」。</span>吾氣絕，棺斂訖，便遠去保白蘭。白蘭地既嶮遠，又土俗懦弱，易爲控御。葉延小，意乃欲授與餘人，恐倉卒終不能相制。今以葉延付汝，汝竭股肱之力以輔之，孺子得立，吾無恨矣。」抽劍而死。嗣位十三年，年三十五。有子十二人。
 </p>
 <p class="em2" id="p3"><a class="gg-link" href="#p3" onclick="return changeColor(this);"></a>
 葉延少而勇果，年十歲，縛草爲人，號曰姜聰，每旦輒射之，射中則喜，不中則號叫泣涕。其母曰：「讎賊諸將已屠膾之，汝年小，何煩朝朝自苦如此。」葉延嗚咽不自勝，答母曰：「誠知無益，然葉延罔極之心，不勝其痛耳。」性至孝，母病，三日不能食，葉延亦不食。頗視書傳，自謂曾祖弈洛韓始封昌黎公，曰：「吾爲公孫之子。案禮，公孫之子，得氏王父字。」命姓爲吐谷渾氏。嗣立二十三年，年三十三。<span class="jiaozhusup">「年三十三」各本並作「年四十三」，據晉書改。按上云年十歲，父死，此云嗣立二十三年，則當作年三十三。</span>有子四人。
