--- a/OEBPS/Text/1361.html
+++ b/OEBPS/Text/1361.html
@@ -113,7 +113,7 @@
 徵還，淮南太守，賞賜豐厚，日夕讌見。朝士有言璞功者，上曰：「臧質姻戚，又年位在前，盱眙元功，當以歸之。沈璞每以謙自牧，唯恐賞之居前，此士燮之意也。」時中書郎缺，尚書令何尚之領吏部，舉璞及謝莊、陸展，事不行。<span class="jiazhu">事見文帝中詔。凡中詔今悉在臺，猶法書典書也。</span>
 </p>
 <p class="em2" id="p36"><a class="gg-link" href="#p36" onclick="return changeColor(this);"></a>
-三十年，元凶弒立，璞乃號泣曰：「一門蒙殊常之恩，而逢若斯之運，悠悠上天，此何人哉。」日夜憂歎，以至動疾。會二凶逼令送老弱還都，璞性篤孝，尋聞尊老應幽執，輒哽咽不自勝，疾遂增篤，不堪遠迎，世祖義軍至界首，方得致身。先是，琅邪顏竣欲與璞交，不酬其意，竣以致恨。及世祖將至都，方有讒說以璞奉迎之晚，橫罹世難，時年三十八。所著賦、頌、讚、祭文、誄、七、弔、四五言詩、牋、表，皆遇亂零失，今所餘詩筆雜文凡二十首。璞有子曰約<span class="jiaozhusup">各本「約」字空白，據南史、元龜五六一補。按沈穆夫五子，沈約自序中，淵子、雲子、田子、林子並有事蹟，獨無虔子事蹟。「璞有子曰約」下，又接虔子子伯玉、仲玉事蹟。疑其間有脫葉。司馬光溫國文正公文集卷六二與劉道原書：「今國家雖校定摹印正史，校得絕不精。只如沈約序傳，差郤數板亦不寤，其他可知也。」是則嘉祐初刻，蓋已殘闕不完。</span>。
+三十年，元凶弒立，璞乃號泣曰：「一門蒙殊常之恩，而逢若斯之運，悠悠上天，此何人哉。」日夜憂歎，以至動疾。會二凶逼令送老弱還都，璞性篤孝，尋聞尊老應幽執，輒哽咽不自勝，疾遂增篤，不堪遠迎，世祖義軍至界首，方得致身。先是，琅邪顏竣欲與璞交，不酬其意，竣以致恨。及世祖將至都，方有讒說以璞奉迎之晚，橫罹世難，時年三十八。所著賦、頌、讚、祭文、誄、七、弔、四五言詩、牋、表，皆遇亂零失，今所餘詩筆雜文凡二十首。璞有子曰約。<span class="jiaozhusup">各本「約」字空白，據南史、元龜五六一補。按沈穆夫五子，沈約自序中，淵子、雲子、田子、林子並有事蹟，獨無虔子事蹟。「璞有子曰約」下，又接虔子子伯玉、仲玉事蹟。疑其間有脫葉。司馬光溫國文正公文集卷六二與劉道原書：「今國家雖校定摹印正史，校得絕不精。只如沈約序傳，差郤數板亦不寤，其他可知也。」是則嘉祐初刻，蓋已殘闕不完。</span>
 </p>
 <p class="em2" id="p37"><a class="gg-link" href="#p37" onclick="return changeColor(this);"></a>
 伯玉字德潤，虔子子也。溫恭有行業，能爲文章。少除世祖武陵國侍郎，轉右常侍，南中郎行參軍，自國入府，以文義見知，文章多見世祖集。世祖踐阼，除員外散騎郎，不拜。左衛顏竣請爲司馬。出補句容令，在縣有能名。復爲江夏王義恭太宰行參軍，與奉朝請謝超宗、何法盛校書東宮，復爲餘姚令，還爲衛尉丞。世祖舊臣故佐，普皆升顯，伯玉自守私門，朔望未嘗問訊。顏師伯、戴法興等並有蕃邸之舊，一不造問，由是官次不進。上以伯玉容狀似畫圖仲尼像，常呼爲孔丘。舊制車駕出行，衛尉丞直門，常戎服。張永謂伯玉曰：「此職乖卿志。」王景文亦與伯玉有舊，常陪輦出，指伯玉白上：「孔丘奇形容。」上於是特聽伯玉直門服玄衣。出爲晉安王子勛前軍行參軍，侍子勛讀書。隨府轉鎮軍行佐。前廢帝時，王景文領選，謂子勛典籤沈光祖曰：「鄧琬一旦爲長史行事，沈伯玉先帝在蕃□佐，今猶不改，民生定不應佳。」戴法興聞景文此言，乃轉伯玉爲參軍事。子勛初起兵，轉府功曹。及即僞位，以爲中書侍郎。初，伯玉爲衛尉丞，太宗爲衛尉，共事甚美。及子勛敗，伯玉下獄，見原，猶以在南無誠，被責，除南臺御史，尋轉武陵國詹事，又轉大農，母老解職。貧薄理盡，閑臥一室，自非弔省親舊，不嘗出門。司徒袁粲、司空褚淵深相知賞，選爲永世令，轉在永興，皆有能名。後廢帝元徽三年，卒，時年五十七。伯玉性至孝，奉親有聞，未嘗妄取於人，有物輒散之知故。溫雅有風味，和而能辨，與人共事，皆爲深交。
