--- a/OEBPS/Text/1267.html
+++ b/OEBPS/Text/1267.html
@@ -377,7 +377,7 @@
 九月巳卯，詔曰：「近炎精亢序，苗稼多傷。今二麥未晚，甘澤頻降，可下東境郡，勤課墾殖。尤弊之家，量貸麥種。」戊子，詔曰：「昔周王驥跡，實窮四溟；漢帝鸞軫，夙遍五嶽。皆所以上對幽靈，下理民土。自天昌替馭，臨宮創圖，禮代夭鬱，世貿興毀。皇家造宋，日月重光，琁璣得序，五星順命，而戎車歲動，陳詩義闕。朕聿含五光，奄一天下，思盡寶戒之規，以塞謀危之路。當沿時省方，觀察風俗。外詳考舊典，以副側席之懷。」庚寅，南徐州刺史新安王子鸞兼司徒。乙未，車駕幸廷尉訊獄囚。丙申，立第十七皇子子嗣爲東平王。
 </p>
 <p class="em2" id="p124"><a class="gg-link" href="#p124" onclick="return changeColor(this);"></a>
-冬十月壬寅，太子冠，賜王公以下帛各有差。戊申，車駕巡南豫州。詔曰：「朕巡幸所經，先見百年者，及孤寡老疾，並賜粟帛。獄繫刑罪，並親聽訟。其士庶或怨鬱危滯，受抑吏司，或隱約潔立，負擯州里，皆聽進朕前，面自陳訴。若忠信孝義，力田殖穀，一介之能，一藝之美，悉加旌賞。雖秋澤頻降，而夏旱嬰弊。可即開行倉<span class="jiaozhusup">元龜一九五及二０五無「行」字。</span>，並加賑賜。」癸丑，行幸江寧縣訊獄囚。車騎將軍、揚州刺史豫章王子尚加開府儀同三司。癸亥，衛將軍、開府儀同三司東海王褘爲司空，中軍將軍義陽王昶加開府儀同三司。丙寅，詔曰：「賞慶刑威，奄國彝軌；黜幽升明，闢宇恒憲。故採言聆風，式觀侈質，貶爵加地，於是乎在。今類帝宜社，親巡江甸，因覲嶽守，躬求民瘼。思弘明試之典，以申考績之義。行幸所經，蒞民之職，功宣於聽，即加甄賞。若廢務亂民，隨諐議罰。主者詳察以聞。」己巳，車駕校獵於姑孰。
+冬十月壬寅，太子冠，賜王公以下帛各有差。戊申，車駕巡南豫州。詔曰：「朕巡幸所經，先見百年者，及孤寡老疾，並賜粟帛。獄繫刑罪，並親聽訟。其士庶或怨鬱危滯，受抑吏司，或隱約潔立，負擯州里，皆聽進朕前，面自陳訴。若忠信孝義，力田殖穀，一介之能，一藝之美，悉加旌賞。雖秋澤頻降，而夏旱嬰弊。可即開行倉，<span class="jiaozhusup">元龜一九五及二０五無「行」字。</span>並加賑賜。」癸丑，行幸江寧縣訊獄囚。車騎將軍、揚州刺史豫章王子尚加開府儀同三司。癸亥，衛將軍、開府儀同三司東海王褘爲司空，中軍將軍義陽王昶加開府儀同三司。丙寅，詔曰：「賞慶刑威，奄國彝軌；黜幽升明，闢宇恒憲。故採言聆風，式觀侈質，貶爵加地，於是乎在。今類帝宜社，親巡江甸，因覲嶽守，躬求民瘼。思弘明試之典，以申考績之義。行幸所經，蒞民之職，功宣於聽，即加甄賞。若廢務亂民，隨諐議罰。主者詳察以聞。」己巳，車駕校獵於姑孰。
 </p>
 <p class="em2" id="p125"><a class="gg-link" href="#p125" onclick="return changeColor(this);"></a>
 十一月丙子，曲赦南豫州殊死以下。巡幸所經，詳減今歲田租。乙酉，詔遣祭晉大司馬桓溫、征西將軍毛璩墓。上於行所訊溧陽、永世、丹陽縣囚。癸巳，車駕習水軍於梁山，有白爵二集華蓋，有司奏改大明七年爲神爵元年，詔不許。乙未，原放行獄徒繫。東諸郡大旱，<span class="jiaozhusup">「大旱」各本並作「大獄」，據南史改。洪頤楫諸史考異云：「大獄，當從南史作大旱。故下文遣使開倉賑恤。」</span>壬寅，<span class="jiaozhusup">按是月壬申朔，無壬寅，當有誤。</span>遣使開倉貸卹，聽受雜物當租。
