--- a/OEBPS/Text/1280.html
+++ b/OEBPS/Text/1280.html
@@ -74,7 +74,7 @@
 孝建二年九月甲午，有司奏：「前殿中曹郎荀萬秋議：按禮，祭天地有樂者，爲降神也。故易曰：『雷出地奮豫。先王以作樂崇德，殷薦之上帝，以配祖考。』周官曰：『作樂於圜丘之上，天神皆降。作樂於方澤之中，地祇皆出。』又曰：『乃奏黃鍾，哥大呂，舞雲門，以祀天神。乃奏大簇，哥應鍾，舞咸池，以祀地祇。』由斯而言，以樂祭天地，其來尚矣。今郊享闕樂，竊以爲疑。祭統曰：『夫祭有三重焉，獻之屬莫重於祼，<span class="jiaozhusup">各本並脫「之」字，據禮記祭統原文及元龜五六六補。</span>聲莫重於升哥，舞莫重於武宿夜，此周道也。』至於秦奏五行，魏舞咸熙，皆以用享。爰逮晉氏，泰始之初，傅玄作晉郊廟哥詩三十二篇。元康中，荀藩受詔成父勗業，金石四縣，用之郊廟。是則相承郊廟有樂之證也。今廟祠登哥雖奏，而象舞未陳，懼闕備禮。夫聖王經世，異代同風，雖損益或殊，降殺迭運，未嘗不執古御今，同規合矩。方茲休明在辰，文物大備，禮儀遺逸，罔不具舉，而況出祇降神，輟樂於郊祭，昭德舞功，有闕於廟享。謂郊廟宜設備樂。」
 </p>
 <p class="em2" id="p23"><a class="gg-link" href="#p23" onclick="return changeColor(this);"></a>
-於是使內外博議。驃騎大將軍竟陵王誕等五十一人並同萬秋議。尚書左僕射建平王宏議以爲：「聖王之德雖同，創制之禮或異，樂不相沿，禮無因襲。自寶命開基，皇符在運，業富前王，風通振古<span class="jiaozhusup">「通」元龜五六六作「動」。</span>，朝儀國章，並循先代。自後晉東遷，日不暇給，雖大典略備，遺闕尚多。至於樂號廟禮，未該往正。今帝德再昌，大孝御宇，宜討定禮本，以昭來葉。尋舜樂稱韶，漢改文始，周樂大武，秦革五行。眷夫祖有功而宗有德，故漢高祖廟樂稱武德，太宗廟樂曰昭德。魏制武始舞武廟，制咸熙舞文廟。則祖宗之廟，別有樂名。晉氏之樂，正德、大豫，及宋不更名，直爲前後二舞，依據昔代，義舛事乖。今宜釐改權稱，以凱容爲韶舞，宣烈爲武舞。祖宗廟樂，總以德爲名。若廟非不毀，則樂無別稱，猶漢高、文、武，咸有嘉號，惠、景二主，樂無餘名。章皇太后廟，依諸儒議，唯奏文樂。何休、杜預、范甯注『初獻六羽』，並不言佾者，佾則干在其中，明婦人無武事也。郊祀之樂，無復別名，仍同宗廟而已。尋諸漢志，永至等樂，各有義況，宜仍舊不改。爰及東晉，<span class="jiaozhusup">「爰」各本並作「宋」，據元龜五六六改。</span>太祝唯送神而不迎神。近議者或云廟以居神，恒如在也，不應有迎送之事，意以爲並乖其衷。立廟居靈，四時致享，以申孝思之情。夫神升降無常，何必恒安所處？故祭義云：『樂以迎來，哀以送往。』鄭注云：『迎來而樂，樂親之來，送往而哀，哀其享否不可知也。』尚書〔曰『祖考來格』。漢書安世房中歌曰：『神來宴娛。』詩云：『三后在〕天。』<span class="jiaozhusup">三朝本、毛本、局本作「尚書有神天」五字。北監本、殿本作「尚書曰祖考來格」七字。今據通典樂典訂補。</span>又詩云：『神保遹歸。』注曰：『歸於天地也。』此並言神有去來，則有送迎明矣。即周肆夏之名，備迎送之樂。古以尸象神，故儀禮祝有迎尸送尸，近代雖無尸，豈可闕迎送之禮？又傅玄有迎神送神哥辭，明江左不迎，非舊典也。」
+於是使內外博議。驃騎大將軍竟陵王誕等五十一人並同萬秋議。尚書左僕射建平王宏議以爲：「聖王之德雖同，創制之禮或異，樂不相沿，禮無因襲。自寶命開基，皇符在運，業富前王，風通振古，<span class="jiaozhusup">「通」元龜五六六作「動」。</span>朝儀國章，並循先代。自後晉東遷，日不暇給，雖大典略備，遺闕尚多。至於樂號廟禮，未該往正。今帝德再昌，大孝御宇，宜討定禮本，以昭來葉。尋舜樂稱韶，漢改文始，周樂大武，秦革五行。眷夫祖有功而宗有德，故漢高祖廟樂稱武德，太宗廟樂曰昭德。魏制武始舞武廟，制咸熙舞文廟。則祖宗之廟，別有樂名。晉氏之樂，正德、大豫，及宋不更名，直爲前後二舞，依據昔代，義舛事乖。今宜釐改權稱，以凱容爲韶舞，宣烈爲武舞。祖宗廟樂，總以德爲名。若廟非不毀，則樂無別稱，猶漢高、文、武，咸有嘉號，惠、景二主，樂無餘名。章皇太后廟，依諸儒議，唯奏文樂。何休、杜預、范甯注『初獻六羽』，並不言佾者，佾則干在其中，明婦人無武事也。郊祀之樂，無復別名，仍同宗廟而已。尋諸漢志，永至等樂，各有義況，宜仍舊不改。爰及東晉，<span class="jiaozhusup">「爰」各本並作「宋」，據元龜五六六改。</span>太祝唯送神而不迎神。近議者或云廟以居神，恒如在也，不應有迎送之事，意以爲並乖其衷。立廟居靈，四時致享，以申孝思之情。夫神升降無常，何必恒安所處？故祭義云：『樂以迎來，哀以送往。』鄭注云：『迎來而樂，樂親之來，送往而哀，哀其享否不可知也。』尚書〔曰『祖考來格』。漢書安世房中歌曰：『神來宴娛。』詩云：『三后在〕天。』<span class="jiaozhusup">三朝本、毛本、局本作「尚書有神天」五字。北監本、殿本作「尚書曰祖考來格」七字。今據通典樂典訂補。</span>又詩云：『神保遹歸。』注曰：『歸於天地也。』此並言神有去來，則有送迎明矣。即周肆夏之名，備迎送之樂。古以尸象神，故儀禮祝有迎尸送尸，近代雖無尸，豈可闕迎送之禮？又傅玄有迎神送神哥辭，明江左不迎，非舊典也。」
 </p>
 <p class="em2" id="p24"><a class="gg-link" href="#p24" onclick="return changeColor(this);"></a>
 散騎常侍、丹陽尹建城縣開國侯顏竣議以爲：「德業殊稱，則干羽異容，時無沿制，故物有損益。至於禮失道諐，稱習忘反，中興釐運，視聽所革，先代繆章，宜見刊正。郊之有樂，蓋生周易、周官，歷代著議，莫不援准。夫『掃地而祭，器用陶匏』，唯質與誠，以章天德，文物之備，理固不然。周官曰：『國有故，則旅上帝及四望。』又曰：『四圭有邸，以祀天旅上帝。兩圭有邸，以祀地旅四望。』四望非地，則知上帝非天。孝經云：『郊祀后稷以配天，宗祀文王於明堂，以配上帝。』則豫之作樂，非郊天也。大司樂職，『奏黃鍾，哥大呂，舞雲門，以祀天神』。鄭注：『天神，五帝及日月星辰也。』王者以夏正月祀其所受命之帝於南郊，則二至之祀，又非天地。考之眾經，郊祀有樂，未見明證。宗廟之禮，事炳載籍。爰自漢元，迄乎有晉，雖時或更制，大抵相因，爲不襲名號而已。今樂曲淪滅，知音世希，改作之事，臣聞其語。正德、大豫，禮容具存，宜殊其徽號，飾而用之。以正德爲宣化之舞，大豫爲興和之舞，庶足以光表世烈，悅被後昆。前漢祖宗，廟處各異，主名既革，舞號亦殊。今七廟合食，庭殿共所，舞蹈之容，不得廟有別制。後漢東平王蒼已議之矣。又王肅、韓祗以王者德廣無外，六代四夷之舞，金石絲竹之樂，宜備奏宗廟。愚謂蒼、肅、祗議，合於典禮，適於當今。」
@@ -119,7 +119,7 @@
 凡樂章古詞，今之存者，並漢世街陌謠謳，江南可采蓮、烏生、十五、白頭吟之屬是也。<span class="jiaozhusup">「烏生十五」各本並作「烏生十五子」。按樂府詩集二六引永嘉伎錄，相和有十五曲，六曰十五，十二曰烏生。蓋烏生與十五，自是二曲。烏生古辭云：「烏生八九子。」宋書樂志以烏生、十五二曲駢連書之，後人又誤加「子」字，合「烏生十五子」為一曲。今訂正。</span>吳哥雜曲，並出江東，晉、宋以來，稍有增廣。
 </p>
 <p class="em2" id="p38"><a class="gg-link" href="#p38" onclick="return changeColor(this);"></a>
-子夜哥者，有女子名子夜，造此聲。晉孝武太元中，琅邪王軻之家有鬼哥子夜。殷允爲豫章時，豫章僑人庾僧度家亦有鬼哥子夜<span class="jiaozhusup">「庾僧度」通典樂典、樂府詩集四四作「庾僧虔」。</span>。殷允爲豫章，亦是太元中，則子夜是此時以前人也。
+子夜哥者，有女子名子夜，造此聲。晉孝武太元中，琅邪王軻之家有鬼哥子夜。殷允爲豫章時，豫章僑人庾僧度家亦有鬼哥子夜。<span class="jiaozhusup">「庾僧度」通典樂典、樂府詩集四四作「庾僧虔」。</span>殷允爲豫章，亦是太元中，則子夜是此時以前人也。
 </p>
 <p class="em2" id="p39"><a class="gg-link" href="#p39" onclick="return changeColor(this);"></a>
 鳳將雛哥者，舊曲也。應璩百一詩云：「爲作陌上桑，反言鳳將雛。」然則鳳將雛其來久矣，將由訛變以至於此乎？
@@ -158,7 +158,7 @@
 鞞舞，未詳所起，然漢代已施於燕享矣。傅毅、張衡所賦，皆其事也。曹植鞞舞哥序曰：「漢靈帝西園故事，<span class="jiaozhusup">「故事」局本及晉書樂志、通典樂典、樂府詩集五三、曹植集、御覽五七四引並作「鼓吹」。</span>有李堅者，能鞞舞。遭亂，西隨段煨。先帝聞其舊有技，召之。堅既中廢，兼古曲多謬誤，異代之文，未必相襲，故依前曲改作新哥五篇，不敢充之黃門，近以成下國之陋樂焉。」晉鞞舞哥亦五篇，又鐸舞哥一篇，幡舞哥一篇，鼓舞伎六曲，並陳於元會。今幡、鼓哥詞猶存，舞並闕。鞞舞，即今之鞞扇舞也。
 </p>
 <p class="em2" id="p51"><a class="gg-link" href="#p51" onclick="return changeColor(this);"></a>
-又云晉初有杯槃舞、公莫舞。史臣按：杯槃，今之齊世寧也<span class="jiaozhusup">按齊改宋世寧曰齊世昌，則此當作宋世寧。或因沈約此書成於齊世，故改宋世寧稱齊世寧。</span>。張衡舞賦云：「歷七槃而縱躡。」王粲七釋云：「七槃陳於廣庭。」近世文士顏延之云：「遞間關於槃扇。」鮑昭云：「七槃起長袖。」皆以七槃爲舞也。搜神記云：「晉太康中，天下爲晉世寧舞，矜手以接杯槃反覆之。」此則漢世唯有槃舞，而晉加之以杯，反覆之也。
+又云晉初有杯槃舞、公莫舞。史臣按：杯槃，今之齊世寧也。<span class="jiaozhusup">按齊改宋世寧曰齊世昌，則此當作宋世寧。或因沈約此書成於齊世，故改宋世寧稱齊世寧。</span>張衡舞賦云：「歷七槃而縱躡。」王粲七釋云：「七槃陳於廣庭。」近世文士顏延之云：「遞間關於槃扇。」鮑昭云：「七槃起長袖。」皆以七槃爲舞也。搜神記云：「晉太康中，天下爲晉世寧舞，矜手以接杯槃反覆之。」此則漢世唯有槃舞，而晉加之以杯，反覆之也。
 </p>
 <p class="em2" id="p52"><a class="gg-link" href="#p52" onclick="return changeColor(this);"></a>
 公莫舞，今之巾舞也。相傳云項莊劍舞，項伯以袖隔之，使不得害漢高祖。且語莊云：「公莫。」古人相呼曰「公」，云莫害漢王也。今之用巾，蓋像項伯衣袖之遺式。按琴操有公莫渡河曲，然則其聲所從來已久。俗云項伯，非也。
@@ -272,7 +272,7 @@
 笛，案馬融長笛賦，此器起近世，出於羌中，京房備其五音。又稱丘仲工其事，不言仲所造。風俗通則曰：「丘仲造笛。武帝時人。」其後更有羌笛爾。三說不同，未詳孰實。
 </p>
 <p class="em2" id="p89"><a class="gg-link" href="#p89" onclick="return changeColor(this);"></a>
-䈔，杜摯笳賦云：「李伯陽入西戎所造。」漢舊注曰：「箛，號曰吹鞭。」晉先蠶儀注：<span class="jiaozhusup">各本並脫「儀」字，據通典樂典補。</span>「車駕住，吹小箛；發，吹大箛。」箛即䈔也。又有胡笳。漢舊箏笛錄有其曲，不記所出本末。
+䈔，杜摯笳賦云：「李伯陽入西戎所造。」漢舊注曰：「箛，號曰吹鞭。」晉先蠶儀注：「<span class="jiaozhusup">各本並脫「儀」字，據通典樂典補。</span>車駕住，吹小箛；發，吹大箛。」箛即䈔也。又有胡笳。漢舊箏笛錄有其曲，不記所出本末。
 </p>
 <p class="em2" id="p90"><a class="gg-link" href="#p90" onclick="return changeColor(this);"></a>
 鼓吹，蓋短簫鐃哥。蔡邕曰：「軍樂也，黃帝岐伯所作，以揚德建武，勸士諷敵也。」周官曰：「師有功則愷樂。」左傳曰，晉文公勝楚，「振旅，凱而入」。司馬法曰：「得意則愷樂愷哥。」雍門周說孟嘗君，「鼓吹于不測之淵」。說者云，鼓自一物，吹自竽、籟之屬，非簫、鼓合奏，別爲一樂之名也。然則短簫鐃哥，此時未名鼓吹矣。應劭漢鹵簿圖，唯有騎執箛。箛即笳，不云鼓吹。而漢世有黃門鼓吹。漢享宴食舉樂十三曲，與魏世鼓吹長簫同。長簫短簫，伎錄並云，絲竹合作，執節者哥。又建初錄云，務成、黃爵、玄雲、遠期，皆騎吹曲，非鼓吹曲。此則列於殿庭者爲鼓吹，今之從行鼓吹爲騎吹，二曲異也。又孫權觀魏武軍，作鼓吹而還，此又應是今之鼓吹。魏、晉世，又假諸將帥及牙門曲蓋鼓吹，斯則其時謂之鼓吹矣。魏、晉世給鼓吹甚輕，牙門督將五校，悉有鼓吹。晉江左初，臨川太守謝摛每寢，輒夢聞鼓吹。有人爲其占之曰：「君不得生鼓吹，當得死鼓吹爾。」摛擊杜弢戰沒，追贈長水校尉，葬給鼓吹焉。謝尚爲江夏太守，詣安西將軍庾翼於武昌咨事，翼與尚射，曰：「卿若破的，當以鼓吹相賞。」尚射破的，便以其副鼓吹給之。今則甚重矣。
