--- a/OEBPS/Text/1313.html
+++ b/OEBPS/Text/1313.html
@@ -14,7 +14,7 @@
 鎮軍府版諮議參軍，轉車騎從事中郎。劉毅請爲撫軍司馬，不就。遷車騎中軍司馬。從征廣固，竭其誠力。盧循逼京都，以爲督江州豫州之西陽新蔡汝南潁川司州之恒農揚州之松滋六郡諸軍事、建威將軍、江州刺史，<span class="jiaozhusup">以爲督江州豫州之西陽新蔡汝南潁川司州之恒農揚州之松滋六郡諸軍事建威將軍江州刺史各本並脫「恒農揚州之」五字，殿本改六郡爲五郡。錢大昕廿二史考異云：「司州下有脫文，當云司州之恒農，揚州之松滋也。一本六郡作五郡，蓋校書者不知史有脫字，而以意改之耳。」</span>從東道出鄱陽。循遣將英紏千餘人斷五畝嶠，悅破之，進據豫章，絕循糧援。
 </p>
 <p class="em2" id="p3"><a class="gg-link" href="#p3" onclick="return changeColor(this);"></a>
-初，毅家在京口，貧約過常，嘗與鄉曲士大夫往東堂共射。時悅爲司徒右長史，暫至京，要府州僚佐共出東堂。毅已先至，遣與悅相聞，曰：「身久躓頓，營一遊集甚難。君如意人，無處不可爲適，豈能以此堂見讓。」悅素豪，徑前，不答毅語。眾人並避之，唯毅留射如故。悅廚饌甚盛，不以及毅。毅既不去，悅甚不歡，俄頃亦退<span class="jiaozhusup">「亦」三朝本作「亦」，北監本、毛本、殿本、局本作「不」。按此處言俄頃庾悅等宴畢，亦將散退，故下文又敘劉毅求庾悅以子鵝殘炙見惠事。</span>。毅又相聞曰：「身今年未得子鵝，豈能以殘炙見惠。」悅又不答。盧循平後，毅求都督江州，以江州內地，治民爲職，不宜置軍府，上表陳之曰：「臣聞天以盈虛爲道，治以損益爲義。時否而政不革，民凋而事不損，則無以救急病於已危，拯塗炭於將絕。自頃戎車屢駕，干戈溢境，江州以一隅之地，當逆順之衝，力弱民慢，而器運所繼。自桓玄以來，驅蹙殘毀，至乃男不被養，女無對匹，逃亡去就，不避幽深，自非財單力竭，無以至此。若不曲心矜理，有所改移，則靡遺之歎，奄焉必及。臣謬荷增統，傷慨兼懷。夫設官分職，軍國殊用，牧民以息務爲大，武略以濟事爲先。今兼而領之，蓋出於權事，因藉既久，遂爲常則。江州在腹心之中，憑接揚、豫，藩屏所倚，實爲重複。昔胡寇縱逸，朔馬臨江，抗禦之宜，蓋出權計。以溫嶠明達，事由一己，猶覺其弊，論之備悉。今江右區區，戶不盈數十萬，地不踰數千里，而統司鱗次，未獲減息，大而言之，足爲國恥。況乃地在無軍，而軍府猶置，文武將佐，資費非一，豈所謂經國大情，揚湯去火者哉。其州郡邊江，民戶遼落，加以郵亭嶮闊，畏阻風波，轉輸往還，常有淹廢，又非所謂因其所利，以濟其弊者也。愚謂宜解軍府，移治豫章，處十郡之中，厲簡惠之政，比及數年，可有生氣。且屬縣凋散，亦有所存，而役調送迎，不得休止，亦謂應隨宜并減，以簡眾費。刺史庾悅，自臨州部，甚有恤民之誠，但綱維不革，自非綱目所理。尋陽接蠻，宜有防遏，可即州府千兵，以助郡戍。」於是解悅都督、將軍官，以刺史移鎮豫章。毅以親將趙恢領千兵守尋陽，建威府文武三千悉入毅府，符攝嚴峻，數相挫辱。悅不得志，疽發背，到豫章少日卒。時年三十八。追贈征虜將軍。以廣固之功，追封新陽縣五等男。
+初，毅家在京口，貧約過常，嘗與鄉曲士大夫往東堂共射。時悅爲司徒右長史，暫至京，要府州僚佐共出東堂。毅已先至，遣與悅相聞，曰：「身久躓頓，營一遊集甚難。君如意人，無處不可爲適，豈能以此堂見讓。」悅素豪，徑前，不答毅語。眾人並避之，唯毅留射如故。悅廚饌甚盛，不以及毅。毅既不去，悅甚不歡，俄頃亦退。<span class="jiaozhusup">「亦」三朝本作「亦」，北監本、毛本、殿本、局本作「不」。按此處言俄頃庾悅等宴畢，亦將散退，故下文又敘劉毅求庾悅以子鵝殘炙見惠事。</span>毅又相聞曰：「身今年未得子鵝，豈能以殘炙見惠。」悅又不答。盧循平後，毅求都督江州，以江州內地，治民爲職，不宜置軍府，上表陳之曰：「臣聞天以盈虛爲道，治以損益爲義。時否而政不革，民凋而事不損，則無以救急病於已危，拯塗炭於將絕。自頃戎車屢駕，干戈溢境，江州以一隅之地，當逆順之衝，力弱民慢，而器運所繼。自桓玄以來，驅蹙殘毀，至乃男不被養，女無對匹，逃亡去就，不避幽深，自非財單力竭，無以至此。若不曲心矜理，有所改移，則靡遺之歎，奄焉必及。臣謬荷增統，傷慨兼懷。夫設官分職，軍國殊用，牧民以息務爲大，武略以濟事爲先。今兼而領之，蓋出於權事，因藉既久，遂爲常則。江州在腹心之中，憑接揚、豫，藩屏所倚，實爲重複。昔胡寇縱逸，朔馬臨江，抗禦之宜，蓋出權計。以溫嶠明達，事由一己，猶覺其弊，論之備悉。今江右區區，戶不盈數十萬，地不踰數千里，而統司鱗次，未獲減息，大而言之，足爲國恥。況乃地在無軍，而軍府猶置，文武將佐，資費非一，豈所謂經國大情，揚湯去火者哉。其州郡邊江，民戶遼落，加以郵亭嶮闊，畏阻風波，轉輸往還，常有淹廢，又非所謂因其所利，以濟其弊者也。愚謂宜解軍府，移治豫章，處十郡之中，厲簡惠之政，比及數年，可有生氣。且屬縣凋散，亦有所存，而役調送迎，不得休止，亦謂應隨宜并減，以簡眾費。刺史庾悅，自臨州部，甚有恤民之誠，但綱維不革，自非綱目所理。尋陽接蠻，宜有防遏，可即州府千兵，以助郡戍。」於是解悅都督、將軍官，以刺史移鎮豫章。毅以親將趙恢領千兵守尋陽，建威府文武三千悉入毅府，符攝嚴峻，數相挫辱。悅不得志，疽發背，到豫章少日卒。時年三十八。追贈征虜將軍。以廣固之功，追封新陽縣五等男。
 </p>
 <p class="em2" id="p4"><a class="gg-link" href="#p4" onclick="return changeColor(this);"></a>
 王誕字茂世，琅邪臨沂人，太保弘從兄也。祖恬，中軍將軍。父混，太常。
@@ -35,7 +35,7 @@
 謝景仁，陳郡陽夏人，衛將軍晦從叔父也。名與高祖同諱，故稱字。祖據，太傅安第二弟。父允，宣城內史。
 </p>
 <p class="em2" id="p10"><a class="gg-link" href="#p10" onclick="return changeColor(this);"></a>
-景仁幼時與安相及，爲安所知。始爲前軍行參軍、輔國參軍事。會稽王世子元顯嬖人張法順，權傾一時，內外無不造門者，唯景仁不至。年三十，方爲著作佐郎。桓玄誅元顯，見景仁，甚知之，謂四坐曰：「司馬庶人父子云何不敗，遂令謝景仁三十方作著作佐郎。<span class="jiaozhusup">兩「佐」字，各本並脫，據御覽二三四著作佐郎條引補。</span>」玄爲太尉，以補行參軍，府轉大將軍，仍參軍事。玄建楚臺，以補黃門侍郎。及篡位，領驍騎將軍。景仁博聞強識，善敘前言往行，玄每與之言，不倦也。玄出行，殷仲文、卞範之之徒，皆騎馬散從，而使景仁陪輦。
+景仁幼時與安相及，爲安所知。始爲前軍行參軍、輔國參軍事。會稽王世子元顯嬖人張法順，權傾一時，內外無不造門者，唯景仁不至。年三十，方爲著作佐郎。桓玄誅元顯，見景仁，甚知之，謂四坐曰：「司馬庶人父子云何不敗，遂令謝景仁三十方作著作佐郎。」<span class="jiaozhusup">兩「佐」字，各本並脫，據御覽二三四著作佐郎條引補。</span>玄爲太尉，以補行參軍，府轉大將軍，仍參軍事。玄建楚臺，以補黃門侍郎。及篡位，領驍騎將軍。景仁博聞強識，善敘前言往行，玄每與之言，不倦也。玄出行，殷仲文、卞範之之徒，皆騎馬散從，而使景仁陪輦。
 </p>
 <p class="em2" id="p11"><a class="gg-link" href="#p11" onclick="return changeColor(this);"></a>
 高祖爲桓脩撫軍中兵參軍，嘗詣景仁諮事，景仁與語悅之，因留高祖共食。食未辦，而景仁爲玄所召。玄性促急，俄頃之間，騎詔續至。高祖屢求去，景仁不許，曰：「主上見待，要應有方。我欲與客共食，豈當不得待。」竟安坐飽食，然後應召。高祖甚感之，常謂景仁是太傅安孫。及平京邑，入鎮石頭，景仁與百僚同見高祖，高祖目之曰：「此名公孫也。」謂景仁曰：「承制府須記室參軍，今當相屈。」以爲大將軍武陵王遵記室參軍，仍爲從事中郎，遷司徒左長史。出爲高祖鎮軍司馬，領晉陵太守，復爲車騎司馬。
