--- a/OEBPS/Text/1347.html
+++ b/OEBPS/Text/1347.html
@@ -11,7 +11,7 @@
 孝祖少誕節，好酒色，有氣幹。太祖元嘉末，爲奉朝請，員外散騎侍郎。世祖以其有武用，除奮武將軍、濟北太守。入爲積射將軍。大明初，索虜寇青州，上遣孝祖北援，受刺史顏師伯節度，累與虜戰，頻大破之，事在師伯傳。還授太子旅賁中郎將，加龍驤將軍。竟陵王誕據廣陵爲逆，孝祖隸沈慶之攻誕，又有戰功，遷西陽王子尚撫軍、寧朔將軍、南濟陰太守。<span class="jiaozhusup">錢大昕廿二史考異云：「撫軍下當有脫文。是時子尚以撫軍將軍都督南徐、兗二州，南濟陰即南徐州屬郡。孝祖蓋爲撫軍府僚佐，而帶南濟陰太守。」</span>出爲盱眙太守，將軍如故。還爲虎賁中郎將，仍除寧朔將軍、陽平東平二郡太守。又遷濟南、南郡，將軍如故。
 </p>
 <p class="em2" id="p2"><a class="gg-link" href="#p2" onclick="return changeColor(this);"></a>
-前廢帝景和元年，以本號督兗州諸軍事、兗州刺史。太宗初即位，四方反叛，孝祖外甥司徒參軍潁川葛僧韶建議銜命徵孝祖入朝<span class="jiaozhusup">「葛僧韶」元龜三七一同。南史作「荀僧韶」。按荀氏潁川大族，疑南史作「荀」是。</span>，上遣之。時徐州刺史薛安都遣薛索兒等屯據津逕，僧韶間行得至，說孝祖曰：「景和凶狂，開闢未有，朝野危極，假命漏刻。主上聖德天挺，神武在躬，曾不浹辰，夷凶翦暴，更造天地，未足爲言。國亂朝危，宜立長主，公卿百辟，人無異議，泰平之隆，非旦則夕。而群小相煽，構造無端，貪利幼弱，競懷希望。使天道助逆，群凶事申，則主幼時艱，權柄不一，兵難互起，豈有自容之地。舅少有立功之志，長以氣節成名，若便能控濟、河義勇，<span class="jiaozhusup">各本並脫「河」字，據南史補。濟，濟水；河，黃河。</span>還奉朝廷，非唯匡主靜亂，乃可以垂名竹帛。」孝祖具問朝廷消息，僧韶隨方酬譬，并陳兵甲精強，主上欲委以前驅之任。孝祖即日棄妻子，率文武二千人隨僧韶還都。
+前廢帝景和元年，以本號督兗州諸軍事、兗州刺史。太宗初即位，四方反叛，孝祖外甥司徒參軍潁川葛僧韶建議銜命徵孝祖入朝，<span class="jiaozhusup">「葛僧韶」元龜三七一同。南史作「荀僧韶」。按荀氏潁川大族，疑南史作「荀」是。</span>上遣之。時徐州刺史薛安都遣薛索兒等屯據津逕，僧韶間行得至，說孝祖曰：「景和凶狂，開闢未有，朝野危極，假命漏刻。主上聖德天挺，神武在躬，曾不浹辰，夷凶翦暴，更造天地，未足爲言。國亂朝危，宜立長主，公卿百辟，人無異議，泰平之隆，非旦則夕。而群小相煽，構造無端，貪利幼弱，競懷希望。使天道助逆，群凶事申，則主幼時艱，權柄不一，兵難互起，豈有自容之地。舅少有立功之志，長以氣節成名，若便能控濟、河義勇，<span class="jiaozhusup">各本並脫「河」字，據南史補。濟，濟水；河，黃河。</span>還奉朝廷，非唯匡主靜亂，乃可以垂名竹帛。」孝祖具問朝廷消息，僧韶隨方酬譬，并陳兵甲精強，主上欲委以前驅之任。孝祖即日棄妻子，率文武二千人隨僧韶還都。
 </p>
 <p class="em2" id="p3"><a class="gg-link" href="#p3" onclick="return changeColor(this);"></a>
 時普天同逆，朝廷唯保丹陽一郡，而永世縣尋又反叛，義興賊垂至延陵，內外憂危，咸欲奔散。孝祖忽至，眾力不少，並傖楚壯士，人情於是大安。進孝祖號冠軍，假節、督前鋒諸軍事，遣向虎檻，拒對南賊。御仗先有諸葛亮筩袖鎧帽，二十五石弩射之不能入，上悉以賜孝祖。
