--- a/OEBPS/Text/1352.html
+++ b/OEBPS/Text/1352.html
@@ -11,7 +11,7 @@
 龔穎，遂寧人也。少好學，益州刺史毛璩辟爲勸學從事。璩爲譙縱所殺，故佐吏並逃亡，穎號哭奔赴，殯送以禮。縱後設宴延穎，不獲已而至，樂奏，穎流涕起曰：「北面事人，亡不能死，何忍舉觴聞樂，<span class="jiaozhusup">各本並作「何忍聞舉樂」，據南史、御覽四二一引宋書訂正。</span>蹈跡逆亂乎。」縱大將譙道福引出，將斬之。道福母即穎姑，跣出救之，故得免。縱既僭號，備禮徵，又不至，乃收穎付獄，脅以兵刃，執志彌堅，終無回改，至于蜀平，遂不屈節。
 </p>
 <p class="em2" id="p2"><a class="gg-link" href="#p2" onclick="return changeColor(this);"></a>
-其後刺史至，輒加辟引，歷府參軍，州別駕從事史。太祖元嘉二十四年，刺史陸徽上表曰：<span class="jiaozhusup">「陸徽」各本並作「陸徵」，據南史改。按陸徽見良吏傳，元嘉二十三年爲益州刺史，二十九年卒官。</span>「臣聞運纏明夷，則艱貞之節顯；時屬棟撓，則獨立之操彰。昔之元興，皇綱弛紊，譙縱乘釁，肆虐巴、庸，害殺前益州刺史毛璩，竊據蜀土，涪、岷士庶，怵迫受職。璩故吏龔穎，獨秉身貞白，抗志不撓，殯送舊君，哀敬盡禮，全操九載，不染僞朝。縱雖殘凶，猶重義概，遂延以旌命，劫以兵威，穎忠誠奮發，辭色方壯，雖桎梏在身，踐危愈信其節，白刃臨頸，見死不更其守。若王蠋之抗辭燕軍，同周苛之肆詈楚王，方之於穎，蔑以加焉。誠當今之忠壯，振古之遺烈。而名未登於王府，爵猶齒於鄉曹<span class="jiaozhusup">「鄉曹」各本並作「卿曹」，據元龜六八八改。按龔穎歷府參軍，州別駕從事史，故稱鄉曹。穎官不至九卿，不得稱卿曹。</span>，斯實邊氓遠土，所爲於邑。臣過叨恩私，宣風萬里，志存砥竭，有懷必聞，故率愚愨，舉其所知。追懼紕妄，伏增悚栗。」穎遂不被朝命，終於家。
+其後刺史至，輒加辟引，歷府參軍，州別駕從事史。太祖元嘉二十四年，刺史陸徽上表曰：「<span class="jiaozhusup">「陸徽」各本並作「陸徵」，據南史改。按陸徽見良吏傳，元嘉二十三年爲益州刺史，二十九年卒官。</span>臣聞運纏明夷，則艱貞之節顯；時屬棟撓，則獨立之操彰。昔之元興，皇綱弛紊，譙縱乘釁，肆虐巴、庸，害殺前益州刺史毛璩，竊據蜀土，涪、岷士庶，怵迫受職。璩故吏龔穎，獨秉身貞白，抗志不撓，殯送舊君，哀敬盡禮，全操九載，不染僞朝。縱雖殘凶，猶重義概，遂延以旌命，劫以兵威，穎忠誠奮發，辭色方壯，雖桎梏在身，踐危愈信其節，白刃臨頸，見死不更其守。若王蠋之抗辭燕軍，同周苛之肆詈楚王，方之於穎，蔑以加焉。誠當今之忠壯，振古之遺烈。而名未登於王府，爵猶齒於鄉曹，<span class="jiaozhusup">「鄉曹」各本並作「卿曹」，據元龜六八八改。按龔穎歷府參軍，州別駕從事史，故稱鄉曹。穎官不至九卿，不得稱卿曹。</span>斯實邊氓遠土，所爲於邑。臣過叨恩私，宣風萬里，志存砥竭，有懷必聞，故率愚愨，舉其所知。追懼紕妄，伏增悚栗。」穎遂不被朝命，終於家。
 </p>
 <p class="em2" id="p3"><a class="gg-link" href="#p3" onclick="return changeColor(this);"></a>
 劉瑜，歷陽人也。七歲喪父，事母至孝。年五十二，又喪母，三年不進鹽酪，號泣晝夜不絕聲。勤身運力，以營葬事。服除後，二十餘年布衣蔬食，言輒流涕。常居墓側，未嘗暫違。太祖元嘉初卒。
